Add index on chapters 13-24 of nutrition

--- a/nutrition.tex
+++ b/nutrition.tex
@@ -80,10 +80,12 @@
 \include{willpower/chapter4}
 
 
+\clearpage
 \makeatletter
 \addtocontents{toc}{\protect\setlength{\cftbeforechapterskip}{10pt \@plus\p@}}
 \makeatother
 \addcontentsline{toc}{chapter}{Прадметны паказальнік}
+\markboth{\MakeUppercase{Прадметны}}{\MakeUppercase{паказальнік}}
 \printindex
 
 \end{document}
