--- a/nutrition/chapter1.tex
+++ b/nutrition/chapter1.tex
@@ -44,7 +44,7 @@
 
 \paragraph{Толькі вада.}
 
-Падчас пустых інтэрвалаў дапушчальна піць толькі негазаваную ваду. У~рэдкіх выключэньнях~--- некалярыйныя напоі без кафеіну\index{кафеін}, зёлкі, гарбату каркадэ, газаваную ваду, але лепш абысьціся бязь іх. Гарбату й~каву варта піць безь вяршкоў, цукру, цукразаменьнікаў і, вядома ж, дэсэрту. Пажадана абысьціся й~бяз жуйкі.
+Падчас пустых інтэрвалаў дапушчальна піць толькі негазаваную ваду. У~рэдкіх выключэньнях~--- некалярыйныя напоі без кафэіну\index{кафэін}, зёлкі, гарбату каркадэ, газаваную ваду, але лепш абысьціся бязь іх. Гарбату й~каву варта піць безь вяршкоў, цукру, цукразаменьнікаў і, вядома ж, дэсэрту. Пажадана абысьціся й~бяз жуйкі.
 
 \subsection{Як трымацца правіла? Ідэі ды парады}
 
