--- a/nutrition/chapter12.tex
+++ b/nutrition/chapter12.tex
@@ -31,7 +31,7 @@
 
 \subsection{Як гэта ўплывае на здароўе?}
 
-Сымптомы мэтабалічнай жорсткасьці разнастайныя: вы санлівыя пасьля прыёму вугляводаў, вам цяжка трываць прамежкі больш за 4--5 гадзінаў бязь ежы, вам хочацца перакусваць для падтрымкі самаадчуваньня, падчас посту вы страчваеце цягліцы, а~ня тлушч, вам цяжка функцыянаваць без кафеіну (нізкі ўзровень энэргіі). Мэтабалічная жорсткасьць прыводзіць да таго, што, калі ў~вас зьніжаецца ўзровень глюкозы ў~крыві, вы адразу адчуваеце стомленасьць і слабасьць, расшчапленьне тлушчаў не ўключаецца. Людзі з~мэтабалічнай жорсткасьцю ў~стане спакою атрымліваюць нашмат менш энэргіі з~тлушчаў.
+Сымптомы мэтабалічнай жорсткасьці разнастайныя: вы санлівыя пасьля прыёму вугляводаў, вам цяжка трываць прамежкі больш за 4--5 гадзінаў бязь ежы, вам хочацца перакусваць для падтрымкі самаадчуваньня, падчас посту вы страчваеце цягліцы, а~ня тлушч, вам цяжка функцыянаваць без кафэіну (нізкі ўзровень энэргіі). Мэтабалічная жорсткасьць прыводзіць да таго, што, калі ў~вас зьніжаецца ўзровень глюкозы ў~крыві, вы адразу адчуваеце стомленасьць і слабасьць, расшчапленьне тлушчаў не ўключаецца. Людзі з~мэтабалічнай жорсткасьцю ў~стане спакою атрымліваюць нашмат менш энэргіі з~тлушчаў.
 
 Пры мэтабалічнай жорсткасьці ўзьнікаюць праблемы як з~тлушчамі, так і з~глюкозай (два бакі аднаго медаля~--- мэтабалізму). Праблемы з~глюкозай зьвязаныя з~тым, што клеткі ня могуць эфэктыўна паглынаць і спальваць глюкозу (інсулінарэзыстэнтнасьць\index{інсулінарэзыстэнтнасьць}), праблема з~тлушчам выяўляецца як парушэньні акісьленьня тлушчаў (мітахондрыі\index{мітахондрыі} цягліцаў) і павышэньне ўзроўню свабоднай тлустай кіслаты (ліпатаксічнасьць).
 
@@ -50,7 +50,7 @@
 Сон і спаленьне тлушчу шчыльна зьвязаныя між сабой. Увечары працэс тлушчаспаленьня ўзмацняецца, што дазваляе ўначы нам не прачынацца, каб паесьці. Узровень глюкозы падае, гэта прыводзіць да павелічэньня выкіду гармону росту і гармонаў шчытавіцы, што таксама спрыяе тлушчаспаленьню. І~ўсе гэтыя працэсы спрыяюць глыбокаму аднаўленчаму сну. Калі спаленьне тлушчу парушана, то сон становіцца менш глыбокім, гэта выклікае частыя абуджэньні і фрагмэнтацыю сну.
 
 \paragraph{Стабільны настрой.}
-Насуперак мітам, нашаму мозгу не патрабуецца сталае падсілкоўваньне глюкозай. Наадварот, яна можа прывесьці да ваганьня ўзроўню цукру, што нэгатыўна ўплывае на нашыя разумовыя здольнасьці, вядзе да раздражняльнасьці і агрэсіўнасьці. Нават калі прыкметна абмежаваць колькасьць вугляводаў, усё роўна мозгу хопіць глюкозы, ён атрымае яе з~глікагену\index{глікаген} печані. Лішак вугляводаў і нізкая адчувальнасьць да інсуліну\index{інсулін} павялічваюць рызыку хваробы Альцгеймэра\index{хвароба!Альцгеймэра}, якую навукоўцы называюць дыябэтам мозгу.
+Насуперак мітам, нашаму мозгу не патрабуецца сталае падсілкоўваньне глюкозай. Наадварот, яна можа прывесьці да ваганьня ўзроўню цукру, што нэгатыўна ўплывае на нашыя разумовыя здольнасьці, вядзе да раздражняльнасьці і агрэсіўнасьці. Нават калі прыкметна абмежаваць колькасьць вугляводаў, усё роўна мозгу хопіць глюкозы, ён атрымае яе з~глікагену\index{глікаген} печані. Лішак вугляводаў і нізкая адчувальнасьць да інсуліну\index{інсулін} павялічваюць рызыку хваробы Альцгаймэра\index{хвароба!Альцгаймэра}, якую навукоўцы называюць дыябэтам мозгу.
 
 \subsection{Асноўныя прынцыпы}
 
@@ -83,7 +83,7 @@
 Для аптымальнага здароўя нам трэба больш карысных вострых стрэсаў, зьніжэньне ўзроўню хранічнага стрэсу і дастатковае аднаўленьне (рэляксацыя, адпачынак, сон). Востры карысны стрэс можа паляпшаць тлушчаспаленьне за кошт адрэналіну і сымпацыйнай вэгетатыўнай сыстэмы, а~вось хранічны стрэс стымулюе адклад тлушчу і зьніжэньне адчувальнасьці да інсуліну\index{інсулін} празь дзеяньне картызолу\index{картызол}. Пры хранічным стрэсе і няўпэўненасьці ў~будучыні чалавек схільны зьядаць больш «у запас». Тэорыя «харчовай няўпэўненасьці» сьцьвярджае, што менавіта стрэс і сацыяльны статус уплываюць на ўзровень апэтыту. Пры высокім стрэсе ня раю выкарыстоўваць сур'ёзныя забароны і выяўныя абмежаваньні, высокаінтэнсіўныя трэніроўкі, бо яны могуць яшчэ больш павысіць агульны ўзровень стрэсу і прывесьці да зрыву. Для фастынгу лепей выбіраць найменш стрэсавыя дні.
 
 \paragraph{Сьвятло і мэтабалічная гнуткасьць.}
-Сьвятло аказвае наўпроставае ўзьдзеяньне на галоўны цэнтар кіраваньня цыркаднымі рытмамі\index{цыркадныя рытмы} ў~мозгу~--- супрахіязматычнае ядро\index{супрахіязматычнае ядро} гіпаталамусу\index{гіпаталамус}. Ёсьць 4 асноўныя правілы нармалізацыі сьветлавога рэжыму, зьвязаныя з~часам дня. Такім чынам, ранішняе сьвятло~--- вельмі важнае, нават паўгадзіны яркага сьвятла дапамогуць узбадзёрыцца, павысіць адчувальнасьць да інсуліну\index{інсулін}, палепшыць сон. Найлепшае сьвятло~--- сонечнае з~ультрафіялетам. Калі раніцай у~вас сьвятла мала~--- тае бяды: можна выкарыстоўваць прылады для фотатэрапіі, пажадана з~добрым спэктрам і яркасьцю ня менш за 10 000 люкс.
+Сьвятло аказвае наўпроставае ўзьдзеяньне на галоўны цэнтар кіраваньня цыркаднымі рытмамі\index{цыркадныя рытмы} ў~мозгу~--- супрахіязматычнае ядро\index{супрахіязматычнае ядро} гіпаталямусу\index{гіпаталямус}. Ёсьць 4 асноўныя правілы нармалізацыі сьветлавога рэжыму, зьвязаныя з~часам дня. Такім чынам, ранішняе сьвятло~--- вельмі важнае, нават паўгадзіны яркага сьвятла дапамогуць узбадзёрыцца, павысіць адчувальнасьць да інсуліну\index{інсулін}, палепшыць сон. Найлепшае сьвятло~--- сонечнае з~ультрафіялетам. Калі раніцай у~вас сьвятла мала~--- тае бяды: можна выкарыстоўваць прылады для фотатэрапіі, пажадана з~добрым спэктрам і яркасьцю ня менш за 10 000 люкс.
 
 Днём таксама важна бываць на вуліцы з~розных прычын: чым болей дзённага сьвятла, тым вышэйшы ўзровень сэратаніну\index{сэратанін}, а~значыць, і самаадчуваньня, яркае сьвятло прытупляе апэтыт, сонечнае сьвятло спрыяе назапашваньню вітаміну Д. Аднак улетку і ў~гарачых краінах неабходна датрымлівацца і фотаабароны для прадухіленьня пашкоджаньня скуры. Увечары варта спыніцца на няяркім расьсеяным жаўтлявым сьвятле, ідэальна ад лямпаў напальваньня. Сьвятлодыёдныя крыніцы (смартфоны, тэлевізары, лямпы) варта абмежаваць. Як варыянт~--- можна выкарыстоўваць e-ink-рыдары для чытаньня электронных кніг або акуляры, якія блякуюць сінюю частку спэктру. Уначы~--- поўная цемра без кампрамісаў. Яна можа быць дасягнутая маскай для сну, шчыльнымі шторамі, заклейваньнем усіх магчымых індыкатараў і сьвятлодыёдаў.
 
@@ -109,7 +109,7 @@
 Ёсьць прадукты, якія спрыяюць большаму тлушчаспаленьню на холадзе і актывуюць буры тлушч. Да іх можна аднесьці аліўкавы алей, каратыноіды (морква, таматы), амэга-3 тлустыя кіслоты, чырвоны перац, чорны перац, гарчыцу, хрэн, часнык, гваздзік, імберац. Дадавайце больш гэтых прадуктаў і спэцыяў для бясьпечнага гартаваньня.
 
 \paragraph{Тэмпэратура цела.}
-Днём карысная высокая тэмпэратура (у межах нормы), яна выдатна стымулюе і павялічвае працаздольнасьць. Таму прысяданьні ўзбадзёраць вас ня горш за кафеін. Калі вы мерзьнеце ці кепска трываеце сьпякоту, варта праверыць працу шчытавіцы, а~таксама дэфіцыт амэга-3 тлустых кіслотаў.
+Днём карысная высокая тэмпэратура (у межах нормы), яна выдатна стымулюе і павялічвае працаздольнасьць. Таму прысяданьні ўзбадзёраць вас ня горш за кафэін. Калі вы мерзьнеце ці кепска трываеце сьпякоту, варта праверыць працу шчытавіцы, а~таксама дэфіцыт амэга-3 тлустых кіслотаў.
 
 \paragraph{Радасьць і тлушчаспаленьне.}
 Пазытыўныя эмоцыі, задавальненьне павялічваюць узровень дафаміну\index{дафамін} і паляпшаюць адчувальнасьць да інсуліну\index{інсулін}. Проста так адмовіцца ад задавальненьняў высокакалярыйнай ежы цяжка, таму знайдзіце сабе як мага болей іншых крыніц задавальненьня і радасьці! Новае хобі, натхняльныя пляны, прыемныя знаёмствы дапамогуць зьнізіць апэтыт.
