--- a/nutrition/chapter15.tex
+++ b/nutrition/chapter15.tex
@@ -1,6 +1,6 @@
 \chapter{Разнастайнасьць харчаваньня}
 
-Штодзённы рацыён павінен утрымліваць прадукты з~розных групаў, каб падтрымаць дастатковы ўзровень разнастайнасьці. Не існуе фіксаванага рацыёну, які б цалкам пакрываў патрэбу арганізму ў~неабходных кампанэнтах: чым большая разнастайнасьць, тым большы спэктар атрыманых рэчываў. У~большасьці дапаможнікаў па здаровым харчаваньні адзначаецца, што аднастайнасьць харчаваньня~--- гэта шкодная звычка, здаровая ежа павінна быць разнастайнай. Правіла разнастайнасьці таксама закранае здароўе кішачнай мікрафлёры, якое зьніжаецца пры памяншэньні колькасьці прабіётыкаў і прэбіётыкаў, павелічэньні ўжываньня антыбіётыкаў і антысэптыкаў.
+Штодзённы рацыён павінен утрымліваць прадукты з~розных групаў, каб падтрымаць дастатковы ўзровень разнастайнасьці. Не існуе фіксаванага рацыёну, які б цалкам пакрываў патрэбу арганізму ў~неабходных кампанэнтах: чым большая разнастайнасьць, тым большы спэктар атрыманых рэчываў. У~большасьці дапаможнікаў па здаровым харчаваньні адзначаецца, што аднастайнасьць харчаваньня~--- гэта шкодная звычка, здаровая ежа павінна быць разнастайнай. Правіла разнастайнасьці таксама закранае здароўе кішачнай мікрафлёры, якое зьніжаецца пры памяншэньні колькасьці прабіётыкаў\index{прабіётыкі} і прэбіётыкаў\index{прэбіётыкі}, павелічэньні ўжываньня антыбіётыкаў і антысэптыкаў.
 
 Многія людзі лічаць «здаровым» харчаваньнем грэчку з~курынай грудкай пяць разоў на дзень сем дзён на тыдзень або абмяжоўваюць спэктар прадуктаў, зводзячы свой рацыён да некалькіх «правільных» прадуктаў. Вядома, такая бедната можа прытупіць апэтыт, ды ўсё ж ані ня можа быць карыснай. Няма ідэальнага прадукту, які закрые ўсе нашыя патрэбы, таму важна камбінаваць самыя розныя пазіцыі для эфэктыўнага задавальненьня нашых запытаў!
 
@@ -21,7 +21,7 @@
 Дасьледчыкі ўвялі шэраг індэксаў разнастайнасьці дыеты, якія карэлююць з~паказчыкамі здароўя. Чым размаіцейшы рацыён, тым людзі жывуць даўжэй і менш хварэюць. Прынцып «есьці самы карысны прадукт» не працуе, дыета павінна зьмяшчаць якасныя і карысныя прадукты розных тыпаў, каб быць здаровай і збалянсаванай.
 
 \paragraph{Разнастайнасьць і забесьпячэньне.}
-Разнастайнасьць харчаваньня мусіць быць дастатковая, каб забясьпечыць арганізм неабходным узроўнем калёрыяў і незаменных нутрыентаў, а~таксама поўным наборам вітамінаў, мікраэлемэнтаў, макраэлемэнтаў і інш. Часам дэфіцыт зьвязаны зь нізкім утрыманьнем асобных элемэнтаў у~глебе (сэлен, ёд), часам~--- з~выкарыстаньнем абмежавальных дыетаў. Так, вэганства вядзе да дэфіцыту жалеза, цынку, вітаміну В12, вітаміну D і яшчэ шэрагу спалучэньняў. Шэраг дэфіцытных у~нашай дыеце спалучэньняў і спосабы іх папаўненьня пазначаныя ў~канцы гэтага разьдзелу.
+Разнастайнасьць харчаваньня мусіць быць дастатковая, каб забясьпечыць арганізм неабходным узроўнем калёрыяў і незаменных нутрыентаў, а~таксама поўным наборам вітамінаў, мікраэлемэнтаў, макраэлемэнтаў і інш. Часам дэфіцыт зьвязаны зь нізкім утрыманьнем асобных элемэнтаў у~глебе (сэлен\index{сэлен}, ёд), часам~--- з~выкарыстаньнем абмежавальных дыетаў. Так, вэганства вядзе да дэфіцыту жалеза, цынку, вітаміну В12, вітаміну D і яшчэ шэрагу спалучэньняў. Шэраг дэфіцытных у~нашай дыеце спалучэньняў і спосабы іх папаўненьня пазначаныя ў~канцы гэтага разьдзелу.
 
 \paragraph{Разнастайнасьць і задавальненьне.}
 Разнастайнасьць харчаваньня стымулюе апэтыт, павялічвае ўзровень задавальненьня і спрыяе таму, каб зьядаць больш. У~гэтым выпадку разнастайнасьць высокакалярыйных прадуктаў можа мець нэгатыўны ўплыў на здароўе і павялічваць пераяданьне. А~вось разнастайнасьць зеляніны, гарэхаў, гародніны таксама павялічвае колькасьць зьедзенага, і ў~такім выпадку гэта мае станоўчае значэньне.
@@ -29,13 +29,13 @@
 \paragraph{Разнастайнасьць і таксыны.}
 Многія прадукты ўтрымліваюць таксычныя рэчывы, якія ўключаюць антыбіётыкі, цяжкія мэталы і інш. Разнастайнае харчаваньне дазваляе паменшыць канцэнтрацыю кожнага з~магчымых таксынаў, што зьнізіць іх нэгатыўнае ўзьдзеяньне на арганізм (разьмеркаваньне шкоды).
 
-\tipbox{Чым разнастайнейшая мікрафлёра, тым лепшыя паказьнікі здароўя і меншая рызыка захворваньняў. Для падтрыманьня такой разнастайнасьці неабходныя прэбіётыкі (пэктыны, альгінаты, інулін і інш.), якія лепей атрымліваць з~цэльных расьлінных прадуктаў ці ўжываць асобна.}
+\tipbox{Чым разнастайнейшая мікрафлёра, тым лепшыя паказьнікі здароўя і меншая рызыка захворваньняў. Для падтрыманьня такой разнастайнасьці неабходныя прэбіётыкі\index{прэбіётыкі} (пэктыны\index{пэктын}, альгінаты, інулін\index{інулін} і інш.), якія лепей атрымліваць з~цэльных расьлінных прадуктаў ці ўжываць асобна.}
 
 \paragraph{Разнастайнасьць і мэтабалізм.}
 Дасьледаваньні пастанавілі, што разнастайнасьць рацыёну зьвязаная з~больш высокім утрыманьнем розных мікраэлемэнтаў. Разнастайнасьць харчаваньня станоўча ўплывае на стан здароўя і зьвязаная са зьніжэньнем узроўню запаленьня, лепшым ліпідным профілем і меншай рызыкай мэтабалічнага сындрому. Аднастайнае і беднае харчаваньне часта прыводзіць да дэфіцыту шматлікіх рэчываў у~арганізьме, якія істотна павялічваюць рызыку захворваньняў, а~таксама ўплываюць ня толькі на фізычны, але й~на разумовы стан. Так, дэфіцыт цынку, ёду і жалеза можа зьменшыць паказьнікі IQ у~дзяцей.
 
 \paragraph{Разнастайнасьць мікрафлёры.}
-Чым разнастайнейшая мікрафлёра, тым лепшыя паказьнікі здароўя і меншая рызыка захворваньняў. Бо крыніцай харчаваньня для нашай мікрафлёры зьяўляюцца розныя віды расьліннай ежы з~высокім утрыманьнем харчовых валокнаў. Таму зеляніна, ягады, гародніна і садавіна кормяць ня толькі нас, але й~нашы карысныя бактэрыі. Чым лепей мы кормім сваіх маленькіх сяброў, тым большая іх разнастайнасьць і тым лепей яны клапоцяцца пра нашае здароўе. Для падтрыманьня гэтай разнастайнасьці неабходныя прэбіётыкі (пэктыны, альгінаты, інулін і інш.), якія можна атрымліваць з~прадуктаў ці ўжываць асобна. Пры малой разнастайнасьці расьліннай ежы павялічваецца колькасьць бактэрыяў, якія падвышаюць рызыку атлусьценьня і запаленьняў. Разнастайнасьць нашай мікрафлёры на 30\,\% меншая, чым у~паляўнічых-зьбіральнікаў, пры гэтым норма клятчаткі сёньня 25 грамаў на суткі, сярэдні чалавек есьць 15--20, а~паляўнічы-зьбіральнік~--- да 100 грамаў! У~доўгажыхароў разнастайнасьць мікрафлёры нават вышэйшая, чым у~маладых людзей у~сярэднім!
+Чым разнастайнейшая мікрафлёра, тым лепшыя паказьнікі здароўя і меншая рызыка захворваньняў. Бо крыніцай харчаваньня для нашай мікрафлёры зьяўляюцца розныя віды расьліннай ежы з~высокім утрыманьнем харчовых валокнаў. Таму зеляніна, ягады, гародніна і садавіна кормяць ня толькі нас, але й~нашы карысныя бактэрыі. Чым лепей мы кормім сваіх маленькіх сяброў, тым большая іх разнастайнасьць і тым лепей яны клапоцяцца пра нашае здароўе. Для падтрыманьня гэтай разнастайнасьці неабходныя прэбіётыкі\index{прэбіётыкі} (пэктыны\index{пэктын}, альгінаты, інулін\index{інулін} і інш.), якія можна атрымліваць з~прадуктаў ці ўжываць асобна. Пры малой разнастайнасьці расьліннай ежы павялічваецца колькасьць бактэрыяў, якія падвышаюць рызыку атлусьценьня і запаленьняў. Разнастайнасьць нашай мікрафлёры на 30\,\% меншая, чым у~паляўнічых-зьбіральнікаў, пры гэтым норма клятчаткі сёньня 25 грамаў на суткі, сярэдні чалавек есьць 15--20, а~паляўнічы-зьбіральнік~--- да 100 грамаў! У~доўгажыхароў разнастайнасьць мікрафлёры нават вышэйшая, чым у~маладых людзей у~сярэднім!
 
 \subsection{Асноўныя прынцыпы}
 
@@ -75,13 +75,13 @@
 Прыміце выклік~--- розныя стравы кожны дзень! Гэта запатрабуе ад вас большай напругі, чым здаецца на першы погляд!
 
 \paragraph{Рознакаляровая дыета.}
-Выбіраючы гародніну, карыстайцеся прынцыпам рознакаляровай дыеты. Кожны колер зьвязаны з~пэўным відам антыаксыданту. Адзінага ўнівэрсальнага антыаксыданту няма, таму камбінацыя розных відаў найболей эфэктыўная і карысная для здароўя.
+Выбіраючы гародніну, карыстайцеся прынцыпам рознакаляровай дыеты. Кожны колер зьвязаны з~пэўным відам антыаксыданту\index{антыаксыданты}. Адзінага ўнівэрсальнага антыаксыданту\index{антыаксыданты} няма, таму камбінацыя розных відаў найболей эфэктыўная і карысная для здароўя.
 
 \paragraph{Больш актыўна ўжывайце фэрмэнтаваныя прадукты.}
-Фэрмэнтацыя ўзбагачае прадукты рознымі вітамінамі, прэбіётыкамі і прабіётыкі. Ёсьць шмат розных відаў фэрмэнтаваных прадуктаў: міса, чайны грыб (камбуча), квас, квашаная капуста, тэмпэ, кефір, ёгурт і інш. Квасіць можна розную гародніну, а~купляючы гатовыя прадукты, пераканайцеся, што там няма цукру і лішніх дабавак.
+Фэрмэнтацыя ўзбагачае прадукты рознымі вітамінамі, прэбіётыкамі\index{прэбіётыкі} і прабіётыкі\index{прабіётыкі}. Ёсьць шмат розных відаў фэрмэнтаваных прадуктаў: міса, чайны грыб (камбуча), квас, квашаная капуста, тэмпэ, кефір, ёгурт і інш. Квасіць можна розную гародніну, а~купляючы гатовыя прадукты, пераканайцеся, што там няма цукру і лішніх дабавак.
 
-\paragraph{Дадаткі прабіётыкі.}
-Існуюць розныя штамы прабіётыкаў, але найбольшы эфэкт назіраўся ад мультыпрабіётыкаў, якія зьмяшчаюць некалькі розных відаў у~вялікшых канцэнтрацыях. З~асобных штамаў вартыя ўвагі Lactobacillus reuteri, Saccharomyces boulardii, Streptococcus salivarius (для ротавай поласьці) і іншыя.
+\paragraph{Дадаткі прабіётыкі\index{прабіётыкі}.}
+Існуюць розныя штамы прабіётыкаў\index{прабіётыкі}, але найбольшы эфэкт назіраўся ад мультыпрабіётыкаў, якія зьмяшчаюць некалькі розных відаў у~вялікшых канцэнтрацыях. З~асобных штамаў вартыя ўвагі Lactobacillus reuteri, Saccharomyces boulardii, Streptococcus salivarius (для ротавай поласьці) і іншыя.
 
 \paragraph{Разнастайнасьць жывёльных прадуктаў.}
 Ежце ня толькі мяса, але й~іншыя часткі жывёлаў: косткі (для булёнаў), сэрца, печань і іншыя субпрадукты. Яны таксама ўтрымліваюць шмат карысных рэчываў, іх асабліва шмат, калі гаворка ідзе пра парнакапытных.
