--- a/nutrition/chapter17.tex
+++ b/nutrition/chapter17.tex
@@ -4,7 +4,7 @@
 
 \tipbox{Мэханічная апрацоўка, тэмпэратура гатоўлі, спалучэньне прадуктаў~--- усё мае значэньне. З~аднаго прадукту можна прыгатаваць як адназначна карысную, так і досыць шкодную страву.}
 
-У працэсе гатаваньня нутрыенты ўступаюць у~розныя ўзаемадзеяньні паміж сабой, асаблівае значэньне грае нефэрмэнтатыўная рэакцыя між цукрамі і амінакіслотамі (глікаваньне), у~выніку гэтай рэакцыі ўтвараюцца так званыя «канчатковыя прадукты глікацыі (КПГ)», якія называюцца AGE («узрост», удалая абрэвіятура Advanced Glycosylation End-products). Калі мы ямо смажаныя прадукты, КПГ трапляюць да нас зь ежай. Чым больш вы зьядаеце КПГ зь ежай, тым вышэйшы іх узровень у~крыві. Акрамя гэтага, яны могуць утварацца непасрэдна і ў~нашым целе, калі парушаецца кантроль узроўню глюкозы і яна падвышаецца. Утварэньне ўласных прадуктаў глікаваньня залежыць ад адчувальнасьці да інсуліну і глікемічнай нагрузкі дыеты. Але зараз размова пойдзе пра першы мэханізм.
+У працэсе гатаваньня нутрыенты ўступаюць у~розныя ўзаемадзеяньні паміж сабой, асаблівае значэньне грае нефэрмэнтатыўная рэакцыя між цукрамі і амінакіслотамі (глікаваньне\index{глікаваньне}), у~выніку гэтай рэакцыі ўтвараюцца так званыя «канчатковыя прадукты глікацыі (КПГ)», якія называюцца AGE («узрост», удалая абрэвіятура Advanced Glycosylation End-products). Калі мы ямо смажаныя прадукты, КПГ трапляюць да нас зь ежай. Чым больш вы зьядаеце КПГ зь ежай, тым вышэйшы іх узровень у~крыві. Акрамя гэтага, яны могуць утварацца непасрэдна і ў~нашым целе, калі парушаецца кантроль узроўню глюкозы і яна падвышаецца. Утварэньне ўласных прадуктаў глікаваньня\index{глікаваньне} залежыць ад адчувальнасьці да інсуліну і глікемічнай нагрузкі дыеты. Але зараз размова пойдзе пра першы мэханізм.
 
 Часам людзі купляюць добрыя прадукты, але гатуюць зь іх нешта ня вельмі здаровае. З~садавіны выціскаюць сок, рыбу засмажваюць да стану вугольля, запякаюць гародніну і садавіну так, што яны становяцца як цукеркі. Давайце разьбяромся, як гатаваць больш ашчадным спосабам для захаваньня карысьці прадуктаў і без утварэньня шкодных злучэньняў падчас гатоўлі.
 
@@ -18,16 +18,16 @@
 
 \subsection{Як гэта ўплывае на здароўе?}
 
-Існуе мноства злучэньняў, якія ўтвараюцца пры гатоўлі і валодаюць патэнцыйна нэгатыўным уздзеяньнем на здароўе. Гэта акрыламід, мэтылгліяксаль, акралеін (пры смажаньні на алеі), гетэрацыклічныя аміны, бэзапірны і шэраг іншых злучэньняў. Глікацыя доўгажывучых бялкоў, міжклеткавага матрыксу, ДНК, мітахандрыяльных бялкоў~--- гэта важны паталягічны працэс, які цяпер павярнуць назад практычна немагчыма. Чым больш вы зьядаеце КПГ зь ежай, тым вышэйшы іх узровень у~крыві. Лішак КПГ павялічвае рызыку атэрасклерозу, сардэчна-сасудзістых захворваньняў, ныркавай недастатковасьці, а~таксама шэрагу аўтаімунных захворваньняў.
+Існуе мноства злучэньняў, якія ўтвараюцца пры гатоўлі і валодаюць патэнцыйна нэгатыўным уздзеяньнем на здароўе. Гэта акрыламід\index{акрыламід}, мэтылгліяксальляктоза\index{мэтылгліяксаль}, акралеін\index{акралеін} (пры смажаньні на алеі), гетэрацыклічныя аміны, бэнзапірны\index{бэнзапірын} і шэраг іншых злучэньняў. Глікацыя доўгажывучых бялкоў, міжклеткавага матрыксу, ДНК, мітахандрыяльных бялкоў~--- гэта важны паталягічны працэс, які цяпер павярнуць назад практычна немагчыма. Чым больш вы зьядаеце КПГ зь ежай, тым вышэйшы іх узровень у~крыві. Лішак КПГ павялічвае рызыку атэрасклерозу, сардэчна-сасудзістых захворваньняў, ныркавай недастатковасьці, а~таксама шэрагу аўтаімунных захворваньняў.
 
 \paragraph{Адчувальнасьць да інсуліну.}
-Нават умеранае скарачэньне прадуктаў, багатых КПГ, павялічвае адчувальнасьць да інсуліну, зьніжае рызыку цукровага дыябэту.
+Нават умеранае скарачэньне прадуктаў, багатых КПГ, павялічвае адчувальнасьць да інсуліну, зьніжае рызыку цукровага дыябэту\index{дыябэт}.
 
 \paragraph{Запаленьне.}
 Малекулярныя мэханізмы дзеяньня КПГ вывучаныя і шмат у~чым вызначаюцца іх узаемадзеяньнем з~клеткавым рэцэптарам да іх з~гаваркой назвай RAGE (нянавісьць) (Receptor of Advanced Glycosylation End-products), актывацыя якіх прыводзіць да павелічэньня запаленчых ачагоў у~нашым арганізьме.
 
 \paragraph{Старэньне скуры, злучальнай тканкі, павышэньне крохкасьці сасудаў.}
-Пры глікацыі ўтвараецца шэраг злучэньняў, такіх як пэнтасыдын і карбаксымэтылізін. Пры гэтым падае функцыя такіх бялкоў, як эласьцін і каляген. Пры парушэньнях вугляводнага абмену і залішнім спажываньні цукру фармуецца т.~зв. «цукровы твар» (цьмяная, абязводжаная скура зь сеткаю зморшчынаў). Таксама гэта памяншае элястычнасьць крывяносных сасудаў, павялічвае іх крохасьць і пранікальнасьць. Старэньне міжклеткавага матрыксу (рэчывы, якія атачаюць клеткі і ўплываюць на іх функцыі) можа быць адным з~ключавых мэханізмаў разбурэньня арганізму. Выключэньне КПГ з~рацыёну экспэрымынтальных жывёлаў прыкметна падаўжала ім жыцьцё.
+Пры глікацыі ўтвараецца шэраг злучэньняў, такіх як пэнтасыдын\index{пэнтасыдын} і карбаксымэтылізін\index{карбаксымэтылізін}. Пры гэтым падае функцыя такіх бялкоў, як эласьцін і каляген. Пры парушэньнях вугляводнага абмену і залішнім спажываньні цукру фармуецца т.~зв. «цукровы твар» (цьмяная, абязводжаная скура зь сеткаю зморшчынаў). Таксама гэта памяншае элястычнасьць крывяносных сасудаў, павялічвае іх крохасьць і пранікальнасьць. Старэньне міжклеткавага матрыксу (рэчывы, якія атачаюць клеткі і ўплываюць на іх функцыі) можа быць адным з~ключавых мэханізмаў разбурэньня арганізму. Выключэньне КПГ з~рацыёну экспэрымынтальных жывёлаў прыкметна падаўжала ім жыцьцё.
 
 \tipbox{Пры парушэньнях вугляводнага абмену і залішнім спажываньні цукру фармуецца т.~зв. «цукровы твар» (цьмяная, абязводжаная скура зь сеткай зморшчынаў). Таксама зьмяншаецца элястычнасьць крывяносных сасудаў, павялічваюцца іх крохкасьць і пранікальнасьць.}
 
@@ -40,7 +40,7 @@
 Больш за ўсё КПГ у~прадуктах, якія набываюць бурае адценьне ў~працэсе гатоўлі, як правіла запяканьня або смажаньня, фастфуд~--- чэмпіён па зьмесьціве КПГ. Гэта і смажанае мяса, бульба, выпечка, птушка, рыба, гародніна і да т.~п. Рэкардсмэнам зьяўляецца смажаны бекон. Вялікая колькасьць КПГ утворыцца пры прамочваньні мяса соўсамі на аснове цукру, пры паніроўцы ці смажаньні з~даданьнем цукру і мукі. Шмат КПГ у~прадуктах, якія зьмяшчаюць карамэлізаваныя злучэньні (награваньне цукру): піва, кола і інш. Асабліва шмат КПГ у~паўфабрыкатах, якія зазнавалі ўздзеяньне высокіх тэмпэратураў.
 
 \paragraph{Тэмпэратура.}
-Чым вышэйшая тэмпэратура, тым вышэйшы тэмп утварэньня розных КПГ. Так, утварэньне акрыламіду пачынаецца пры рэакцыі паміж амінакіслатой аспарагінам і цукрамі пры тэмпэратурах вышэй 120°C. Ён маецца ў~выпечцы, шашлыку, смажанай бульбе, чыпсах і т.~п. Пры смажаньні~--- тэмпэратура 225\,°C, запяканьні ў~духоўцы 230\,°C, абсмажцы~--- 177\,°C. У~100 грамах сырой ялавічыне ўтрымліваецца амаль у~9 разоў менш канчатковых прадуктаў глікацыі, чым у~смажанай. У~сырой расьліннай ежы ўтрымліваецца мінімальная колькасьць КПГ з~усіх прадуктаў.
+Чым вышэйшая тэмпэратура, тым вышэйшы тэмп утварэньня розных КПГ. Так, утварэньне акрыламіду\index{акрыламід} пачынаецца пры рэакцыі паміж амінакіслатой аспарагінам і цукрамі пры тэмпэратурах вышэй 120°C. Ён маецца ў~выпечцы, шашлыку, смажанай бульбе, чыпсах і т.~п. Пры смажаньні~--- тэмпэратура 225\,°C, запяканьні ў~духоўцы 230\,°C, абсмажцы~--- 177\,°C. У~100 грамах сырой ялавічыне ўтрымліваецца амаль у~9 разоў менш канчатковых прадуктаў глікацыі, чым у~смажанай. У~сырой расьліннай ежы ўтрымліваецца мінімальная колькасьць КПГ з~усіх прадуктаў.
 
 \paragraph{Час.}
 Чым даўжэйшы час гатаваньня, тым больш утворыцца канчатковых прадуктаў глікацыі.
@@ -50,7 +50,7 @@
 \paragraph{Гатуйце бясьпечна.}
 Варка і гатоўля на пары~--- бясьпечныя спосабы прыгатаваньня ежы. Каб скараціць час варэньня, папярэдне можна заліваць крупы вадой на ноч, а~мяса~--- марынаваць у~кіслых дадатках (воцат, цытрына і да т.~п.). Гародніну трэба варыць альдэнтэ, да крыху цьвёрдага стану, а~не разварваць да жэлепадобнага. Al dente~--- значыць, прадукты, цалкам прыгатаваныя, захоўваюць адчувальную пры ўкусе ўнутраную пругкасьць, або народны тэрмін~--- «каб храбусьцела», то-бок гародніна павінна хрумсьцець на зубах. Пасьля таго як прайшлі 2--3 хвіліны з~часу загрузкі гародніны, пакаштуйце яе. Пасьля варкі можна хутка астудзіць гародніну з~дапамогай халоднай вады (з кубікамі лёду), падаючы гародніну пакаёвай тэмпэратуры.
 
-Ашчадная гатоўля таксама спрыяе захаваньню ніжэйшага глікемічнага індэксу. Іншыя спосабы павольнай гатоўлі: пашыраваньне (павольнае гатаваньне пры тэмпературы 88\,°C), бляншаваньне~--- апарваньне або нядоўгая, да хвіліны, варка, гатоўля ў~вакууме, тушэньне, прыпусканьне. Ёсьць адмысловыя павольнаваркі або ціхаваркі для такіх працэдураў.
+Ашчадная гатоўля таксама спрыяе захаваньню ніжэйшага глікемічнага індэксу. Іншыя спосабы павольнай гатоўлі: пашыраваньне (павольнае гатаваньне пры тэмпературы 88\,°C), бляншаваньне\index{бляншаваньне}~--- апарваньне або нядоўгая, да хвіліны, варка, гатоўля ў~вакууме, тушэньне, прыпусканьне. Ёсьць адмысловыя павольнаваркі або ціхаваркі для такіх працэдураў.
 
 \paragraph{Больш сырой неапрацаванай ежы.}
 Часам людзі кажуць, што гародніна «не працуе»~--- запякаюць яе, здрабняюць у~смузі, смажаць… і ня бачаць карыснага эфэкту. Чаму? Адно з~магчымых тлумачэньняў~--- зьмена яе глікемічнага індэксу (ГІ). Любая апрацоўка~--- награваньне, мэханічнае драбненьне і да т.~п.~--- прыкметна павялічвае ГІ. Напрыклад, крупа аўса мае ГІ 40, каша геркулесавая~--- 60, а~каша хуткага прыгатаваньня~--- усё 80! Уласна, калі доўга апрацоўваць любы прадукт, то ён непазьбежна наблізіцца па сваіх паказчыках да мучных вырабаў. Павелічэньне прапорцыі сырой ежы ў~рацыёне дабратворна адбіваецца на здароўі. Але тут важна таксама дзейнічаць бяз скрайнасьцяў, не сьпяшацца навяртацца ў~сыраедства~--- графік карыснасьці сырых прадуктаў мае U-падобную форму, і занадта вялікая колькасьць сырой ежы пагаршае здароўе. У~сыраедаў часта сустракаецца дэфіцыт шматлікіх карысных злучэньняў і падвышаная рызыка для здароўя.
@@ -73,7 +73,7 @@
 Вялікая колькасьць вады запавольвае глікацыю.
 
 \paragraph{Цукры.}
-Самая актыўная малекула ў~працэсе ўтварэньня КПГ~--- гэта фруктоза, затым ідзе ляктоза, а~вось глюкоза~--- на апошнім месцы. Таму непажадана дадаваць цукар у~прадукты і награваць іх да высокіх тэмпэратураў. Пазьбягайце высокага награваньня пры харчовых спалучэньнях бялок + вугляводы (мука і мяса).
+Самая актыўная малекула ў~працэсе ўтварэньня КПГ~--- гэта фруктоза, затым ідзе ляктоза\index{ляктоза}, а~вось глюкоза~--- на апошнім месцы. Таму непажадана дадаваць цукар у~прадукты і награваць іх да высокіх тэмпэратураў. Пазьбягайце высокага награваньня пры харчовых спалучэньнях бялок + вугляводы (мука і мяса).
 
 \tipbox{Любая апрацоўка, награваньне, мэханічнае драбненьне і да т.~п., прыкметна павялічвае глікемічны індэкс. Крупа аўса мае ГІ 40, каша геркулесавая~--- 60, а~каша хуткага прыгатаваньня~--- усё 80! Уласна, калі доўга апрацоўваць любы прадукт, ён непазьбежна наблізіцца па сваіх паказьніках да мучных вырабаў.}
 
@@ -93,13 +93,13 @@
 Дбайна аглядайце прадукты на прадмет цьвілі, пры яе выяўленьні выкідайце прадукт цалкам.
 
 \paragraph{Замочвайце крупы, збажыну і бабовыя.}
-Замочваньне дапамагае паменшыць утрыманьне фіцінавай кіслаты, лішак якой можа зьмяншаць якасьць усмоктваньня мікраэлемэнтаў. Крупы патрабуюць меншага часу варкі і даюць меншую глікемічную нагрузку пры папярэднім замочваньні. Напрыклад, грэчку пасьля замочваньня будзе дастаткова давесьці да кіпеньня. Замочваючы, а~затым зьліваючы ваду, мы зьмяншаем канцэнтрацыю магчымых забруджваньняў. Небясьпеку для здароўя ўяўляюць часта нябачныя для вока цьвіль, плесьня, якія ўтрымліваюць мікатаксыны. Многія вядомыя традыцыйныя культуры (індзейцы майя~--- кукуруза, азіяты~--- соя, еўрапэйцы~--- пшаніца) не гатавалі збажыну з~дапамогай варкі, а~паляпшалі яе карысныя ўласьцівасьці замочваньнем, прарошчваньнем або фэрмэнтацыяй.
+Замочваньне дапамагае паменшыць утрыманьне фіцінавай кіслаты\index{фіцінавая кіслата}\index{кіслата!фіцінавая}, лішак якой можа зьмяншаць якасьць усмоктваньня мікраэлемэнтаў. Крупы патрабуюць меншага часу варкі і даюць меншую глікемічную нагрузку пры папярэднім замочваньні. Напрыклад, грэчку пасьля замочваньня будзе дастаткова давесьці да кіпеньня. Замочваючы, а~затым зьліваючы ваду, мы зьмяншаем канцэнтрацыю магчымых забруджваньняў. Небясьпеку для здароўя ўяўляюць часта нябачныя для вока цьвіль, плесьня, якія ўтрымліваюць мікатаксыны\index{мікатаксыны}. Многія вядомыя традыцыйныя культуры (індзейцы майя~--- кукуруза, азіяты~--- соя, еўрапэйцы~--- пшаніца) не гатавалі збажыну з~дапамогай варкі, а~паляпшалі яе карысныя ўласьцівасьці замочваньнем, прарошчваньнем або фэрмэнтацыяй.
 
 \paragraph{Мыйце гародніну і садавіну.}
 Часта садавіна пакрываюць парафінам для павелічэньня тэрміну прыдатнасьці, апрацоўваюць фунгіцыдамі ад цьвілі. Гэтыя рэчывы могуць быць небясьпечныя для здароўя. Прамываньне прадуктаў праточнай вадой~--- гэта просты спосаб ліквідаваць рэшткі такіх злучэньняў. Салёная вада спраўляецца з~гэтай задачай яшчэ лепей. Некаторую зеляніну, напрыклад лісьце салаты складанай формы, складана старанна прамыць, таму нават пры найменшых сумневах у~яе біялагічнай бясьпецы пазьбягайце пакупкі.
 
 \paragraph{Памяншайце ўзровень КПГ.}
-У нашым арганізьме ёсьць адмысловая гліяксалазная сыстэма, якая дапамагае паменшыць узровень КПГ, яе стымулятарам зьяўляецца сульфарафан з~брокалі. Але працуе толькі сырая брокалі!
+У нашым арганізьме ёсьць адмысловая гліяксалазная сыстэма, якая дапамагае паменшыць узровень КПГ, яе стымулятарам зьяўляецца сульфарафан\index{сульфарафан} з~брокалі. Але працуе толькі сырая брокалі!
 
 \paragraph{Ежце зь мясам шмат зеляніны і гародніны.}
 Вялікая колькасьць зеляніны, перцу, таматаў, часныку дапамагае абясшкодзіць многія небясьпечныя злучэньні.
@@ -125,4 +125,4 @@
 Калі доўга захоўваць ежу, узьнікае рызыка размнажэньня ў~ёй бактэрыяў. Тэмпэратуры ніжэй за 5 і вышэй за 60\,°C спыняюць або запавольваюць рост мікраарганізмаў.
 
 \paragraph{Сьвежасьць.}
-Сьвежасьць прадуктаў~--- гэта ключ да здароўя. Найбольш карысным будзе захаваньне сьвежасьці пры харчовых алергіях, асабліва пры непераноснасьці гістаміну. Біягенныя аміны назапашваюцца ў~прадуктах, што схільныя да хуткага закісаньня, гніеньня, перасьпяваньня (асабліва калі гэтыя прадукты вязуць здалёку). Пазьбягайце прадуктаў зь невыразным тэрмінам захоўваньня або зь перапыненым ланцужком астуджэньня (сьляды шматразовай замарозкі).
+Сьвежасьць прадуктаў~--- гэта ключ да здароўя. Найбольш карысным будзе захаваньне сьвежасьці пры харчовых алергіях, асабліва пры непераноснасьці гістаміну. Біягенныя аміны\index{біягенныя аміны} назапашваюцца ў~прадуктах, што схільныя да хуткага закісаньня, гніеньня, перасьпяваньня (асабліва калі гэтыя прадукты вязуць здалёку). Пазьбягайце прадуктаў зь невыразным тэрмінам захоўваньня або зь перапыненым ланцужком астуджэньня (сьляды шматразовай замарозкі).
