--- a/nutrition/chapter18.tex
+++ b/nutrition/chapter18.tex
@@ -19,7 +19,7 @@
 \subsection{Як гэта ўплывае на здароўе?}
 
 \paragraph{Харчовая залежнасьць.}
-Ежа, якая ўтрымлівае вялікую колькасьць крухмалу, тлушчу, цукраў, солі, стымулюе высокі выкід нэўрамэдыятара дафаміну, што можа пры пэўных умовах прыводзіць да разьвіцьця харчовай залежнасьці, якая вядомая нам ужо сотні гадоў і раней звалася абжорствам. Умеранасьць, адсутнасьць забароны і ўменьне атрымліваць дастаткова задавальненьня ад ежы~--- гэта важныя ўмовы захаваньня здаровых харчовых паводзінаў. Розныя харчовыя абмежаваньні, нэгатыўны вобраз цела ды іншыя фактары могуць прыводзіць да разнастайных парушэньняў харчовых паводзінаў, ад кампульсіўнай яды (цыклі «ўстрыманьне~--- абжорства») да анарэксіі. У~цэлым пры сындроме дэфіцыту ўзнагароджаньня, калі ў~жыцьці нас мала што радуе, мы часта зьвяртаемся да ежы~--- і гэта ня вельмі здаровае рашэньне.
+Ежа, якая ўтрымлівае вялікую колькасьць крухмалу, тлушчу, цукраў, солі, стымулюе высокі выкід нэўрамэдыятара дафаміну, што можа пры пэўных умовах прыводзіць да разьвіцьця харчовай залежнасьці, якая вядомая нам ужо сотні гадоў і раней звалася абжорствам. Умеранасьць, адсутнасьць забароны і ўменьне атрымліваць дастаткова задавальненьня ад ежы~--- гэта важныя ўмовы захаваньня здаровых харчовых паводзінаў. Розныя харчовыя абмежаваньні, нэгатыўны вобраз цела ды іншыя фактары могуць прыводзіць да разнастайных парушэньняў харчовых паводзінаў, ад кампульсіўнай яды (цыклі «ўстрыманьне~--- абжорства») да анарэксіі\index{анарэксія}. У~цэлым пры сындроме дэфіцыту ўзнагароджаньня, калі ў~жыцьці нас мала што радуе, мы часта зьвяртаемся да ежы~--- і гэта ня вельмі здаровае рашэньне.
 
 \tipbox{Ежа, якая ўтрымлівае вялікую колькасьць крухмалу, тлушчу, цукраў, солі, стымулюе высокі выкід нэўрамэдыятара дафаміну, што можа пры пэўных умовах прыводзіць да разьвіцьця харчовай залежнасьці, якая вядомая нам ужо сотні гадоў і раней звалася абжорствам.}
 
@@ -100,4 +100,4 @@
 Дасьледаваньні паказалі, што, калі вы глядзіце прыгожыя фота ежы, можаце зьмяніць стаўленьне да гэтых прадуктаў. Так, гародніна, выдатна пададзеная, падасца вам нашмат смачнейшай.
 
 \paragraph{Горкі смак.}
-Цікава, што падчас эвалюцыі людзі страцілі частку рэцэптараў да горкага смаку, дзякуючы чаму змаглі есьці болей відаў расьлінаў. Зьвярніце ўвагу, што горкі смак тармозіць апэтыт і спрыяе лепшаму насычэньню. Пры гэтым кампанэнты ежы, якія даюць горкі смак, часта зьяўляюцца біялягічна актыўнымі рэчывамі (антыаксыданты, біяфлаваноіды і інш.). Горкі мае мноства адценьняў, якімі мы можам насалоджвацца. Гэта дазваляе дэгустатарам вылучаць цудоўныя смакі і пахі кавы, чырвонага віна, чакаляды. Цікава, што смак да горкага выхоўваецца з~узростам, дзіцяці горкае вельмі не падабаецца. Дадаючы больш горкага, ад кавы да рэдзькі, хрэну, горкае чакаляды, мы можам разьвіваць свой смак і трэніраваць рэцэптары.
+Цікава, што падчас эвалюцыі людзі страцілі частку рэцэптараў да горкага смаку, дзякуючы чаму змаглі есьці болей відаў расьлінаў. Зьвярніце ўвагу, што горкі смак тармозіць апэтыт і спрыяе лепшаму насычэньню. Пры гэтым кампанэнты ежы, якія даюць горкі смак, часта зьяўляюцца біялягічна актыўнымі рэчывамі (антыаксыданты\index{антыаксыданты}, біяфлаваноіды\index{біяфлаваноіды} і інш.). Горкі мае мноства адценьняў, якімі мы можам насалоджвацца. Гэта дазваляе дэгустатарам вылучаць цудоўныя смакі і пахі кавы, чырвонага віна, чакаляды. Цікава, што смак да горкага выхоўваецца з~узростам, дзіцяці горкае вельмі не падабаецца. Дадаючы больш горкага, ад кавы да рэдзькі, хрэну, горкае чакаляды, мы можам разьвіваць свой смак і трэніраваць рэцэптары.
