--- a/nutrition/chapter2.tex
+++ b/nutrition/chapter2.tex
@@ -2,7 +2,7 @@
 
 Харчовае вакно~--- гэта час паміж першым і апошнім прыёмам ежы на працягу сутак. Таксама вылучаюць харчовую паўзу~--- начны час ад апошняга да першага прыёму ежы на наступны дзень. У~цэлым чым вузейшае харчовае вакно і шырэйшая харчовая паўза (у разумных межах), тым болей карысьці для здароўя нават безь сьвядомага абмежаваньня каляражу. 
 
-Без паступленьня калёрыяў у~арганізьме паскараецца працэс самаачышчэньня клетак (аўтафагіі\index{аўтафагія}), спаленьня тлушчу, павялічваецца адчувальнасьць арганізму да розных гармонаў, зьмяншаецца ўзровень запаленьня, а~таксама зь цягам часу павялічваецца частка цягліцавай масы. Дасьледаваньні паказалі, што такая дыета\index{дыета} прадухіляе зьяўленьне парушэньняў абмену рэчываў, у~тым ліку дыябэт\index{дыябэт} другога тыпу, пячоначны стэатоз (залішні тлушч у~печані)\index{пячоначны стэатоз} і высокі ўзровень халестэрыну ў~крыві.
+Без паступленьня калёрыяў у~арганізьме паскараецца працэс самаачышчэньня клетак (аўтафагіі\index{аўтафагія}), спаленьня тлушчу, павялічваецца адчувальнасьць арганізму да розных гармонаў, зьмяншаецца ўзровень запаленьня, а~таксама зь цягам часу павялічваецца частка цягліцавай масы. Дасьледаваньні паказалі, што такая дыета прадухіляе зьяўленьне парушэньняў абмену рэчываў, у~тым ліку дыябэт\index{дыябэт} другога тыпу, пячоначны стэатоз (залішні тлушч у~печані)\index{пячоначны стэатоз} і высокі ўзровень халестэрыну ў~крыві.
 
 \tipbox{Харчовае вакно~--- гэта час паміж першым і апошнім прыёмам ежы на працягу сутак. Чым карацейшае харчовае вакно і даўжэйшая харчовая паўза, тым болей карысьці для здароўя.}
 
@@ -28,7 +28,7 @@
 
 \paragraph{Узмацняе рызыку іншых хваробаў.}
 Кожны прыём ежы актывуе адмысловыя малекулярныя комплексы mTORС\footnote{Мішэнь рапаміцыну\index{рапаміцын} млекакормячых, mammalian target of rapamycin
-complex (mTORС)\index{ген!mTOR}~--- фэрмэнт, які грае галоўную ролю ў~клеткавым 
+complex (mTORС)\index{ген!mTORC}~--- фэрмэнт, які грае галоўную ролю ў~клеткавым 
 росьце.~--- \emph{Аўтарская нататка.}} у~нашых клетках. Яго хранічная гіпэрактыўнасьць павялічвае рызыку алергічных і аўтаімунных захворваньняў, падвышанага артэрыяльнага ціску.
 
 \paragraph{Запавольвае самааднаўленьне.}\!
@@ -44,7 +44,7 @@ complex (mTORС)\index{ген!mTOR}~--- фэрмэнт, які грае гало
 Чым большая нагрузка на зубы, тым горш спраўляецца сыстэма самаачышчэньня ў~ротавай поласьці. А~здароўе зубоў~--- гэта ня толькі карыес, але яшчэ і рызыка сардэчна-сасудзістых захворваньняў!
 
 \paragraph{Эфэктыўнае і пры захворваньнях.}
-Вузкае харчовае вакно павышае адчувальнасьць да інсуліну\index{інсулін} ў~дыябэтыкаў, зьніжае аксыдатыўны стрэс, узровень запаленьня, запавольвае старэньне, зьніжае рызыку гіпэртэнзіі, паляпшае ліпідны профіль. Дасьледаваньні на жывёлах паказваюць, што абмежаваньне часу харчаваньня стымулюе рост новых нэрвовых клетак, палягчае сымптомы дэпрэсіі й~нават паляпшае стан пры нэўрадэгенэратыўных захворваньнях, у~тым ліку хваробах Альцгаймэра\index{хвароба!Альцгаймэра} і Паркінсона\index{хвароба!Паркінсона}.
+Вузкае харчовае вакно павышае адчувальнасьць да інсуліну\index{інсулін} ў~дыябэтыкаў, зьніжае аксыдатыўны стрэс, узровень запаленьня, запавольвае старэньне, зьніжае рызыку гіпэртэнзіі, паляпшае ліпідны профіль. Дасьледаваньні на жывёлах паказваюць, што абмежаваньне часу харчаваньня стымулюе рост новых нэрвовых клетак, палягчае сымптомы дэпрэсіі й~нават паляпшае стан пры нэўрадэгенэратыўных захворваньнях, у~тым ліку хваробах Альцгаймэра\index{хвароба!Альцгаймэра} і Паркінсана\index{хвароба!Паркінсана}.
 
 \subsection{Асноўныя прынцыпы}
 
@@ -87,7 +87,7 @@ complex (mTORС)\index{ген!mTOR}~--- фэрмэнт, які грае гало
 Чым вышэйшы стрэс, тым шырэйшым павінна быць харчовае акно. Стрэс павышае ўзровень гармону картызолу\index{картызол} і на галодны страўнік здольны нашкодзіць здароўю. Чым ніжэйшы стрэс, тым вузейшым можа быць харчовае вакно.
 
 \paragraph{Ежце ўволю і не лічыце калёрыі (у разумных межах, вядома).}
-Вельмі важна не зьмяншаць занадта рэзка колькасьць спажываных калёрыяў. Для гэтага трэба зьядаць больш, чым вы звыклі за адзін прыём ежы, бо часу на ежу цяпер меней. Перавага звужэньня харчовага вакна ў~параўнаньні зь іншымі дыетамі\index{дыета} ў~тым, што падчас харчовага вакна адсутнічаюць абмежаваньні на памеры порцыі, вы можаце есьці ўволю. Вам ня трэба лічыць калёрыі і ўвесь час баяцца пераесьці. Ежце ўволю, з~задавальненьнем, у~адведзены час.
+Вельмі важна не зьмяншаць занадта рэзка колькасьць спажываных калёрыяў. Для гэтага трэба зьядаць больш, чым вы звыклі за адзін прыём ежы, бо часу на ежу цяпер меней. Перавага звужэньня харчовага вакна ў~параўнаньні зь іншымі дыетамі ў~тым, што падчас харчовага вакна адсутнічаюць абмежаваньні на памеры порцыі, вы можаце есьці ўволю. Вам ня трэба лічыць калёрыі і ўвесь час баяцца пераесьці. Ежце ўволю, з~задавальненьнем, у~адведзены час.
 
 \paragraph{Трэніруйцеся сьмела.}
 Вы можаце сумяшчаць правіла вузкага харчовага вакна з~трэніроўкамі, у~т.~л. і~зь сілавымі, і гэта ня будзе замінаць набору цягліцавай масы.
