--- a/nutrition/chapter20.tex
+++ b/nutrition/chapter20.tex
@@ -10,12 +10,12 @@
 
 З даўніх часоў людзі выкарыстоўвалі тлушчы як надзейную крыніцу энэргіі, для многіх народнасьцяў (эскімосы і да т.~п.) тлушчы былі галоўным нутрыентам. Традыцыйна тлушч часьцей выкарыстоўваўся жыхарамі халаднейшых краінаў. У~нацыянальнай кухні краінаў з~умераным кліматам тлушч таксама складае значную долю. Аліўкавы алей (першага халоднага адціску)~--- самая заўважная асаблівасьць вядомай і добра вывучанай міжземнаморскай дыеты.
 
-Аднак у~50-х гадах адбылося сур'ёзнае зьмяненьне ролі тлушчаў. Пасьля сардэчнага прыступу прэзідэнта ЗША Дуайта Эйзэнхаўэра і росту сардэчна-сасудзістых захворваньняў у~ЗША ўвага грамадскасьці была прыцягнутая да пошуку сродкаў прафіляктыкі гэтых захворваньняў. Шырокую вядомасьць і прызнаньне пры гэтым атрымала дзейнасьць Ансэля Кейса, які на аснове сваіх назіраньняў абвясьціў жывёльны тлушч вінаватым у~захворваньнях сэрца. І~хоць яго работы былі ненадзейнымі і крытыкаваліся, гэты пункт гледжаньня стаў агульнапрызнаным і ўвайшоў у~дыеталягічныя рэкамэндацыі. Аўтараў, якія прытрымліваліся іншых пунктаў гледжаньня, такіх як Джон Юдкін (лічыў цукар прычынай праблемы), не ўспрымалі сур'ёзна. Усё гэта прывяло да дэманізацыі халестэрыну і тлушчаў, што выявілася ў~рэзкім скарачэньні колькасьці жывёльнага тлушчу, павелічэньні колькасьці абястлушчаных прадуктаў, долі транстлушчаў, расьлінных алеяў, павелічэньні ўжываньня вугляводных прадуктаў (паста, мюсьлі, кашы, сокі), цукру. Але гэтыя зьмены не паўплывалі на здароўе станоўча, а~толькі пагоршылі эпідэмію атлусьценьня. Ёсьць меркаваньне, што многія з~гэтых рэкамэндацый былі падтрыманыя вытворцамі пэўных прадуктаў харчаваньня.
+Аднак у~50-х гадах адбылося сур'ёзнае зьмяненьне ролі тлушчаў. Пасьля сардэчнага прыступу прэзідэнта ЗША Дуайта Эйзэнхаўэра\index{Эйзэнхаўэр Дуайт} і росту сардэчна-сасудзістых захворваньняў у~ЗША ўвага грамадскасьці была прыцягнутая да пошуку сродкаў прафіляктыкі гэтых захворваньняў. Шырокую вядомасьць і прызнаньне пры гэтым атрымала дзейнасьць Ансэля Кейса, які на аснове сваіх назіраньняў абвясьціў жывёльны тлушч вінаватым у~захворваньнях сэрца. І~хоць яго работы былі ненадзейнымі і крытыкаваліся, гэты пункт гледжаньня стаў агульнапрызнаным і ўвайшоў у~дыеталягічныя рэкамэндацыі. Аўтараў, якія прытрымліваліся іншых пунктаў гледжаньня, такіх як Джон Юдкін\index{Юдкін Джон} (лічыў цукар прычынай праблемы), не ўспрымалі сур'ёзна. Усё гэта прывяло да дэманізацыі халестэрыну і тлушчаў, што выявілася ў~рэзкім скарачэньні колькасьці жывёльнага тлушчу, павелічэньні колькасьці абястлушчаных прадуктаў, долі транстлушчаў\index{транстлушчы}, расьлінных алеяў, павелічэньні ўжываньня вугляводных прадуктаў (паста, мюсьлі, кашы, сокі), цукру. Але гэтыя зьмены не паўплывалі на здароўе станоўча, а~толькі пагоршылі эпідэмію атлусьценьня. Ёсьць меркаваньне, што многія з~гэтых рэкамэндацый былі падтрыманыя вытворцамі пэўных прадуктаў харчаваньня.
 
 \tipbox{З даўніх часоў людзі выкарыстоўвалі тлушчы як надзейную крыніцу энэргіі, для многіх народнасьцяў (эскімосы і да т.~п.) тлушчы былі галоўным нутрыентам. Традыцыйна тлушч часьцей выкарыстоўваўся жыхарамі халаднейшых краінаў.}
 
 \paragraph{Танныя алеі.}
-У мінулым стагоддзі ў~рацыёне адбылася зьмена харчовых тлушчаў. Так, людзі сталі спажываць значна больш расьлінных тлушчаў зь лішкам амэга-6 тлустых кіслот (сланечнікавы, баваўняны, соевы, кукурузны алеі), якія рэкамэндаваліся як таньнейшыя і як больш карысныя для арганізму. Транстлушчы таксама актыўна ўкараняліся ў~рацыён, пазыцыянуючыся як больш карысныя для здароўя ў~параўнаньні з~жывёльнымі насычанымі тлушчамі. Аднак надмер гэтых тлушчаў прывёў адно да павелічэньня росту сардэчна-сасудзістых захворваньняў.
+У мінулым стагоддзі ў~рацыёне адбылася зьмена харчовых тлушчаў. Так, людзі сталі спажываць значна больш расьлінных тлушчаў зь лішкам амэга-6 тлустых кіслот (сланечнікавы, баваўняны, соевы, кукурузны алеі), якія рэкамэндаваліся як таньнейшыя і як больш карысныя для арганізму. Транстлушчы\index{транстлушчы} таксама актыўна ўкараняліся ў~рацыён, пазыцыянуючыся як больш карысныя для здароўя ў~параўнаньні з~жывёльнымі насычанымі тлушчамі. Аднак надмер гэтых тлушчаў прывёў адно да павелічэньня росту сардэчна-сасудзістых захворваньняў.
 
 \subsection{Як гэта ўплывае на здароўе?}
 
@@ -24,26 +24,26 @@
 \paragraph{Насычаныя тлушчы.}
 Насычаныя тлушчы шырока сустракаюцца ў~прыродзе. Варта адзначыць, што іх няма ў~чыстым выглядзе, тлустыя прадукты ўтрымліваюць сумесь розных тлустых кіслотаў. Напрыклад, у~сале насычаныя тлушчы складаюць 42\,\%, монаненасычаныя~--- 44\,\%. У~сьметанковым масьле насычаныя тлушчы складаюць 56\,\%, монаненасычаныя~--- 29\,\%, поліненасычаныя~--- 3\,\%. Большасьць тлустых кіслотаў маюць доўгі ланцужок малекулы, выключэньне~--- сярэднеланцужковыя насычаныя тлустыя кіслоты, такія, як у~какосавым алеі. Яны хутчэй і лепей засвойваюцца, таму какосавы алей карыстаецца заслужанай папулярнасьцю.
 
-Аднак тлушчы з~доўгімі ланцужкамі выдатна і надоўга насычаюць, стымулюючы выдзяленьне гармону халецыстакініну. Насычаныя тлушчы прадстаўлены рознымі малекуламі тлустых кіслотаў, якія адрозьніваюцца сваімі ўласьцівасьцямі. Стэарынавая тлустая кіслата (багата ў~барановым тлушчы) мае станоўчыя ўласьцівасьці, лішак пальмітынавай мае й~нэгатыўныя аспэкты. Утрыманьне пальмітынавай кіслаты ў~сучасным фастфудзе перавышае палову ад агульнага складу ўсіх тлустых кіслотаў. Пальмітынавая кіслата дае своеасаблівы «тлусты смак» і зьяўляецца досыць таннай. Аднак уплыў пальмавага алею ва ўмераных колькасьцях на здароўе нэўтральны.
+Аднак тлушчы з~доўгімі ланцужкамі выдатна і надоўга насычаюць, стымулюючы выдзяленьне гармону халецыстакініну. Насычаныя тлушчы прадстаўлены рознымі малекуламі тлустых кіслотаў, якія адрозьніваюцца сваімі ўласьцівасьцямі. Стэарынавая тлустая кіслата\index{кіслата!стэарынавая} (багата ў~барановым тлушчы) мае станоўчыя ўласьцівасьці, лішак пальмітынавай мае й~нэгатыўныя аспэкты. Утрыманьне пальмітынавай кіслаты\index{кіслата!пальмітынавая} ў~сучасным фастфудзе перавышае палову ад агульнага складу ўсіх тлустых кіслотаў. Пальмітынавая кіслата\index{кіслата!пальмітынавая} дае своеасаблівы «тлусты смак» і зьяўляецца досыць таннай. Аднак уплыў пальмавага алею ва ўмераных колькасьцях на здароўе нэўтральны.
 
 \paragraph{Монаненасычанымі тлустыя кіслоты.}
-Уключаюць у~сябе алеінавую (амэга-9), пальмітаалеінавую (амэга-7) і шэраг іншых тлустых кіслот. Найбольш вывучаная алеінавая тлустая кіслата, якой шмат у~аліўкавым алеі (76\,\%), авакада (70\,\%), многіх жывёльных прадуктах (у яйках 50\,\%). Багата яе ў~мігдале і лясным гарэху. Алеінавая тлустая кіслата здольная зьніжаць рызыку разьвіцьця некаторых відаў раку, павышаць адчувальнасьць да інсуліну, зьніжаць узровень сыстэмнага запаленьня. Монаненасычаныя тлушчы станоўча ўплываюць на здароўе, паляпшаюць як вугляводны, так і тлушчавы абмен, зьніжаюць рызыку разьвіцьця многіх захворваньняў.
+Уключаюць у~сябе алеінавую (амэга-9), пальмітаалеінавую (амэга-7) і шэраг іншых тлустых кіслот. Найбольш вывучаная алеінавая тлустая кіслата\index{кіслата!алеінавая}, якой шмат у~аліўкавым алеі (76\,\%), авакада (70\,\%), многіх жывёльных прадуктах (у яйках 50\,\%). Багата яе ў~мігдале і лясным гарэху. Алеінавая тлустая кіслата\index{кіслата!алеінавая} здольная зьніжаць рызыку разьвіцьця некаторых відаў раку, павышаць адчувальнасьць да інсуліну, зьніжаць узровень сыстэмнага запаленьня. Монаненасычаныя тлушчы станоўча ўплываюць на здароўе, паляпшаюць як вугляводны, так і тлушчавы абмен, зьніжаюць рызыку разьвіцьця многіх захворваньняў.
 
 \paragraph{Поліненасычаныя тлушчы.}
 Поліненасычаныя тлушчы адносяцца да незаменных злучэньняў. З~аднаго боку, іх павелічэньне ў~рацыёне дабратворна ўплывае на сардэчна-сасудзістую сыстэму. Зь іншага~--- поліненасычаныя тлушчы схільныя да перакіснага акісьленьня праз сваю хімічную структуру, таму іх меншая доля ў~клеткавых мэмбранах зьвязаная з~большай працягласьцю жыцьця празь меншую актыўнасьць працэсаў перакіснага пашкоджаньня ліпідаў і ўтварэньня рознага клеткавага сьмецьця.
 
 \paragraph{Дысбалянс амэга-3 і амэга-6 поліненасычаных тлустых кіслотаў.}
-Незаменныя тлустыя кіслоты паступаюць зь ежай, частка іх спальваецца, а~частка ідзе на сынтэз вытворных, адмысловых малекулаў эйказаноідаў. З~амэга-6 тлустых кіслотаў (лінолевая) утвараюцца эйказаноіды, якія павялічваюць агульны ўзровень запаленьня, павялічваюць пранікальнасьць сасудаў, спрыяюць звадкаваньню крыві, звужэньню бронхаў, утварэньню сьлізі і да т.~п. А~вось з~амэга-3 тлустых кіслотаў (эйказапэнтаенавая і даказагексаенавая) утвараюцца супрацьзапаленчыя эйказаноіды, якія валодаюць супрацьлеглымі эфэктамі. Бо фэрмэнт, які ператварае малекулы поліненасычаных тлустых кіслотаў у~эйказаноіды, агульны, то й~суадносіны амэга-3 і амэга-6 у~ежы будуць уплываць на суадносіны іх вытворных у~тканках арганізму. Для дакладнага вызначэньня балянсу і падбору дакладнай дазоўкі амэга-3 тлустых кіслотаў можна здаць аналіз на амэга-індэкс, які паказвае іх рэальныя суадносіны ў~арганізьме.
+Незаменныя тлустыя кіслоты паступаюць зь ежай, частка іх спальваецца, а~частка ідзе на сынтэз вытворных, адмысловых малекулаў эйказаноідаў\index{эйказаноіды}. З~амэга-6 тлустых кіслотаў (лінолевая) утвараюцца эйказаноіды, якія павялічваюць агульны ўзровень запаленьня, павялічваюць пранікальнасьць сасудаў, спрыяюць звадкаваньню крыві, звужэньню бронхаў, утварэньню сьлізі і да т.~п. А~вось з~амэга-3 тлустых кіслотаў (эйказапэнтаенавая і даказагексаенавая) утвараюцца супрацьзапаленчыя эйказаноіды\index{эйказаноіды}, якія валодаюць супрацьлеглымі эфэктамі. Бо фэрмэнт, які ператварае малекулы поліненасычаных тлустых кіслотаў у~эйказаноіды\index{эйказаноіды}, агульны, то й~суадносіны амэга-3 і амэга-6 у~ежы будуць уплываць на суадносіны іх вытворных у~тканках арганізму. Для дакладнага вызначэньня балянсу і падбору дакладнай дазоўкі амэга-3 тлустых кіслотаў можна здаць аналіз на амэга-індэкс, які паказвае іх рэальныя суадносіны ў~арганізьме.
 
 \tipbox{Дастатковая колькасьць амэга-3 тлустых кіслотаў маецца ў~ежы жывёльнага паходжаньня, але сёньня ў~нашым рацыёне зьявілася мноства аналягаў з~высокім утрыманьнем амэга-6 тлустых кіслотаў, якія нясуць шкоду здароўю.}
 
-Раней мы атрымлівалі дастатковую колькасьць амэга-3 зь ежы жывёльнага паходжаньня~--- яйкі, малочныя прадукты, мяса жывёлаў і птушак (трава мае расьлінную амэга-3 кіслату, якую жывёлы ператвараюць у~жывёльныя формы амэга-3). Сёньня ў~кармах для жывёлаў пераважаюць збожжавыя культуры, у~якіх практычна няма амэга-3 тлустых кіслот. Нароўні са скарачэньнем колькасьці амэга-3 у~нашым рацыёне зьявілася мноства танных расьлінных алеяў з~высокім утрыманьнем амэга-6 тлустых кіслотаў. Працэнтнае ўтрыманьне амэга-6 тлустых кіслотаў у~сланечнікавым алеі складае 60\,\%, багата яго ў~соевым, баваўняным, кукурузным ды іншых прамысловых алеях. Праз сваю таннасьць гэтыя маслы выкарыстоўваюцца ў~шматлікіх паўфабрыкатах і гатовай ежы ў~вялікай колькасьці. Лішак амэга-6 тлушчаў у~рацыёне павялічвае ўзровень запаленьня, рызыку сардэчна-сасудзістых, аўтаімунных захворваньняў. Лішак лінолевай амэга-6 тлустай кіслаты можа павышаць рызыку інфаркту, дэпрэсій, нэўрадэгенэратыўных захворваньняў, сыстэмнага запаленьня, шэрагу пухлінаў.
+Раней мы атрымлівалі дастатковую колькасьць амэга-3 зь ежы жывёльнага паходжаньня~--- яйкі, малочныя прадукты, мяса жывёлаў і птушак (трава мае расьлінную амэга-3 кіслату, якую жывёлы ператвараюць у~жывёльныя формы амэга-3). Сёньня ў~кармах для жывёлаў пераважаюць збожжавыя культуры, у~якіх практычна няма амэга-3 тлустых кіслот. Нароўні са скарачэньнем колькасьці амэга-3 у~нашым рацыёне зьявілася мноства танных расьлінных алеяў з~высокім утрыманьнем амэга-6 тлустых кіслотаў. Працэнтнае ўтрыманьне амэга-6 тлустых кіслотаў у~сланечнікавым алеі складае 60\,\%, багата яго ў~соевым, баваўняным, кукурузным ды іншых прамысловых алеях. Праз сваю таннасьць гэтыя маслы выкарыстоўваюцца ў~шматлікіх паўфабрыкатах і гатовай ежы ў~вялікай колькасьці. Лішак амэга-6 тлушчаў у~рацыёне павялічвае ўзровень запаленьня, рызыку сардэчна-сасудзістых, аўтаімунных захворваньняў. Лішак лінолевай амэга-6 тлустай кіслаты\index{кіслата!лінолевая} можа павышаць рызыку інфаркту, дэпрэсій, нэўрадэгенэратыўных захворваньняў, сыстэмнага запаленьня, шэрагу пухлінаў.
 
-\paragraph{Дэфіцыт амэга-3 тлустых кіслотаў} (эйказапэнтаенавая ЭПК і даказагексаенавая ДГК~--- кіслоты)~--- гэта даволі частая праблема.
+\paragraph{Дэфіцыт амэга-3 тлустых кіслотаў} (эйказапэнтаенавая ЭПК\index{кіслата!эйказапэнтаенавая (ЭПК)} і даказагексаенавая ДГК\index{кіслата!даказагексаенавая (ДГК)}~--- кіслоты)~--- гэта даволі частая праблема.
 У нашым арганізьме ЭПК і ДГК граюць важную ролю, уваходзячы ў~склад галаўнога мозгу і сятчаткі вачэй. Яны паляпшаюць кагнітыўныя функцыі, зьмяншаюць рызыку дэпрэсіі, зьмяншаюць рызыку запаленьня, карысныя для прафілактыкі сардэчна-сасудзістых захворваньняў і карэкцыі ліпіднага профілю, асабліва важныя для дзяцей і цяжарных. Маюць яны і агульныя ўласьцівасьці, і сваю спэцыфіку, бо ЭПК валодае большай супрацьзапаленчай актыўнасьцю, а~ДГК патрэбнейшы для падтрыманьня ўстойлівых мэмбранаў нэрвовых клетак.
 
-\paragraph{Транстлушчы.}
-Транстлушчы павышаюць рызыку сардэчна-сасудзістых захворваньняў, могуць павялічваць рызыку дыябэту, раку, дэпрэсій і хваробы Альцгеймэра пры высокім узроўні спажываньня.
+\paragraph{Транстлушчы\index{транстлушчы}.}
+Транстлушчы\index{транстлушчы} павышаюць рызыку сардэчна-сасудзістых захворваньняў, могуць павялічваць рызыку дыябэту, раку, дэпрэсій і хваробы Альцгаймэра\index{хвароба!Альцгаймэра} пры высокім узроўні спажываньня.
 
 \subsection{Асноўныя прынцыпы}
 
@@ -58,10 +58,10 @@
 У цэлым трэба скараціць колькасьць поліненасычаных тлустых кіслотаў, асабліва атрыманых з~алеяў. Гэта значыць, што варта пазьбягаць абсалютнай большасьці расьлінных алеяў (уключна з~ільняным алеем), за рэдкім выключэньнем (аліўкавы, какосавы і некаторыя іншыя).
 
 \paragraph{Суадносіны амэга-3 і амэга-6.}
-Для падтрыманьня здароўя неабходна датрымлівацца аптымальнага балянсу амэга-3 і амэга-6 тлустых кіслотаў. Для гэтага важна паменшыць спажываньне амэга-6 тлустых кіслотаў (паўфабрыкаты, алеі накшталт соевага, сланечнікавага, кукурузнага, кунжутнага, канаплянага і да т.~п.) і павялічыць спажываньне жывёльных формаў амэга-3 тлустых кіслотаў (эйказапэнтаенавай ЭПК і даказагексаенавай ДГ. Шмат амэга-3 тлустых кіслотаў маецца ў~жывёльных прадуктах травянога выпасу і морапрадуктах. Больш за ўсё іх у~тлустай марской рыбе. Так у~селядца 16,8 грамаў амэга-3 на кіляграм сырой масы, у~сардзіне~--- 25, ласосі~--- 12, стаўрыдзе~--- 8. Дастаткова 2--3 разы на тыдзень ужываць порцыю рыбы, каб дастаткова атрымліваць усе неабходныя злучэньні. Ужываньне дабавак амэга-3 тлустых кіслотаў у~вялікіх колькасьцях працяглы час можа быць таксама празьмерным і нават небясьпечным.
+Для падтрыманьня здароўя неабходна датрымлівацца аптымальнага балянсу амэга-3 і амэга-6 тлустых кіслотаў. Для гэтага важна паменшыць спажываньне амэга-6 тлустых кіслотаў (паўфабрыкаты, алеі накшталт соевага, сланечнікавага, кукурузнага, кунжутнага, канаплянага і да т.~п.) і павялічыць спажываньне жывёльных формаў амэга-3 тлустых кіслотаў (эйказапэнтаенавай ЭПК\index{кіслата!эйказапэнтаенавая (ЭПК)} і даказагексаенавай ДГК\index{кіслата!даказагексаенавая (ДГК)}). Шмат амэга-3 тлустых кіслотаў маецца ў~жывёльных прадуктах травянога выпасу і морапрадуктах. Больш за ўсё іх у~тлустай марской рыбе. Так у~селядца 16,8 грамаў амэга-3 на кіляграм сырой масы, у~сардзіне~--- 25, ласосі~--- 12, стаўрыдзе~--- 8. Дастаткова 2--3 разы на тыдзень ужываць порцыю рыбы, каб дастаткова атрымліваць усе неабходныя злучэньні. Ужываньне дабавак амэга-3 тлустых кіслотаў у~вялікіх колькасьцях працяглы час можа быць таксама празьмерным і нават небясьпечным.
 
-\paragraph{Абмежаваць спажываньне транстлушчаў} (кандытарскія вырабы, выпечку, маргарын і да т.~п.).
-Маргарын для выпечкі можа ўтрымліваць 20--40\,\% транстлушчаў, шмат іх у~кулінарных тлушчах, спрэдах, каўбасных вырабах, цукерках і фастфудзе. Часта яны хаваюцца за агульнай назвай «алей», «гідрагенізаваныя алеі» і т.~п.
+\paragraph{Абмежаваць спажываньне транстлушчаў\index{транстлушчы}} (кандытарскія вырабы, выпечку, маргарын і да т.~п.).
+Маргарын для выпечкі можа ўтрымліваць 20--40\,\% транстлушчаў\index{транстлушчы}, шмат іх у~кулінарных тлушчах, спрэдах, каўбасных вырабах, цукерках і фастфудзе. Часта яны хаваюцца за агульнай назвай «алей», «гідрагенізаваныя алеі» і т.~п.
 
 \subsection{Як трымацца правіла? Ідэі і парады}
 
@@ -77,7 +77,7 @@
 \tipbox{Традыцыйна льняны алей выкарыстоўваўся пры апрацоўцы дрэва супраць гніеньня, прамочваньні тканінаў, бо ён хутка акісьляецца і полімэрызуецца пры трапленьні сонечных прамянёў, кантакце з~паветрам ці мэталамі.}
 
 \paragraph{Ільняны алей не замена рыбінаму тлушчу і рыбе.}
-Ільняны алей неэфэктыўны як крыніца амэга-3. Рэч у~тым, што ўсе амэга-3 тлустыя кіслоты неаднолькавыя, ёсьць расьлінныя амэга-3 (альфа-ліналенавая АЛК) і жывёльныя амэга-3 (эйказапэнтаенавая ЭПК і даказагексаенавая ДГК). Чалавек ня можа засвоіць АЛК, яму патрэбныя ЭПК і ДГК. У~нашым арганізьме ёсьць гены, якія канвэртуюць АЛК у~ЭПК, але гэты працэс неэфэктыўны, толькі 1--6\,\% АЛК можна канвэртаваць. А~чым больш вы ясьцё АЛК і амэга-6, тым мацней зьмяншаецца гэтая канвэрсія.
+Ільняны алей неэфэктыўны як крыніца амэга-3. Рэч у~тым, што ўсе амэга-3 тлустыя кіслоты неаднолькавыя, ёсьць расьлінныя амэга-3 (альфа-ліналенавая АЛК) і жывёльныя амэга-3 (эйказапэнтаенавай ЭПК\index{кіслата!эйказапэнтаенавая (ЭПК)} і даказагексаенавай ДГК\index{кіслата!даказагексаенавая (ДГК)}). Чалавек ня можа засвоіць АЛК, яму патрэбныя ЭПК і ДГК. У~нашым арганізьме ёсьць гены, якія канвэртуюць АЛК у~ЭПК, але гэты працэс неэфэктыўны, толькі 1--6\,\% АЛК можна канвэртаваць. А~чым больш вы ясьцё АЛК і амэга-6, тым мацней зьмяншаецца гэтая канвэрсія.
 
 Для эфэктыўнай канвэрсіі АЛК у~ЭПК патрэбная высокая актыўнасьць гена дэсатуразы FASD2. Але ў~85\,\% эўрапэйцаў, якія ўжываюць традыцыйна больш жывёльных прадуктаў, яго актыўнасьць нізкая, таму льняны алей, чыя, алей грэцкага гарэха не зьяўляюцца эфэктыўнымі для папаўненьня дэфіцыту амэга-3. У~экспэрымэнтах ужываньне льнянога масла не ўплывала на ўзровень амэга-3 у~крыві, але пры гэтым павялічвалася рызыка раку падкарэньніцы.
 
@@ -85,7 +85,7 @@
 Як папоўніць дэфіцыт нутрыентаў, не ўжываючы алею? Ежце цэльныя грэцкія гарэхі, пасыпайце ежу кунжутнымі семкамі, разьмяліце насеньне лёну і пасыпце імі салату. У~складзе цэльных прадуктаў поліненасычаныя тлушчы стабільнейшыя.
 
 \paragraph{Амега-7 тлустыя кіслоты.}
-Акрамя згаданых амэга-9 монаненасычаных тлустых кіслотаў, ёсьць шэраг і іншых карысных злучэньняў. Напрыклад, пальміталеінавая кіслата, гэта асноўны прадстаўнік амэга-7 кіслот. Яе шмат у~рыбе, макадаміі, абляпіхавым алеі. Яна паляпшае мэтабалізм і зьмяншае ўзровень сыстэмнага запаленьня.
+Акрамя згаданых амэга-9 монаненасычаных тлустых кіслотаў, ёсьць шэраг і іншых карысных злучэньняў. Напрыклад, пальміталеінавая кіслата\index{кіслата!пальміталеінавая}, гэта асноўны прадстаўнік амэга-7 кіслот. Яе шмат у~рыбе, макадаміі, абляпіхавым алеі. Яна паляпшае мэтабалізм і зьмяншае ўзровень сыстэмнага запаленьня.
 
 \paragraph{Спалучэньне зь зёлкамі.}
 Тлушчы выдатна экстрагуюць тлушчараспушчальныя карысныя злучэньні, у~тым ліку і духмяныя. Можна настаяць аліўкавы алей на часныку, размарыне, базіліку і інш.
