--- a/nutrition/chapter22.tex
+++ b/nutrition/chapter22.tex
@@ -12,16 +12,16 @@
 
 \subsection{Як гэта ўплывае на здароўе?}
 
-\paragraph{Абязводжваньне.}
-Ёсьць даныя, што нават страта вады ў~1--1,3\,\% ад масы цела пагаршае настрой і канцэнтрацыю, павышае рызыку галаўнога болю. Калі страта вады перавышае 2\,\% ад масы цела, зьніжаюцца нашыя фізычныя і кагнітыўныя здольнасьці, мы горш выглядаем. Страта 5\,\% і больш вядзе да парушэньняў тэрмарэгуляцыі, што актуальна для тых, хто жыве ў~гарачым клімаце, і спартоўцаў, недахоп больш чым 6--7\,\% прывядзе да моцнай страты трываласьці. Абязводжваньне пагаршае стан скуры, можа справакаваць галаўны боль, парушыць працу страўнікава-кішачнага тракту, зьменшыць разумовыя здольнасьці, узмацніць апэтыт.
+\paragraph{Абязводжваньне\index{абязводжваньне}.}
+Ёсьць даныя, што нават страта вады ў~1--1,3\,\% ад масы цела пагаршае настрой і канцэнтрацыю, павышае рызыку галаўнога болю. Калі страта вады перавышае 2\,\% ад масы цела, зьніжаюцца нашыя фізычныя і кагнітыўныя здольнасьці, мы горш выглядаем. Страта 5\,\% і больш вядзе да парушэньняў тэрмарэгуляцыі, што актуальна для тых, хто жыве ў~гарачым клімаце, і спартоўцаў, недахоп больш чым 6--7\,\% прывядзе да моцнай страты трываласьці. Абязводжваньне\index{абязводжваньне} пагаршае стан скуры, можа справакаваць галаўны боль, парушыць працу страўнікава-кішачнага тракту, зьменшыць разумовыя здольнасьці, узмацніць апэтыт.
 
 \tipbox{Страта вады ў~1--1,3\,\% ад масы цела пагаршае настрой і канцэнтрацыю, павышае рызыку галаўнога болю. Калі страта вады перавышае 2\,\% ад масы цела, зьніжаюцца нашы фізычныя і кагнітыўныя здольнасьці. Страта 5\,\% і больш вядзе да парушэньняў тэрмарэгуляцыі, што актуальна для тых, хто жыве ў~гарачым клімаце, і спартоўцаў, недахоп больш чым 6--7\,\% прывядзе да моцнай страты трываласьці.}
 
 \paragraph{Дадатковая вадкасьць.}
-Так, спажываючы залішнюю колькасьць вадкасьці, можна нашкодзіць свайму здароўю. Часта людзі спрабуюць піць у~запас, баючыся абязводжваньня, што можа быць небясьпечна. Дадатковае ўжываньне вадкасьці не ўплывае на зьніжэньне рызыкі захворваньняў (даныя аналізу назіраньняў на 120 тысячах людзей цягам 10 гадоў), залішняя вада нават не спрыяе ўвільгатненьню вашай скуры і не ўплывае на працягласьць жыцьця. Такім чынам, спажываньне вады пры абязводжваньні дапамагае, а~вось пітво звыш нормы ані не ўплывае на здароўе, за выключэньнем шэрагу невялікіх рызык.
+Так, спажываючы залішнюю колькасьць вадкасьці, можна нашкодзіць свайму здароўю. Часта людзі спрабуюць піць у~запас, баючыся абязводжваньня\index{абязводжваньне}, што можа быць небясьпечна. Дадатковае ўжываньне вадкасьці не ўплывае на зьніжэньне рызыкі захворваньняў (даныя аналізу назіраньняў на 120 тысячах людзей цягам 10 гадоў), залішняя вада нават не спрыяе ўвільгатненьню вашай скуры і не ўплывае на працягласьць жыцьця. Такім чынам, спажываньне вады пры абязводжваньні\index{абязводжваньне} дапамагае, а~вось пітво звыш нормы ані не ўплывае на здароўе, за выключэньнем шэрагу невялікіх рызык.
 
 \paragraph{Вадкія калёрыі.}
-Дасьледаваньні паказваюць, што спажываньне фруктовых сокаў, квасу ды іншых салодкіх вадкасьцяў небясьпечнае для здароўя. У~сярэднім у~1 шклянцы фруктовага соку бяз цукру зьмяшчаецца каля 20--23 грамаў цукраў. Хуткасьць усмоктваньня цукру з~соку нашмат вышэйшая, чым з~цэльнага фрукта: садавіна як такая не дае магчымасьці пераесьці. Арганічныя кіслоты ў~соках маскуюць цукар, таму людзі недаацэньваюць рэальную небясьпеку сокаў для здароўя і іх калярыйнасьць. Вадкія калёрыі спрыяюць карыесу (цукар + кіслата), павялічваюць рызыку атлусьценьня, цукровага дыябэту. Салодкія напоі прыводзяць да пагаршэньня работы мозгу і ў~маладых людзей, зьніжаюць аб'ём мозгу і павялічваюць рызыку хваробы Альцгеймэра. Шклянка апэльсінавага соку прыгнятае эфэктыўнасьць тлушчаспаленьня на 25\,\%. Устаноўленая карысьць фрукта не пераносіцца аўтаматычна на сок~--- ужываньне граната зьніжае рызыку разьвіцьця сардэчных хваробаў, а~гранатавы сок не валодае падобнымі эфэктамі.
+Дасьледаваньні паказваюць, што спажываньне фруктовых сокаў, квасу ды іншых салодкіх вадкасьцяў небясьпечнае для здароўя. У~сярэднім у~1 шклянцы фруктовага соку бяз цукру зьмяшчаецца каля 20--23 грамаў цукраў. Хуткасьць усмоктваньня цукру з~соку нашмат вышэйшая, чым з~цэльнага фрукта: садавіна як такая не дае магчымасьці пераесьці. Арганічныя кіслоты ў~соках маскуюць цукар, таму людзі недаацэньваюць рэальную небясьпеку сокаў для здароўя і іх калярыйнасьць. Вадкія калёрыі спрыяюць карыесу (цукар + кіслата), павялічваюць рызыку атлусьценьня, цукровага дыябэту. Салодкія напоі прыводзяць да пагаршэньня работы мозгу і ў~маладых людзей, зьніжаюць аб'ём мозгу і павялічваюць рызыку хваробы Альцгаймэра\index{хвароба!Альцгаймэра}. Шклянка апэльсінавага соку прыгнятае эфэктыўнасьць тлушчаспаленьня на 25\,\%. Устаноўленая карысьць фрукта не пераносіцца аўтаматычна на сок~--- ужываньне граната зьніжае рызыку разьвіцьця сардэчных хваробаў, а~гранатавы сок не валодае падобнымі эфэктамі.
 
 \subsection{Асноўныя прынцыпы}
 
@@ -36,13 +36,13 @@
 Калі вы п'яце, зьлёгку затрымліваючы ваду, невялікімі глыткамі і смакуючы, то адбываецца больш эфэктыўнае ўхіленьне смагі. Нават калі мы папілі да адсутнасьці смагі, то папоўнілі балянс ня цалкам. Арганізм працуе па мэтадзе каліброўкі: спачатку ён папаўняе адразу 50--80\,\% дэфіцыту вадкасьці, а~потым павольна дабірае астатняе. Смага зьнікае яшчэ да таго, як вада ўсмоктваецца страўнікам. Такое паступовае аднаўленьне страты вадкасьці больш натуральнае для нас. Таму не сьпяшайцеся выпіваць адразу велізарную колькасьць вадкасьці, лепей гэта рабіць пакрысе, памяншаючы аб'ёмы выпітага.
 
 \paragraph{Вызначце недахоп вадкасьці.} Навучыцеся ідэнтыфікаваць у~сябе простыя прыкметы недахопу вады:
-\begin{enumerate}[itemindent=3em,labelwidth=1.5em,leftmargin=0pt,nosep]
+\begin{enumerate}
   \item смага~--- самы надзейны крытэр;
-  \item зьмена колеру і колькасьці мачы (чым цямнейшая мача, чым яе менш і мацнейшы пах, тым мацнейшае абязводжваньне);
+  \item зьмена колеру і колькасьці мачы (чым цямнейшая мача, чым яе менш і мацнейшы пах, тым мацнейшае абязводжваньне\index{абязводжваньне});
   \item зьмены скуры: зьніжэньне тургору скуры, вялікая выяўленасьць зморшчынаў (іх можна праверыць шчыпковым тэстам: ушчыкніце сябе і адпусьціце~--- скура павінна хутка расправіцца, у~адваротным выпадку ёсьць недахоп вады);
   \item зьмена сьлізьніцаў (сухасьць у~роце, перасыханьне сьлізьніцы носа, сухі язык і г.~д.);
   \item цяглічная слабасьць, павелічэньне частаты пульса;
-  \item вы ў~стрэсе і не заўважаеце абязводжваньня, зрабіце тэставы глыток.
+  \item вы ў~стрэсе і не заўважаеце абязводжваньня\index{абязводжваньне}, зрабіце тэставы глыток.
 \end{enumerate}
 
 \subsection{Як трымацца правіла? Ідэі і парады}
@@ -53,7 +53,7 @@
 \tipbox{Пры стрэсе павялічваецца актыўнасьць сымпацыйнай нэрвовай сыстэмы, што гняце работу сьлінных залозаў і выклікае адчуваньне перасыханьня ў~роце. Пасьля аднаго глытка вады жаданьне піць зьнікае. Увільгатненьне ротавай поласьці прыбірае фальшывую смагу.}
 
 \paragraph{Прапала смага.}
-Смага часта можа зьнікаць, асабліва ва ўмовах хранічнага стрэсу (калі, па лёгіцы арганізму, ужо лепш абязводжваньне, чым страта натрыю). Але тэставы глыток вады актывуе ўтоенае пачуцьцё смагі, і зьяўляецца пачуцьцё задавальненьня.
+Смага часта можа зьнікаць, асабліва ва ўмовах хранічнага стрэсу (калі, па лёгіцы арганізму, ужо лепш абязводжваньне\index{абязводжваньне}, чым страта натрыю). Але тэставы глыток вады актывуе ўтоенае пачуцьцё смагі, і зьяўляецца пачуцьцё задавальненьня.
 
 \paragraph{Не адкладайце ваду далёка.}
 Дасьледаваньні паказваюць, што пры фізычнай дзейнасьці ў~гарачым клімаце спартоўцы выпіваюць толькі 50\,\% ад страчанай вадкасьці. Таму трэба пэрыядычна рабіць тэставы глыток, а~не адкладаць далёка бутэльку, калі вы адзін раз папілі. Не, адзін раз поўнасьцю дэфіцыт не папоўніць!
@@ -65,7 +65,7 @@
 Газаваная вада (насычаная вуглякіслым газам) мае рознаскіраваныя эфэкты на здароўе. Так, яна можа дапамагаць пры праблемах з~кішачнікам, можа зьмяншаць пачуцьцё голаду за кошт павелічэньня аб'ёму ў~страўніку. Аднак вялікія яе колькасьці могуць залішне стымуляваць страўнікава-кішачны тракт у~чыстых прамежках, што непажадана. Кіслотнасьці газіроўкі не асьцерагайцеся, яна нязначная.
 
 \paragraph{Мінэральны склад вады.}
-Існуюць комплексныя сыстэмы ацэнкі якасьці вады, якія ўлічваюць дзясяткі паказьнікаў. Вылучаюць небясьпечныя для здароўя паказьнікі, якія непажадана перавышаць, карысныя злучэньні, якія патрабуюцца для здароўя. Многія са злучэньняў, нават тыя, што перавышаюць норму, могуць быць карысныя. Напрыклад, больш высокія канцэнтрацыі літыю ў~вадзе зьніжаюць рызыку дэпрэсій, суіцыдаў і хваробы Альцгеймэра. Такім чынам, невялікае перавышэньне горных водоў па ўтрыманьні літыю можа быць карысным.
+Існуюць комплексныя сыстэмы ацэнкі якасьці вады, якія ўлічваюць дзясяткі паказьнікаў. Вылучаюць небясьпечныя для здароўя паказьнікі, якія непажадана перавышаць, карысныя злучэньні, якія патрабуюцца для здароўя. Многія са злучэньняў, нават тыя, што перавышаюць норму, могуць быць карысныя. Напрыклад, больш высокія канцэнтрацыі літыю ў~вадзе зьніжаюць рызыку дэпрэсій, суіцыдаў і хваробы Альцгаймэра\index{хвароба!Альцгаймэра}. Такім чынам, невялікае перавышэньне горных водоў па ўтрыманьні літыю можа быць карысным.
 
 \paragraph{Жорсткасьць вады.}
 Жорсткасьць вады зьвязаная з~утрыманьнем у~ёй соляў кальцыю і магнію, дыстыляваная вада цалкам ачышчаная ад соляў. Занадта мяккая вада нават небясьпечнейшая, чым жорсткая. Залішняе ўжываньне мяккай вады, у~тым ліку дыстыляванай, можа павышаць рызыку сардэчна-сасудзістых захворваньняў і вымываць карысныя мінэралы з~арганізму. У~рэгіёнах з~жорсткай вадой сьмяротнасьць ад сардэчных захворваньняў вышэйшая, а~вось на камяні ў~нырках і жоўцевым пухіры жорсткая вада ніяк не ўплывае (ёсьць даныя, што нават можа зьмяншаць іх рызыку).
@@ -82,7 +82,7 @@
 Трымайце прыгожую шклянку і графін каля сябе. Піць са шклянога і прыгожага посуду бясьпечней і прыемней, чым з~плястыкавай бутэлькі.
 
 \paragraph{Кафэінзьмяшчальныя вадкасьці.}
-Зьвярніце ўвагу, што лішак кафэіну ў~гарбаце, каве і г.~д. можа мець вялікую колькасьць нэгатыўных аспэктаў, асабліва ў~адчувальных да іх людзей~--- ад бессані да трывожнасьці. Пазьбягайце спажываньня кафэіну пасьля 15:00.
+Зьвярніце ўвагу, што лішак кафэіну\index{кафэін} ў~гарбаце, каве і г.~д. можа мець вялікую колькасьць нэгатыўных аспэктаў, асабліва ў~адчувальных да іх людзей~--- ад бессані да трывожнасьці. Пазьбягайце спажываньня кафэіну\index{кафэін} пасьля 15:00.
 
 \paragraph{Час дня.}
 Разумна выпіць ваду раніцай (страта вадкасьці ноччу), пасьля фізычнай актыўнасьці, меней піць на ноч.
