--- a/nutrition/chapter23.tex
+++ b/nutrition/chapter23.tex
@@ -6,11 +6,11 @@
 
 \subsection{Як зьявілася праблема?}
 
-У старажытныя часы наша асяродзьдзе было пазбаўленае крыніцаў солі, за выключэньнем узьбярэжжа, атрымаць натрый нашы продкі маглі толькі праз жывёльную ежу. Нашаму арганізму патрабуецца натрый, таму ва ўмовах яго дэфіцыту ў~нас сфармаваліся магутныя сыстэмы яго ўтрыманьня. Цікава, што сыстэмы ўтрыманьня натрыю (праз гармон альдастэрон) актывуюцца ня толькі пры яго страце, але і пры стрэсе. Бо стрэс~--- гэта і страта крыві, і інтэнсіўныя фізычныя нагрузкі, у~тым і іншым выпадку  гэта страта натрыю і вады. Таму стрэс можа запусьціць мэханізмы ўтрыманьня натрыю і вады ў~арганізьме. Удалечыні ад мора паляўнічыя-зьбіральнікі маглі абыходзіцца бяз солі, але пераход да земляробства зь пераважна вугляводнай ежай патрабуе яе наяўнасьці (саляны голад), так яна стала дарагім таварам у~мінулым.
+У старажытныя часы наша асяродзьдзе было пазбаўленае крыніцаў солі, за выключэньнем узьбярэжжа, атрымаць натрый нашы продкі маглі толькі праз жывёльную ежу. Нашаму арганізму патрабуецца натрый, таму ва ўмовах яго дэфіцыту ў~нас сфармаваліся магутныя сыстэмы яго ўтрыманьня. Цікава, што сыстэмы ўтрыманьня натрыю (праз гармон альдастэрон\index{альдастэрон}) актывуюцца ня толькі пры яго страце, але і пры стрэсе. Бо стрэс~--- гэта і страта крыві, і інтэнсіўныя фізычныя нагрузкі, у~тым і іншым выпадку  гэта страта натрыю і вады. Таму стрэс можа запусьціць мэханізмы ўтрыманьня натрыю і вады ў~арганізьме. Удалечыні ад мора паляўнічыя-зьбіральнікі маглі абыходзіцца бяз солі, але пераход да земляробства зь пераважна вугляводнай ежай патрабуе яе наяўнасьці (саляны голад), так яна стала дарагім таварам у~мінулым.
 
 А вось калій багата ўтрымліваецца ў~расьліннай ежы~--- ад клубняў да садавіны і ягадаў. Паляўнічыя-зьбіральнікі елі расьлінную ежу штодня, таму ў~нас у~арганізьме няма мэханізмаў назапашваньня і ўтрыманьня калію! Мы ніколі не адчувалі патрэбы ўтрымліваць у~арганізьме калій, больш за тое, пры стрэсе арганізм нават актыўна пазбаўляецца ад калію.
 
-\tipbox{Нашаму арганізму патрабуецца натрый, таму ва ўмовах яго дэфіцыту сфармаваліся магутныя сыстэмы яго ўтрыманьня. Цікава, што сыстэмы ўтрыманьня натрыю (праз гармон альдастэрон) актывуюцца ня толькі пры яго страце, але і пры стрэсе. Бо стрэс~--- гэта і страта крыві, і інтэнсіўныя фізычныя нагрузкі, у~тым і іншым выпадку гэта страта натрыю і вады.}
+\tipbox{Нашаму арганізму патрабуецца натрый, таму ва ўмовах яго дэфіцыту сфармаваліся магутныя сыстэмы яго ўтрыманьня. Цікава, што сыстэмы ўтрыманьня натрыю (праз гармон альдастэрон\index{альдастэрон}) актывуюцца ня толькі пры яго страце, але і пры стрэсе. Бо стрэс~--- гэта і страта крыві, і інтэнсіўныя фізычныя нагрузкі, у~тым і іншым выпадку гэта страта натрыю і вады.}
 
 Сучасная праблема балянсу натрый~--- калій узьнікла, бо соль стала шырока даступнай і дадаецца ва ўсе прадукты (схаваная соль), формула «цукар, тлушч, соль»~--- гэта класічная трыяда фастфуду. Чым больш мы ямо апрацаваных прадуктаў, тым больш ямо натрыю. А~вось зьніжэньне спажываньня цэльных расьлінных прадуктаў прывяло да таго, што мы спажываем нашмат менш калію, чым трэба. Цяпер сярэдні чалавек мае сутачнае спажываньне натрыю ў~2--3 разы вышэй за норму, а~калію, наадварот, у~2--3 разы менш за норму.
 
@@ -29,9 +29,9 @@
 Залішняе спажываньне солі зьвязанае з~падвышанай рызыкай раку страўніка (у спалучэньні з~Helicobacter pylori) і з~ракам тоўстага кішачніка.
 
 \paragraph{Азызласьць.}
-Вельмі частай праблемай зьяўляецца пастознасьць, друзласьць, азызласьць, млявасьць падскурнай клятчаткі ў~цэлым або ў~пэўных частках цела. Адкуль бярэцца друзласьць у~здаровага чалавека бязь першаснай паталёгіі лімфатычнай сыстэмы? Вінаваты залішні натрый, які назапашваецца ў~падскурна-тлушчавай клятчатцы, дзе стымулюе павялічаны рост (гіпэрплазію) лімфатычных сасудаў з~затрымкай вадкасьці. Сетка лімфатычных сасудаў расьце, а~іх тонус падае, і гэта ўсё прыводзіць да затрымкі вадкасьці. Памятайце, што ўвесь лішак натрыю і зьвязанай вады захоўваецца менавіта ў~падскурна-тлушчавай клятчатцы!
+Вельмі частай праблемай зьяўляецца пастознасьць, друзласьць, азызласьць, млявасьць падскурнай клятчаткі ў~цэлым або ў~пэўных частках цела. Адкуль бярэцца друзласьць у~здаровага чалавека бязь першаснай паталёгіі лімфатычнай сыстэмы? Вінаваты залішні натрый, які назапашваецца ў~падскурна-тлушчавай клятчатцы, дзе стымулюе павялічаны рост (гіпэрплазію\index{гіпэрплазія}) лімфатычных сасудаў з~затрымкай вадкасьці. Сетка лімфатычных сасудаў расьце, а~іх тонус падае, і гэта ўсё прыводзіць да затрымкі вадкасьці. Памятайце, што ўвесь лішак натрыю і зьвязанай вады захоўваецца менавіта ў~падскурна-тлушчавай клятчатцы!
 
-\tipbox{Залішні натрый назапашваецца ў~падскурна-тлушчавай клятчатцы, дзе стымулюе павялічаны рост (гіпэрплазію) лімфатычных сасудаў з~затрымкай вадкасьці. Сетка лімфатычных сасудаў расьце, а~іх тонус падае, і гэта ўсё прыводзіць да затрымкі вадкасьці.}
+\tipbox{Залішні натрый назапашваецца ў~падскурна-тлушчавай клятчатцы, дзе стымулюе павялічаны рост (гіпэрплазію\index{гіпэрплазія}) лімфатычных сасудаў з~затрымкай вадкасьці. Сетка лімфатычных сасудаў расьце, а~іх тонус падае, і гэта ўсё прыводзіць да затрымкі вадкасьці.}
 
 \paragraph{Імунітэт.}
 Натрый стымулюе імунітэт, што павялічвае рызыку аўтаімунных захворваньняў. Больш высокая канцэнтрацыя натрыю зьяўляецца актыватарам імуннай сыстэмы, соль стымулюе актыўнасьць імуннай сыстэмы на ўсіх узроўнях~--- ад дыфэрэнцыяваньня Т-лімфацытаў да актыўнасьці макрафагаў. А~вось дэфіцыт натрыю можа аслабляць імунную сыстэму. Навукова даведзена, што лішак солі павялічвае рызыку захварэць на расьсеяны склероз. Павелічэньне колькасьці алергій зьвязанае з~тым, што высокасолевая дыета парушае імунны адказ.
@@ -72,7 +72,7 @@
 Занадта нізкае ўтрыманьне натрыю небясьпечнае і шкоднае. Але дэфіцыт натрыю ў~людзей, якія спажываюць дастаткова жывёльнай ежы і хоць зрэдку нешта з~гатовай ежы, малаімаверны. У~групе рызыкі могуць быць вэганы (якія не ўжываюць соль і гатовыя прадукты), людзі, якія жывуць у~гарачым клімаце, занятыя цяжкай фізычнай працай, пасьля дыярэі і да т.~п.
 
 \paragraph{Салодкае (і крухмалістае) і азызласьць.}
-Інсулін дзейнічае на ныркі, стымулюючы затрымку натрыю і вадкасьці, выдзяленьне альдастэрону. Чым вышэйшая глікемічная нагрузка і чым меншая ваша адчувальнасьць да інсуліну, тым больш вы азызлыя і горай выглядаеце.
+Інсулін дзейнічае на ныркі, стымулюючы затрымку натрыю і вадкасьці, выдзяленьне альдастэрону\index{альдастэрон}. Чым вышэйшая глікемічная нагрузка і чым меншая ваша адчувальнасьць да інсуліну, тым больш вы азызлыя і горай выглядаеце.
 
 \paragraph{Стрэс.}
 Стрэс узмацняе цягу да салёнага і сам правакуе затрымку вадкасьці і натрыю. Пры стрэсе пазьбягайце салёнага і салодкага, сьпіце дастатковую колькасьць часу. Рэляксацыя палепшыць ваш стан і зьнізіць азызласьць. Пры хранічным стрэсе і паслабленьні функцыі наднырачнікаў можа ўзьнікаць дэфіцыт натрыю, бо арганізму яго складаней утрымліваць.
