--- a/nutrition/chapter5.tex
+++ b/nutrition/chapter5.tex
@@ -14,7 +14,7 @@
 Пытаньне вячэрняга харчаваньня і вячэры шчыльна зьвязана з~работай нашых цыркадных біярытмаў\index{цыркадныя рытмы}. Велізарная колькасьць сьвятлодыёдных выпраменьваньняў з~высокаю доляй сьвятла сіняга спэктру (тэлефоны, кампутары, пляншэты, тэлевізары, сьвятлодыёдныя лямпы і інш.) зьбіваюць нашы ўнутраныя гадзіньнікі. Сьвятло такога спэктру дае сыгнал аб тым, што цяпер дзень, і абвастрае пачуцьцё голаду.
 
 \paragraph{Гіперфагія\index{гіперфагія} і эпідэмія стрэсу.}
-Хранічны стрэс становіцца распаўсюджанай зьявай. Калі востры стрэс часьцей прытупляе апэтыт, то хранічны~--- наадварот, узмацняе з~прычыны падвышанай выпрацоўкі грэліну\index{грэлін}. Стомленасьць і голад на глебе стрэсу павялічваюцца ўвечары, што прыводзіць да пераяданьня. Больш за тое, грэлін\index{грэлін} узбуджае нэрвовую сыстэму, таму людзі вымушаныя есьці для таго, каб заснуць, выкарыстоўваючы ежу як снатворнае. Злоўжываньне кафеінам\index{кафеін} і алькаголем\index{алькаголь} таксама пагаршае разлады прыёму ежы.
+Хранічны стрэс становіцца распаўсюджанай зьявай. Калі востры стрэс часьцей прытупляе апэтыт, то хранічны~--- наадварот, узмацняе з~прычыны падвышанай выпрацоўкі грэліну\index{грэлін}. Стомленасьць і голад на глебе стрэсу павялічваюцца ўвечары, што прыводзіць да пераяданьня. Больш за тое, грэлін\index{грэлін} узбуджае нэрвовую сыстэму, таму людзі вымушаныя есьці для таго, каб заснуць, выкарыстоўваючы ежу як снатворнае. Злоўжываньне кафэінам\index{кафэін} і алькаголем\index{алькаголь} таксама пагаршае разлады прыёму ежы.
 
 \paragraph{Геданічная гіпэрфагія} (імкненьне есьці дзеля атрыманьня задавальненьня пры адсутнасьці дэфіцыту энэргіі).
 Акрамя стрэсу, існуе і сындром дэфіцыту задаволенасьці, калі назіраецца зьніжэньне здольнасьці атрымліваць задавальненьне ад жыцьця. Такія людзі ядуць, бо ім сумна, тужліва, самотна, мала радасьцяў, і выбіраюць пры гэтым максымальна калярыйныя прадукты, нездаровыя спалучэньні мучнога, тлустага, салодкага, смажанага, салёнага і інш.
@@ -71,10 +71,10 @@
 \paragraph{Стрэс увечары.}
 Вячэрні стрэс~--- частая прычына страты кантролю над харчовымі паводзінамі і пераяданьня. Пры стрэсе нас цягне на тлустае, салодкае і салёнае. Гэта частка ахоўнай рэакцыі, бо наш арганізм успрымае стрэс як фізычную актыўнасьць («нападаю~--- уцякаю»), таму стымулюе нас папоўніць каляраж. Антыстрэсавыя тэхнікі выдатна памяншаюць апэтыт і спрыяюць глыбейшаму сну: цягліцавае паслабленьне, вядзеньне дзёньніка, глыбокае раўнамернае дыханьне, масажны кілімок з~іголкамі, фрырайтынг\index{фрырайтынг}\footnote{Фрырайтынг (ці вольнае пісьмо)~--- тэхніка і методыка пісьма, якая дапамагае знайсьці неардынарныя рашэньні і ідэі, падобная з~мэтадам мазгавога штурму.}, ёга дапамагаюць палепшыць самаадчуваньне і зьнізіць узровень стрэсу, а~адпаведна і апэтыту. Усе працэдуры, накіраваныя на цела, павялічваюць выпрацоўку антыстрэсавага гармону аксытацыну\index{аксытацын}: водныя працэдуры, масаж, расьціраньні, саўна, самамасаж і да т.~п.
 
-\paragraph{Кафеін\index{кафеін}.}
-Кафеін\index{кафеін} утрымліваецца ня толькі ў~каве, але і ў~гарбаце, шматлікіх напоях, батончыках і леках. Яго сярэдні пэрыяд паўраспаду складае 4--5 гадзінаў, але дзеяньне можа адчувацца і ўсе восем гадзінаў. Таму калі вы хочаце пазьбегнуць узьдзеяньня кафеіну на сон, то ня варта ўжываць каву, гарбату ды іншыя кафеінавыя напоі пасьля 12:00–14:00 гадзінаў. Навукоўцы высьветлілі, што кафеін ссоўвае біярытмы на больш позьні час, скарачае час павольнага сну. Залішняе ўжываньне кафеіну прыводзіць да парушэньня сну і зьяўленьня ранішняй стомленасьці. Ёсьць людзі, генэтычна вельмі адчувальныя да кафеіну,~--- у~іх ён выклікае трывогу і ўзмацняе нэўроз. Такім людзям абмежаваньне кафеіну\index{кафеін} вельмі станоўча адаб'ецца на здароўе.
+\paragraph{Кафэін\index{кафэін}.}
+Кафэін\index{кафэін} утрымліваецца ня толькі ў~каве, але і ў~гарбаце, шматлікіх напоях, батончыках і леках. Яго сярэдні пэрыяд паўраспаду складае 4--5 гадзінаў, але дзеяньне можа адчувацца і ўсе восем гадзінаў. Таму калі вы хочаце пазьбегнуць узьдзеяньня кафэіну на сон, то ня варта ўжываць каву, гарбату ды іншыя кафэінавыя напоі пасьля 12:00–14:00 гадзінаў. Навукоўцы высьветлілі, што кафэін ссоўвае біярытмы на больш позьні час, скарачае час павольнага сну. Залішняе ўжываньне кафэіну прыводзіць да парушэньня сну і зьяўленьня ранішняй стомленасьці. Ёсьць людзі, генэтычна вельмі адчувальныя да кафэіну,~--- у~іх ён выклікае трывогу і ўзмацняе нэўроз. Такім людзям абмежаваньне кафэіну\index{кафэін} вельмі станоўча адаб'ецца на здароўе.
 
-\tipbox{Сярэдні пэрыяд кафеіну\index{кафеін} паўраспаду складае 4--5 гадзінаў, але дзеяньне можа адчувацца і ўсе восем гадзінаў. Таму калі вы хочаце пазьбегнуць узьдзеяньня кафеіну\index{кафеін} на сон, то ня варта ўжываць каву, гарбату ды іншыя кафеінавыя напоі пасьля 12:00–14:00 гадзінаў.}
+\tipbox{Сярэдні пэрыяд кафэіну\index{кафэін} паўраспаду складае 4--5 гадзінаў, але дзеяньне можа адчувацца і ўсе восем гадзінаў. Таму калі вы хочаце пазьбегнуць узьдзеяньня кафэіну\index{кафэін} на сон, то ня варта ўжываць каву, гарбату ды іншыя кафэінавыя напоі пасьля 12:00–14:00 гадзінаў.}
 
 \paragraph{Алькаголь\index{алькаголь}.}
 Алькаголь\index{алькаголь}~--- вельмі калярыйны прадукт. Ён хоць і паскарае засынаньне, але зьмяншае якасьць сну, асабліва ў~другой палове ночы, узмацняе храп, выклікае абязводжваньне\index{абязводжваньне}, пры працяглым ужываньні можа выклікаць бессань. Кладзіцеся спаць цьвярозымі.
