--- a/willpower/chapter11.tex
+++ b/willpower/chapter11.tex
@@ -396,7 +396,7 @@
 
 Адрэгулюйце колькасьць сьвятла. Частая праблема памяшканьняў~--- малая колькасьць сьвятла, цьмянае сьвятло можа пагаршаць настрой і зьніжаць энэргічнасьць. Сьветлавая плынь~--- гэта колькасьць сьвятла, яна вымяраецца ў~люменах, як правіла, паказана на самой лямпе. Яркае сьвятло добрае раніцай і днём, яно бадзёрыць і падтрымлівае тонус. Старайцеся падбіраць сьвятло ня менш за 200-250 люмен на квадратны мэтар, гэта значыць, што тры лямпачкі на пакой будзе занадта мала. У зале ў~мяне 9 лямпаў па 500 люксаў, і стае іх толькі на цэнтар пакоя. На вуліцы нават у~пахмурнае надвор'е~--- 1000 люмен, а~ў сонечны дзень~--- 10.000 лм. Вымераць сьветлавую плынь можна люксомэтрам, прыблізна ацаніць камерай тэлефона, напрыклад з~праграмай Lux light meter. Нашыя вочы адаптуюцца да розных узроўняў асьветленасьці, таму візуальна параўноўваць даволі складана.
 
-Спэктар сьвятла лямпы. Спэктар бывае бесьперапынным, як у~сонца ці лямпы напальваньня, ці рваным, калі ў~ім некалькі палосаў. Таксама вылучаюць спэктры зь перавагай рознага сьвятла. Большасьць сьвятлодыёдных лямпаў маюць скажоны спэктар зь сінім пікам. Гэта можа нэгатыўна паўплываць як на выпрацоўку мэлятаніну ўвечары, так і парушыць рэгуляцыю працы вока, бо да сіняга сьвятла асабліва адчувальныя гангліёзныя клеткі. У нашай сятчатцы ёсьць адмысловыя гангліянарныя мэлянапсінавыя клеткі, ад іх па рэтынагіпаталамічным шляху ў~гіпаталамус ідзе сыгнал, які кіруе цыркаднымі рытмамі і адказвае рэакцыю звужэньня зрэнак на сьвятло. Гэтыя клеткі ўзбуджаюцца сінім сьвятлом у~480 нм, таму «пік» у~звычайных сьвятлодыёдных лямпах можа зьбіваць наш унутраны гадзіньнік. Найлепшыя сьвятлодыёдныя лямпы сёньня~--- на аснове тэхналёгіі sunlike, іх спэктар бліжэйшы да сонечнага, бяз сіняга піку і правалу чырвонага. Увечары ж карысьнейшыя лямпы напальваньня, яны ня маюць піку сіняга сьвятла і асабліва не замінаюць выпрацоўцы мэлятаніну.
+Спэктар сьвятла лямпы. Спэктар бывае бесьперапынным, як у~сонца ці лямпы напальваньня, ці рваным, калі ў~ім некалькі палосаў. Таксама вылучаюць спэктры зь перавагай рознага сьвятла. Большасьць сьвятлодыёдных лямпаў маюць скажоны спэктар зь сінім пікам. Гэта можа нэгатыўна паўплываць як на выпрацоўку мэлятаніну ўвечары, так і парушыць рэгуляцыю працы вока, бо да сіняга сьвятла асабліва адчувальныя гангліёзныя клеткі. У нашай сятчатцы ёсьць адмысловыя гангліянарныя мэлянапсінавыя клеткі, ад іх па рэтынагіпаталамічным шляху ў~гіпаталямус ідзе сыгнал, які кіруе цыркаднымі рытмамі і адказвае рэакцыю звужэньня зрэнак на сьвятло. Гэтыя клеткі ўзбуджаюцца сінім сьвятлом у~480 нм, таму «пік» у~звычайных сьвятлодыёдных лямпах можа зьбіваць наш унутраны гадзіньнік. Найлепшыя сьвятлодыёдныя лямпы сёньня~--- на аснове тэхналёгіі sunlike, іх спэктар бліжэйшы да сонечнага, бяз сіняга піку і правалу чырвонага. Увечары ж карысьнейшыя лямпы напальваньня, яны ня маюць піку сіняга сьвятла і асабліва не замінаюць выпрацоўцы мэлятаніну.
 
 Колеравая тэмпэратура~--- гэта ўспрымальны колер лямпы. 4000К~--- гэта ``нэўтральны белы'', мякчэйшы жоўты 2700-2800К, а~высокая сьветлавая тэмпэратура вышэй 5500К можа раздражняць і стамляць.
 
