--- a/willpower/chapter12.tex
+++ b/willpower/chapter12.tex
@@ -108,7 +108,7 @@
 
 Каратыноіды ўбудоўваюцца ў~нашы клеткавыя мэмбраны і абараняюць іх ад пашкоджаньняў свабоднымі радыкаламі, а~таксама цэласнасьць клетак і тканін ад ультрафіялету і ня толькі. Калі такі фізычны мэханізм не спрацаваў, то каратыноіды могуць проста прымаць удар на сябе, акісьляючыся. Агляд дасьледаваньняў пацьвярджае, што людзі, якія ўжываюць дастаткова садавіны і гародніны, багатых каратыноідамі (морква, памідоры, папая), маюць менш паталёгіяў скуры, і іх скура пад дзеяньнем ультрафіялету павольней старэе.
 
-Так, умераная доза бэта-каратыну зьмяншае рэакцыю скуры на дзеяньне ўльтрафіялету. У адным дасьледаваньні параўноўвалі дзеяньне таматнага соку, экстракту тамата і сынтэтычнага лікапэну. Максімум утрыманьня іх у~скуры назіраўся праз 12 тыдняў~--- гэта зьвязана з~хуткасьцю абнаўленьня скуры і кумуляцыі лікапэну. Пры гэтым экстракт тамата на 48\,\% павялічыў фотаабарону, а~вось дадатак лікапэну~--- на 25\,\%. Вось відавочная карысьць цэльнай гародніны, у~якой утрымоўваецца цэлы шэраг фотапратэктараў, такіх як фітафлуен, фітаен і інш. Акрамя гародніны, эфэктыўным для фотаабароны можа быць прыём астаксантыну ў~выглядзе дадаткаў. Толькі пачаць яго прыём трэба за 1-2 месяцы да паездкі ў~гарачыя краіны, каб ён пасьпеў назапасіцца ў~скуры. Фотаахоўнымі ўласьцівасьцямі таксама валодае какава.
+Так, умераная доза бэта-каратыну зьмяншае рэакцыю скуры на дзеяньне ўльтрафіялету. У адным дасьледаваньні параўноўвалі дзеяньне таматнага соку, экстракту тамата і сынтэтычнага лікапэну. Максімум утрыманьня іх у~скуры назіраўся праз 12 тыдняў~--- гэта зьвязана з~хуткасьцю абнаўленьня скуры і кумуляцыі лікапэну. Пры гэтым экстракт тамата на 48\,\% павялічыў фотаабарону, а~вось дадатак лікапэну~--- на 25\,\%. Вось відавочная карысьць цэльнай гародніны, у~якой утрымоўваецца цэлы шэраг фотапратэктараў, такіх як фітафлуен, фітаен і інш. Акрамя гародніны, эфэктыўным для фотаабароны можа быць прыём астаксанцыну ў~выглядзе дадаткаў. Толькі пачаць яго прыём трэба за 1-2 месяцы да паездкі ў~гарачыя краіны, каб ён пасьпеў назапасіцца ў~скуры. Фотаахоўнымі ўласьцівасьцямі таксама валодае какава.
 
 Фотасэнсібілізатары. Будзьце асьцярожныя з~сонцам, калі прымаеце лекі, якія валодаюць уласьцівасьцямі фотасэнсібілізатараў: сульфаніламіды, тэтрацыкліны, фэнатыязіны, фторхіналоны, нестэроідныя супрацьзапаленчыя прэпараты, некаторыя гарманальныя прэпараты, некаторыя віды касмэтыкі~--- з~дадаткамі вітамінаў, рэтынавай кіслаты, этэрных алеяў і г.д..
 
@@ -147,7 +147,7 @@
 
 Разумовая і фізычная актыўнасьць павялічваюцца пры павышэньні тэмпэратуры цела і зьмяншаюцца, калі халодна. Спартоўцы ведаюць, што «разаграваньне» павышае вынікі, а~навукоўцы ўсталявалі, што інтэнсіўныя прысяданьні могуць узбадзёрыць ня горш за кафэін. Пры захворваньні арганізм сам павышае тэмпэратуру, каб больш эфэктыўна змагацца з~хваробай: калі вы будзеце зьбіваць тэмпэратуру, калі яна павышана нязначна і нармальна пераносіцца, гэта перашкодзіць нармальнаму імуннаму адказу!
 
-Аказваецца, нэўроны ў~дугападобным ядры гіпаталамуса, якія рэгулююць апэтыт, адчувальныя і да ваганьняў тэмпэратуры цела. Таму фізычная актыўнасьць, якая падвышае тэмпэратуру цела, ня толькі спальвае калёрыі, але і дапамагае паменшыць голад. А ляжаньне на канапе можа толькі ўзмацніць цягу да ежы. Гэтыя ж нэўроны экспрэсуюць праопіямэлянакартын, таму апэтыт памяншаецца і пры павелічэньні знаходжаньня на сонца, і пры выпрацоўцы эндарфінаў (радасьць, лазня, сэкс і да т.~п.). Таксама на гэтых нэўронах ёсьць адмысловыя тжрмаадчувальныя рэцэптары, якія могуць быць актываваныя рэчывамі, што пакідаюць адчуваньне халоднае (ментол, мята, эўкаліпт) або гарачае (імбір, гваздзік, хрэн, чырвоны перац). Яны таксама стымулююць тлушчаспаленьне і прыгнятаюць апэтыт.
+Аказваецца, нэўроны ў~дугападобным ядры гіпаталямуса, якія рэгулююць апэтыт, адчувальныя і да ваганьняў тэмпэратуры цела. Таму фізычная актыўнасьць, якая падвышае тэмпэратуру цела, ня толькі спальвае калёрыі, але і дапамагае паменшыць голад. А ляжаньне на канапе можа толькі ўзмацніць цягу да ежы. Гэтыя ж нэўроны экспрэсуюць праопіямэлянакартын, таму апэтыт памяншаецца і пры павелічэньні знаходжаньня на сонца, і пры выпрацоўцы эндарфінаў (радасьць, лазня, сэкс і да т.~п.). Таксама на гэтых нэўронах ёсьць адмысловыя тжрмаадчувальныя рэцэптары, якія могуць быць актываваныя рэчывамі, што пакідаюць адчуваньне халоднае (ментол, мята, эўкаліпт) або гарачае (імбір, гваздзік, хрэн, чырвоны перац). Яны таксама стымулююць тлушчаспаленьне і прыгнятаюць апэтыт.
 
 Цеплавое забруджваньне. Цікава, што мы з~вамі мярзьлівейшыя за сваіх продкаў. Яшчэ 150 гадоў таму нармальная тэмпэратура цела была роўна 37°С, а~сёньня сярэднія значэньні дасягаюць 36,4°С. Сярод прычын гэтага абмяркоўваецца як зьніжэньне колькасьці інфэкцыяў, так і зьніжэньне базавага абмену празь нізкую фізычную актыўнасьць, зьніжэньне тэрмагенэзу праз знаходжаньне ў~пастаянным цеплавым камфорце. Калі раней наш арганізм адаптаваўся для барацьбы зь пераахаладжэньнем, то цяпер нам пагражае пераграваньне.
 
@@ -159,7 +159,7 @@
 
 Разьяднальныя бялкі (UCP) знаходзяцца на мэмбране мітахондрый і спрыяюць таму, што назапашаная ў~выглядзе розьніцы патэнцыялаў энэргія сыходзіць у~цеплыню, г.~зн. разьядноўваюць акісьленьне і фасфараляваньне. Падобныя выдаткі аказваюцца вельмі карыснымі для арганізма.
 
-Аказалася, што UCP-1 у~бурай тлушчавай тканцы спрыяе падтрыманьню нармальнай вагі (паляпшаючы адчувальнасьць да інсуліну, павялічваючы тлушчаспаленьне і інш.), UCP-2 у~гіпакампе паляпшае нэўрагенэз і нэўраплястычнасьць, а~ў гіпаталамусе~--- уплывае на агульны ўзровень мэтабалізму і падаўжае жыцьцё. UCP-2 таксама абараняе ад лішку актыўных формаў кіслароду (АФК), а~UCP-3 у~цягліцах паляпшае эфэктыўнасьць тлушчаспаленьня пры фізычнай актыўнасьці.
+Аказалася, што UCP-1 у~бурай тлушчавай тканцы спрыяе падтрыманьню нармальнай вагі (паляпшаючы адчувальнасьць да інсуліну, павялічваючы тлушчаспаленьне і інш.), UCP-2 у~гіпакампе паляпшае нэўрагенэз і нэўраплястычнасьць, а~ў гіпаталямусе~--- уплывае на агульны ўзровень мэтабалізму і падаўжае жыцьцё. UCP-2 таксама абараняе ад лішку актыўных формаў кіслароду (АФК), а~UCP-3 у~цягліцах паляпшае эфэктыўнасьць тлушчаспаленьня пры фізычнай актыўнасьці.
 
 Разьяднальныя бялкі ёсьць ня толькі ў~бурым і бэжавым тлушчы, іх шмат у~печані, у~цягліцах, сэрцы і ў~іншых тканках. Холад, фізычная актыўнасьць, пэўны рэжым харчаваньня і прадукты~--- безь перакусаў і без высокавугляводаў ежы~--- павялічваюць колькасьць разьяднальных бялкоў. Навуковец Джон Спікмэн высунуў ідэю, што колькасьць разьяднальных бялкоў, якія зьніжаюць утварэньне актыўных формаў кіслароду, грае ключавую ролю ў~падаўжэньні жыцьця. Гэтая тэорыя таксама носіць назву ``разьяднай і выжывай'' (Uncoupling-to-Survive) і вястуе, што чым вышэй хуткасьць мэтабалізму і чым больш разьяднальных бялкоў, тым лепшая праца мітахондрый і большая працягласьць жыцьця.
 
