--- a/willpower/chapter5.tex
+++ b/willpower/chapter5.tex
@@ -109,7 +109,7 @@
 
 \section{Меней сядзець}
 
-Часта на кансультацыях людзі скардзяцца, што ў~іх літаральна няма сілаў рухацца, яны хутка стамляюцца, адчуваюць сябе дрэнна, а~рух узмацняе апэтыт. Няўжо трэба сябе ламаць і прымушаць бегаць, калі ня хочацца? А рэч у~тым, што пры атлусьценьні, а~таксама пры шэрагу іншых станаў, такіх як лептынарэзістэнтнасьць ды інсулінарэзістэнтнасьць, пры выгараньні, дэпрэсіі, арганізм як бы пераходзіць у~«энэргазьберагальны рэжым», павялічваючы спажываньне калёрыяў і зьніжаючы актыўнасьць. Таму пачынаць у~такім разе трэба з~простай актыўнасьці, з~рухаў, якія прыносяць задавальненьне.
+Часта на кансультацыях людзі скардзяцца, што ў~іх літаральна няма сілаў рухацца, яны хутка стамляюцца, адчуваюць сябе дрэнна, а~рух узмацняе апэтыт. Няўжо трэба сябе ламаць і прымушаць бегаць, калі ня хочацца? А рэч у~тым, што пры атлусьценьні, а~таксама пры шэрагу іншых станаў, такіх як лептынарэзыстэнтнасьць ды інсулінарэзістэнтнасьць, пры выгараньні, дэпрэсіі, арганізм як бы пераходзіць у~«энэргазьберагальны рэжым», павялічваючы спажываньне калёрыяў і зьніжаючы актыўнасьць. Таму пачынаць у~такім разе трэба з~простай актыўнасьці, з~рухаў, якія прыносяць задавальненьне.
 
 Давайце разьбяромся, што мы павінны прыбраць са свайго жыцьця для паляпшэньня фізычнае актыўнасьці. Самае важнае~--- гэта скараціць агульны час, праведзены седзячы і лежачы, і разьбіць прамежкі доўгага становішча седзячы на драбнейшыя, зрабіўшы рухальную актыўнасьць раўнамернай на працягу дня.
 
