--- a/willpower/chapter6.tex
+++ b/willpower/chapter6.tex
@@ -26,7 +26,7 @@
 
 Cон~--- гэта таксама праца. Так-так, сон~--- гэта не пасіўны працэс у~выглядзе ляжаньня на канапе, гэта актыўная дзейнасьць. Сон складаецца з~асобных цыкляў, якія спалучаюць хуткія і павольныя фазы. Падчас павольнага сну адпачывае і аднаўляецца цела, а~ў мозгу адбываецца перанос кароткачасовай памяці ў~доўгачасовую. Падчас хуткага сну актыўны таламус, адбываецца апрацоўка чаканьняў, успаміны перажываюцца нанова, і мы бачым яркія сны, дзе зьмешваюцца рэальнасьць і выдумка, мінулае й будучыня, страхі і задавальненьні. Некаторыя аддзелы мозгу працуюць пры гэтым нават больш актыўна, чым пры няспаньні.
 
-Кіруе сном і цыркаднымі (содневымі) біярытмамі цэлы шэраг мэханізмаў, самым важным зь якіх зьяўляецца супрахіязматычнае ядро гіпаталамуса. У ягоных нэўронах ёсьць пэўныя гены, якія цыклічна кадуюць сінтэз бялкоў CLOCK, BMAL1, PER 1-3. Зьмена канцэнтрацыі гэтых бялкоў уплывае на зарад клеткавай мэмбраны нэўронаў, што вядзе да пэрыядычнай генэрацыі імпульсу. Такая цыклічная актыўнасьць нэўронаў вызначае і ваганьні тэмпэратуры цела, і канцэнтрацыю шматлікіх гармонаў.
+Кіруе сном і цыркаднымі (содневымі) біярытмамі цэлы шэраг мэханізмаў, самым важным зь якіх зьяўляецца супрахіязматычнае ядро гіпаталямуса. У ягоных нэўронах ёсьць пэўныя гены, якія цыклічна кадуюць сінтэз бялкоў CLOCK, BMAL1, PER 1-3. Зьмена канцэнтрацыі гэтых бялкоў уплывае на зарад клеткавай мэмбраны нэўронаў, што вядзе да пэрыядычнай генэрацыі імпульсу. Такая цыклічная актыўнасьць нэўронаў вызначае і ваганьні тэмпэратуры цела, і канцэнтрацыю шматлікіх гармонаў.
 
 Працягласьць аднаго цыклю сну складае ў~сярэднім 90 хвілінаў. Цыклічная актыўнасьць паўшар'яў мозгу і дынаміка паказьнікаў многіх органаў вагаецца з~цыклем даўжынёй у~90 хвілінаў (да 110-120 хвілінаў у~розных людзей). Ёсьць меркаваньне, што падобныя 90-хвілінныя цыклі актыўнасьці характэрныя і для пэрыяду няспаньня. Кожны такі цыкль складаецца зь 70 хвілінаў актыўнай фазы і 20 хвілінаў пасіўнай, у~тым ліку таму рэкамэндуецца працаваць зь перапынкамі, у~сярэднім раз на гадзіну. І невыпадкова сярэдняя працягласьць аднаго фільма ўсталявалася акурат на адзнацы ў~90 хвілінаў.
 
