--- a/willpower/chapter7.tex
+++ b/willpower/chapter7.tex
@@ -196,7 +196,7 @@
 
 Пэрыфэрычныя рэсурсы энэргічнасьці~--- гэта ўсё, што знаходзіцца за межамі чарапной каробкі, гаворка як пра ўзьдзеяньне на цела, так і пра біяхімічныя аспэкты работы арганізма. Для таго каб выявіць магчымыя прычыны зьніжэньня энэргічнасьці на ўзроўні гармонаў і мэтабалізму, трэба правесьці шэраг дасьледаваньняў.
 
-Парушэньні працы шчытавіцы (аналіз ТТГ, вольнага Т3), зьніжэньне тэстастэрону, павышэньне запаленьня (С-рэактыўны бялок і ІЛ-6), нізкі ўзровень жалеза (фэрытын), інсулінарэзістэнтнасьць і высокі глікаваны гемаглабін, лептынарэзістэнтнасьць, высокі гомацыстэін (і нізкія ўзроўні В9 і В12) могуць прыводзіць да зьніжэньня энэргічнасьці.
+Парушэньні працы шчытавіцы (аналіз ТТГ, вольнага Т3), зьніжэньне тэстастэрону, павышэньне запаленьня (С-рэактыўны бялок і ІЛ-6), нізкі ўзровень жалеза (фэрытын), інсулінарэзістэнтнасьць і высокі глікаваны гемаглабін, лептынарэзыстэнтнасьць, высокі гомацыстэін (і нізкія ўзроўні В9 і В12) могуць прыводзіць да зьніжэньня энэргічнасьці.
 
 Базавая нармалізацыя ладу жыцьця таксама вельмі важная. Напрыклад, гіпадынамія зьніжае энэргічнасьць, а~гармон голаду грэлін, наадварот, павялічвае і ўзровень дафаміну, і энэргічнасьць. Ясная рэч, бяз добрага сну тут не абысьціся.
 
@@ -558,7 +558,7 @@
 
 Існуе некалькі гіпотэзаў аб уплыве вагуса на здароўе. Тэорыя Тэера кажа, што вагус уплывае на стрэсаўстойлівасьць і эмацыйны стан і можа вызначаць працягласьць жыцьця і сярэдні IQ. Тэорыя Трэйсі вястуе, што вагус прыгнятае сыстэмнае хранічнае запаленьне і тым самым карысны. Мэдыятарам парасымпатыйнай сыстэмы зьяўляецца ацэтылхалін, які можа зьніжаць узровень запаленьня і рызыку многіх захворваньняў, ад дэпрэсіі да аўтаімунных.
 
-Алькалёіды, якія ўтрымліваюцца ў~пасьлёнавых (перац, таматы, баклажаны і інш.), стымулююць тонус вагуса і зьніжаюць узровень запаленьня ў~арганізьме. Алькалёіды з~пасьлёнавых падобныя па ўзьдзеяньні на нікатынам. Навукоўцы ўсталявалі, што нікатын зьніжае рызыку хваробы Паркінсана, памяншае праявы дэфіцыту ўвагі і гіпэрактыўнасьці, а~таксама частасьць і выяўленасьць сымптомаў шэрагу аўтаімунных хваробаў. Узьдзеяньне нікатыну на дафамінавыя рэцэптары, якія гінуць пры хваробе Паркінсона, даведзенае як для людзей, так і для жывёл. Кожная порцыя пасьлёнавых на 31\,\% можа зьніжаць рызыку хваробы Паркінсана. Наймацнейшы ахоўны эфэкт назіраецца ў~салодкага перцу: хто есьць перцы пяць разоў на тыдзень, захворвае на 50\,\% радзей, чым тыя, хто ўжывае іх менш разу на тыдзень.
+Алькалёіды, якія ўтрымліваюцца ў~пасьлёнавых (перац, таматы, баклажаны і інш.), стымулююць тонус вагуса і зьніжаюць узровень запаленьня ў~арганізьме. Алькалёіды з~пасьлёнавых падобныя па ўзьдзеяньні на нікатынам. Навукоўцы ўсталявалі, што нікатын зьніжае рызыку хваробы Паркінсана, памяншае праявы дэфіцыту ўвагі і гіпэрактыўнасьці, а~таксама частасьць і выяўленасьць сымптомаў шэрагу аўтаімунных хваробаў. Узьдзеяньне нікатыну на дафамінавыя рэцэптары, якія гінуць пры хваробе Паркінсана, даведзенае як для людзей, так і для жывёл. Кожная порцыя пасьлёнавых на 31\,\% можа зьніжаць рызыку хваробы Паркінсана. Наймацнейшы ахоўны эфэкт назіраецца ў~салодкага перцу: хто есьць перцы пяць разоў на тыдзень, захворвае на 50\,\% радзей, чым тыя, хто ўжывае іх менш разу на тыдзень.
 
 Тонус вагуса ўплывае і на нашыя сацыяльныя паводзіны: чым больш у~нас сацыяльных кантактаў, чым больш пазітыву ў~камунікацыі, тым вышэйшы тонус вагуса. А чым вышэйшы тонус, тым больш мы маем камунікуем, -- узьнікае чарговае замкнёнае кола. Нізкі тонус вагуса зьвязаны з~кепскім настроем і пачуцьцём адзіноты. Вызначыць тонус вагуса можна, напрыклад, ацэньваючы ўзровень дыхальнай арытміі~--- гэта невялікае павышэньне пульсу пры ўдыху і зьніжэньне на выдыху. Зручнейшым зьяўляецца вымярэньне тонусу вагуса праз варыябельнасьць пульсу, што даступна ў~шматлікіх праграмах. Чым больш у~нас сацыяльных кантактаў, тым вышэйшы тонус вагуса. Нізкі тонус вагуса зьвязаны з~кепскім настроем і адчуваньнем самоты.
 
