--- a/nutrition/chapter13.tex
+++ b/nutrition/chapter13.tex
@@ -15,7 +15,7 @@
 Наш абмен рэчываў і стрававальная сыстэма адаптаваныя да пэўных прадуктаў, разам зь якімі адбывалася наша эвалюцыя. Менавіта таму цела чалавека генэтычна адаптаванае для спажываньня сапраўднай ежы, а~не высокаачышчаных рэчываў. Сёньня мы ямо занадта шмат прадуктаў, вырабленых з~харчовых рэчываў: мучныя вырабы, піца, дэсерты, хлеб, сасіскі, газіроўка, супы хуткага прыгатаваньня, кансэрвы і інш.
 
 \paragraph{Імітацыя сапраўдных прадуктаў.}
-Імітацыя сапраўднай ежы~--- гэта не сапраўдная ежа, хоць і вельмі да яе падобная. Яна зробленая шляхам камбінаваньня вычышчаных харчовых рэчываў. Напрыклад, хлеб зь вялікай колькасьцю цукру і солі, штучна зроблены сыр ці ёгурт з~сухога малака з~высокай канцэнтрацыяй цукру і сыр натуральнага высьпяваньня з~бактэрыямі, сапраўднае сьметанковае масла ці спрэд на аснове транстлушчаў.
+Імітацыя сапраўднай ежы~--- гэта не сапраўдная ежа, хоць і вельмі да яе падобная. Яна зробленая шляхам камбінаваньня вычышчаных харчовых рэчываў. Напрыклад, хлеб зь вялікай колькасьцю цукру і солі, штучна зроблены сыр ці ёгурт з~сухога малака з~высокай канцэнтрацыяй цукру і сыр натуральнага высьпяваньня з~бактэрыямі, сапраўднае сьметанковае масла ці спрэд на аснове транстлушчаў\index{транстлушчы}.
 
 Цяпер зьявілася магчымасьць мадыфікаваць прадукты харчаваньня. Вядома, у~некаторых выпадках гэта сапраўды карысна для здароўя (даданьне ёду ў~соль, ГМА-рыс зь вітамінам а~для прафіляктыкі сьлепаты, чорныя таматы з~антацыянамі і да т.~п.). Але, на жаль, часьцей мадыфікацыі маюць камэрцыйную мэту прадаць вам больш і прымусіць зьесьці больш менавіта гэтага прадукту, схаваць недахопы, патаньніць вытворчасьць, павялічыць устойлівасьць да пэстыцыдаў, працягнуць тэрмін захоўваньня. А~такія мэты маюць наўвеце даданьне вялікай колькасьці інгрэдыентаў кшталту араматызатараў, фарбавальнікаў, цукру, тлушчу і да т.~п. Гэта вядзе да пераяданьня і адпаведных рызыкаў для здароўя.
 
@@ -33,12 +33,12 @@
 Пры пэўным вонкавым падабенстве сапраўдная ежа і харчовыя рэчывы маюць сур'ёзныя адрозьненьні нават у~засваеньні. Так, усё жывое складаецца з~клетак, у~якіх аптымальна спакаваныя харчовыя рэчывы і якія руйнуюцца пры страваваньні паступова. Сапраўдная ежа патрабуе больш увагі і намаганьняў у~працэсе сталаваньня (дарослая ежа): уменьня даставаць косткі, разьбіраць яе і карыстацца інструмэнтамі (рыба, гарэхі, малюскі), а~таксама дае больш нагрузкі на жавальную сыстэму (параўнайце мяса і фарш, цэльныя гарэхі і арэхавую пасту). Складанасьць ежы гарантуе больш часу для сталаваньня, больш увагі і ўсьвядомленасьць у~час яды. Харчовыя рэчывы лёгка адкусваюцца, адломліваюцца і распадаюцца да вадкасьці без асаблівых намаганьняў жаваньня, што правакуе пераяданьне і аўтаматычную яду. Нават калі назва прадукту застаецца ранейшай і мы ў~яго нічога не дадаём, усё роўна перапрацоўка істотна зьмяняе яго ўласьцівасьці. Так, чым глыбейшая перапрацоўка аўсяных шматкоў, тым мацней павялічваецца іх глікеміческій індэкс (ступень уплыву на ваганьні цукру ў~крыві). Шматкі, якія патрабуюць варкі, маюць індэкс 40, а~тыя, што трэба адно заліць кіпнем,~--- 80. Так, крухмал застаецца крухмалам, але мяняецца даўжыня яго ланцужкоў.
 
 \paragraph{Бясьпека і карысьць.}
-Пры глыбокай перапрацоўцы харчовых рэчываў адбываецца страта шматлікіх карысных некалярыйных кампанэнтаў (мінэралы, вітаміны), акісьленьне нутрыентаў (амінакіслоты, поліненасычаныя тлустыя кіслоты) пры павышанай тэмпэратуры і інтэнсіўным кантакце з~кіслародам паветра, для паляпшэньня вонкавага выгляду прымяняюцца таксычныя хімічныя рэагенты (адбельваньне мукі і г.~д.), хаваюцца дэфэкты вытворчасьці (чым глыбейшая перапрацоўка, тым вышэйшая рызыка забруджваньня таксынамі). У~цэльным прадукце ёсьць лупіна, плёнкі, перагародкі, клеткавыя мэмбраны, свае антыаксыданты, якія абараняюць нутрыенты ад акісьленьня. Менавіта таму экстракты прадуктаў патэнцыйна маюць горшую якасьць, чым цэльныя прадукты, і ня могуць іх цалкам замяніць. Навуковыя дасьледаваньні паказваюць, што харчовыя рэчывы значна больш небясьпечныя для нашага здароўя. Так, перапрацаванае мяса больш павялічвае рызыку раку, чым цэльнае. А~сьвежавыціснутыя сокі~--- рызыку дыябету, нашмат больш, чым цэльная садавіна.
+Пры глыбокай перапрацоўцы харчовых рэчываў адбываецца страта шматлікіх карысных некалярыйных кампанэнтаў (мінэралы, вітаміны), акісьленьне нутрыентаў (амінакіслоты, поліненасычаныя тлустыя кіслоты) пры павышанай тэмпэратуры і інтэнсіўным кантакце з~кіслародам паветра, для паляпшэньня вонкавага выгляду прымяняюцца таксычныя хімічныя рэагенты (адбельваньне мукі і г.~д.), хаваюцца дэфэкты вытворчасьці (чым глыбейшая перапрацоўка, тым вышэйшая рызыка забруджваньня таксынамі). У~цэльным прадукце ёсьць лупіна, плёнкі, перагародкі, клеткавыя мэмбраны, свае антыаксыданты\index{антыаксыданты}, якія абараняюць нутрыенты ад акісьленьня. Менавіта таму экстракты прадуктаў патэнцыйна маюць горшую якасьць, чым цэльныя прадукты, і ня могуць іх цалкам замяніць. Навуковыя дасьледаваньні паказваюць, што харчовыя рэчывы значна больш небясьпечныя для нашага здароўя. Так, перапрацаванае мяса больш павялічвае рызыку раку, чым цэльнае. А~сьвежавыціснутыя сокі~--- рызыку дыябэту, нашмат больш, чым цэльная садавіна.
 
 \paragraph{Харчовыя дабаўкі.}
 Нягледзячы на тое, што большасьць дабавак у~цэлым адносна бясьпечныя для здароўя, сярод іх ёсьць шэраг рэчываў, якія нэгатыўна ўплываюць на яго. Акрамя гэтага, дастаткова складана прадказаць іх сумеснае дзеяньне, патэнцыяваньне эфэктаў можа прыводзіць да непрадказальных і непажаданых наступстваў.
 
-\tipbox{У цэльным прадукце ёсьць лупіна, плёнкі, перагародкі, клеткавыя мэмбраны, свае антыаксыданты, якія абараняюць нутрыенты ад акісьленьня. Менавіта таму экстракты прадуктаў патэнцыйна маюць горшую якасьць, чым цэльныя, і ня могуць іх замяніць.}
+\tipbox{У цэльным прадукце ёсьць лупіна, плёнкі, перагародкі, клеткавыя мэмбраны, свае антыаксыданты\index{антыаксыданты}, якія абараняюць нутрыенты ад акісьленьня. Менавіта таму экстракты прадуктаў патэнцыйна маюць горшую якасьць, чым цэльныя, і ня могуць іх замяніць.}
 
 \subsection{Асноўныя прынцыпы}
 
@@ -49,12 +49,12 @@
 Давайце разьбяром пары «сапраўдны прадукт»~--- «харчовае рэчыва»: цэльнае мяса~--- сасіскі (перапрацаванае мяса), яблыкі~--- яблычны сок, трускаўка~--- клубнічнае жэле, часнык~--- часнычны марынад, памідор~--- кетчуп. Суцэльны авёс~--- цукровыя аўсяныя шматкі хуткага прыгатаваньня. У~такой справе важна абыходзіцца бяз крайнасьцяў. У~рэальнасьці мы сутыкаемся зь вялікай колькасьцю прамежкавых кампанэнтаў, і ня ўсе яны адназначна кепскія. Вось пара: сьвежая рыба~--- рыбная мука (сурымі). Насамрэч тут больш прамежкавых зьвёнаў: сьвежая рыба~--- рыба астуджаная~--- цэльная рыба глыбокай замарозкі~--- растрыбушаная тушка глыбокай замарозкі~--- кавалкі рыбы з~косткамі і скурай~--- філе бяз скуры і костак~--- кансэрвы ва ўласным соку~--- рыбны фарш~--- паўфабрыкаты з~рыбнага фаршу~--- сурымі. Варта аддаваць перавагу верхняму полюсу, выбіраючы даступныя вам варыянты на дадзены момант часу. Розьніца паміж сырой і сьвежазамарожанай рыбай не такая ўжо вялікая, а~вось паміж сурымі і цэльнай рыбай~--- вельмі істотная. Цалкам вартымі варыянтамі будуць сьвежазамарожаная зеляніна і таматная паста (з таматаў, без даданьня цукру і крухмалу).
 
 \paragraph{Сьвежыя прадукты.}
-Сьвежасьць зьяўляецца важнай умовай карысьці і бясьпекі прадуктаў, але многія цэльныя прадукты маюць нядоўгі тэрмін захоўваньня. Пры працяглым захоўваньні ў~бялковых прадуктах адбываецца распад амінакіслотаў да біягенных амінаў, што пагаршае якасьць ежы і можа выклікаць непажаданую рэакцыю. Тлушчы пры працяглым захоўваньні пачынаюць акісьляцца, есьці такія акісьленыя тлушчы вельмі шкодна. Вугляводы захоўваюцца лепш, але садавіна і гародніна працяглага захоўваньня заўважна губляюць свае карысныя ўласьцівасьці. Сьвежую гародніну, якую прывозяцца здалёк, часта зрываюць яшчэ нясьпелай і зь нізкім утрыманьнем карысных кампанэнтаў. Менавіта таму глыбокая замарозка~--- гэта ідэальны варыянт захоўваньня шматлікіх прадуктаў у~цэльным выглядзе, большасьць сваіх карысных уласьцівасьцяў прадукты пры ёй захоўваюць. Заўсёды выбірайце найболей сьвежыя прадукты, навучыцеся адрозьніваць іх вонкава.
+Сьвежасьць зьяўляецца важнай умовай карысьці і бясьпекі прадуктаў, але многія цэльныя прадукты маюць нядоўгі тэрмін захоўваньня. Пры працяглым захоўваньні ў~бялковых прадуктах адбываецца распад амінакіслотаў да біягенных амінаў\index{біягенныя аміны}, што пагаршае якасьць ежы і можа выклікаць непажаданую рэакцыю. Тлушчы пры працяглым захоўваньні пачынаюць акісьляцца, есьці такія акісьленыя тлушчы вельмі шкодна. Вугляводы захоўваюцца лепш, але садавіна і гародніна працяглага захоўваньня заўважна губляюць свае карысныя ўласьцівасьці. Сьвежую гародніну, якую прывозяцца здалёк, часта зрываюць яшчэ нясьпелай і зь нізкім утрыманьнем карысных кампанэнтаў. Менавіта таму глыбокая замарозка~--- гэта ідэальны варыянт захоўваньня шматлікіх прадуктаў у~цэльным выглядзе, большасьць сваіх карысных уласьцівасьцяў прадукты пры ёй захоўваюць. Заўсёды выбірайце найболей сьвежыя прадукты, навучыцеся адрозьніваць іх вонкава.
 
 \paragraph{Правіла «маладой» ежы.}
-Сута гэтага правіла вельмі простая: імкнуцца выбіраць у~якасьці ежы маладзейшыя расьліны (маладое лісьце і парасткі, пупышкі, верхавіны), маладзейшую рыбу і мяса. Вядома, «маладыя» прадукты харчаваньня здаўна шанаваліся як больш лёгказасваяльныя і пажыўныя, але навуковае абгрунтаваньне гэтаму ўдалося атрымаць нядаўна. Навукоўцы давялі, што «маладая» дыета падаўжае жыцьцё, а~«старая» скарачае жыцьцё ў~параўнаньні з~«маладой». У~маладых уцёках чайнага куста відавочна больш карысных рэчываў. А~вось максімальная канцэнтрацыя сульфарафану ўтрымліваецца менавіта ў~парастках брокалі. Што да шкодных спалучэньняў, то ў~маладых прадуктах іх меней. Так, у~буйной і дарослай рыбе ртуці больш, чым у~дробнай і маладой.
+Сута гэтага правіла вельмі простая: імкнуцца выбіраць у~якасьці ежы маладзейшыя расьліны (маладое лісьце і парасткі, пупышкі, верхавіны), маладзейшую рыбу і мяса. Вядома, «маладыя» прадукты харчаваньня здаўна шанаваліся як больш лёгказасваяльныя і пажыўныя, але навуковае абгрунтаваньне гэтаму ўдалося атрымаць нядаўна. Навукоўцы давялі, што «маладая» дыета падаўжае жыцьцё, а~«старая» скарачае жыцьцё ў~параўнаньні з~«маладой». У~маладых уцёках чайнага куста відавочна больш карысных рэчываў. А~вось максімальная канцэнтрацыя сульфарафану\index{сульфарафан} ўтрымліваецца менавіта ў~парастках брокалі. Што да шкодных спалучэньняў, то ў~маладых прадуктах іх меней. Так, у~буйной і дарослай рыбе ртуці больш, чым у~дробнай і маладой.
 
-\tipbox{Пры працяглым захоўваньні ў~бялковых прадуктах адбываецца распад амінакіслотаў да біягенных амінаў, што пагаршае якасьць ежы. Тлушчы пры працяглым захоўваньні пачынаюць акісьляцца, есьці іх вельмі шкодна. Вугляводы захоўваюцца лепей, але садавіна і гародніна працяглага захоўваньня відавочна губляюць свае карысныя ўласьцівасьці.}
+\tipbox{Пры працяглым захоўваньні ў~бялковых прадуктах адбываецца распад амінакіслотаў да біягенных амінаў\index{біягенныя аміны}, што пагаршае якасьць ежы. Тлушчы пры працяглым захоўваньні пачынаюць акісьляцца, есьці іх вельмі шкодна. Вугляводы захоўваюцца лепей, але садавіна і гародніна працяглага захоўваньня відавочна губляюць свае карысныя ўласьцівасьці.}
 
 \subsection{Як трымацца правіла? Ідэі і парады}
 
@@ -68,16 +68,16 @@
 Памятайце, што можна ствараць запас і сапраўдных прадуктаў: яны добра захоўваюцца дома як у~сьвежазамарожаным выглядзе, так і ў~цёмных шафах у~прахалодным месцы. Сапраўдныя прадукты~--- гэта не заўсёды ўтомная і доўгая гатоўля, іх можна прыгатаваць хутка. Прыклад хуткага сьняданку з~маразільні: спаржавая фасоля і цэльны ласось. Перакладзіце іх з~маразільні ў~лядоўню ўвечары, а~раніцай прамыйце вадой і зварыце разам за 10 хвілінаў~--- будзе хутка і смачна.
 
 \paragraph{Паступовы пераход.}
-Дайце кішачніку адаптавацца да клятчаткі. Рэзкі пераход можа выклікаць пэўныя праблемы з~кішачнікам. Ня бойцеся іх, яны неўзабаве зьнікнуць, але клятчатку варта павялічваць у~рацыёне паступова.
+Дайце кішачніку адаптавацца да клятчаткі\index{клятчатка}. Рэзкі пераход можа выклікаць пэўныя праблемы з~кішачнікам. Ня бойцеся іх, яны неўзабаве зьнікнуць, але клятчатку\index{клятчатка} варта павялічваць у~рацыёне паступова.
 
 \paragraph{Мясцовыя прадукты.}
 Аддавайце па магчымасьці перавагу мясцовым (ці блізкім да іх) сэзонным прадуктам. Яны мінімальна перавозяцца і захоўваюцца. Вы можаце дасьледаваць лякальныя рынкі, уведаць добрых пастаўнікоў.
 
 \paragraph{«Экстрагаваныя прадукты».}
-Па магчымасьці старайцеся папоўніць умераны дэфіцыт не з~дапамогай БАДаў, а~ежай. Так, рыба зьніжае рызыку хваробы Альцгеймэра, а~паасобку вітамін D або амэга-3~--- не, клятчатка ў~складзе садавіны зьніжае рызыку раку кутніцы (кутняй кішкі), а~вось яна ж праз дабаўкі~--- не зьніжае. Зразумела, сур'ёзны дэфіцыт ежай скампэнсаваць цяжэй, тады ўжо можна зьвярнуцца і да таблетак. Але стратэгія «БАДы жменяй замест нармальнай ежы» ня можа быць названая здаровай.
+Па магчымасьці старайцеся папоўніць умераны дэфіцыт не з~дапамогай БАДаў, а~ежай. Так, рыба зьніжае рызыку хваробы Альцгаймэра\index{хвароба!Альцгаймэра}, а~паасобку вітамін D або амэга-3~--- не, клятчатка\index{клятчатка} ў~складзе садавіны зьніжае рызыку раку кутніцы (кутняй кішкі), а~вось яна ж праз дабаўкі~--- не зьніжае. Зразумела, сур'ёзны дэфіцыт ежай скампэнсаваць цяжэй, тады ўжо можна зьвярнуцца і да таблетак. Але стратэгія «БАДы жменяй замест нармальнай ежы» ня можа быць названая здаровай.
 
 \paragraph{Арэол здаровага харчаваньня.}
-Гэта маркетынгавая пастка, калі цэльная здаровая ежа спалучаецца зь ня вельмі карыснай. Напрыклад, лісток салаты на піцы, даданьне гарэхаў у~марозіва, даданьне кунжутных семак у~батон. Гэтыя мікраскапічныя дабаўкі ня зьменяць дзеяньне асноўнай стравы, і, вядома ж, пэктын у~зэфіры ані не заменіць яблыкаў і не адменіць дзеяньне цукру.
+Гэта маркетынгавая пастка, калі цэльная здаровая ежа спалучаецца зь ня вельмі карыснай. Напрыклад, лісток салаты на піцы, даданьне гарэхаў у~марозіва, даданьне кунжутных семак у~батон. Гэтыя мікраскапічныя дабаўкі ня зьменяць дзеяньне асноўнай стравы, і, вядома ж, пэктын\index{пэктын} у~зэфіры ані не заменіць яблыкаў і не адменіць дзеяньне цукру.
 
 \paragraph{«Натуральныя інгрэдыенты».}
 Натуральнасьць зусім не зьяўляецца закладам здароўя. Цукар у~натуральным соку дзейнічае гэтак жа, як і ў~газіроўцы, і маецца ў~фруктовых соках у~супастаўнай колькасьці. У~некаторых краінах сэртыфікацыя «арганік» можа нешта значыць, у~шматлікіх іншых гэтае слова~--- толькі маркетынгавы крок, роўна як і словы «бія», «эка» і да т.~п.
