--- a/nutrition/chapter14.tex
+++ b/nutrition/chapter14.tex
@@ -1,7 +1,7 @@
 
 \chapter{Калярыйная і нутрыентная шчыльнасьць ежы}
 
-Правіла шчыльнасьці заключаецца ў~тым, каб выбіраць сабе ежу зь нізкай удзельнай калярыйнай шчыльнасьцю і з~высокай шчыльнасьцю нутрыентаў (клятчатка, вітаміны, антыаксыданты, макра- і мікраэлемэнты). Калярыйная шчыльнасьць (энэргетычная шчыльнасьць)~--- гэта колькасьць калёрыяў на грам прадукту, чым вышэйшая шчыльнасьць, тым меншы аб'ём прадукту і вышэйшая колькасьць калёрыяў у~ім. Так, напрыклад, гародніна ўтрымоўвае 30\,ккал на 100 грамаў прадукту, а~вось чакалядка~--- да 550\,ккал на 100 грамаў прадукту.
+Правіла шчыльнасьці заключаецца ў~тым, каб выбіраць сабе ежу зь нізкай удзельнай калярыйнай шчыльнасьцю і з~высокай шчыльнасьцю нутрыентаў (клятчатка\index{клятчатка}, вітаміны, антыаксыданты\index{антыаксыданты}, макра- і мікраэлемэнты). Калярыйная шчыльнасьць (энэргетычная шчыльнасьць)~--- гэта колькасьць калёрыяў на грам прадукту, чым вышэйшая шчыльнасьць, тым меншы аб'ём прадукту і вышэйшая колькасьць калёрыяў у~ім. Так, напрыклад, гародніна ўтрымоўвае 30\,ккал на 100 грамаў прадукту, а~вось чакалядка~--- да 550\,ккал на 100 грамаў прадукту.
 
 Можна ўявіць сабе сытуацыю і па-іншаму: так, 400\,ккал~--- гэта 100 грамаў чакаляднага батончыка, амаль 400 грамаў мяса і амаль паўтара кіляграмы брокалі. Менавіта таму сьцьвярджэньні аб тым, што калёрыі цалкам ідэнтычныя, няслушныя: бо 400\,ккал батончыка і 400\,ккал брокалі будуць па-рознаму ўплываць на пачуцьцё голаду і сытасьці, а~гэта шмат у~чым вызначае вашы харчовыя паводзіны. Чым вышэйшая калярыйная шчыльнасьць, тым вышэйшая ступень ачысткі прадукту і тым меншая яго нутрыентная шчыльнасьць. Ежце як кароль~--- толькі багатыя прадукты. «Бедныя» прадукты ўтрымліваюць шмат калёрыяў і мала карысных рэчываў. «Багатыя» прадукты ўтрымліваюць мала калёрыяў, але вельмі шмат біялягічна актыўных рэчываў.
 
@@ -9,11 +9,11 @@
 
 З даўніх часоў у~прыродзе чалавек рэдка сустракаўся з~багацьцем ежы высокай шчыльнасьці, яна была эпізадычнай ці сэзоннай. Зь цягам часу калярыйная шчыльнасьць ежы пакрысе павялічваецца. Так, узровень тлушчу ў~дзікіх жывёл~--- 5--7\,\% і дасягае 30\,\% у~сельскагаспадарчых, тое ж тычыцца многіх расьлінных культураў. Зьяўленьне рафінаваных прадуктаў прывяло да таго, што ежа стала неймаверна калярыйнай, ачыстка прадуктаў прывяла да зьніжэньня іх біялягічнай вартасьці.
 
-Павелічэньне калярыйнай шчыльнасьці часьцей за ўсё суправаджаецца зьніжэньнем нутрыентнай шчыльнасьці ежы (гэта значыць зьмесьціва ў~ёй розных некалярыйных, але важных для здароўя прадуктаў, уключаючы клятчатку, вітаміны, антыаксыданты, рэчывы, якія адказваюць за смак і пах, і многае іншае). Таму ежа з~высокай калярыйнай шчыльнасьцю, як правіла, бедная на біялягічна актыўныя спалучэньні. Акрамя гэтага, працяглае вырошчваньне ежы на адных і тых жа землях зьнясільвае глебу, зьніжае ўтрыманьне ў~ёй шэрагу карысных кампанэнтаў; працяглае захоўваньне і транспарціроўка таксама ўзмацняюць гэты працэс.
+Павелічэньне калярыйнай шчыльнасьці часьцей за ўсё суправаджаецца зьніжэньнем нутрыентнай шчыльнасьці ежы (гэта значыць зьмесьціва ў~ёй розных некалярыйных, але важных для здароўя прадуктаў, уключаючы клятчатку\index{клятчатка}, вітаміны, антыаксыданты\index{антыаксыданты}, рэчывы, якія адказваюць за смак і пах, і многае іншае). Таму ежа з~высокай калярыйнай шчыльнасьцю, як правіла, бедная на біялягічна актыўныя спалучэньні. Акрамя гэтага, працяглае вырошчваньне ежы на адных і тых жа землях зьнясільвае глебу, зьніжае ўтрыманьне ў~ёй шэрагу карысных кампанэнтаў; працяглае захоўваньне і транспарціроўка таксама ўзмацняюць гэты працэс.
 
 \tipbox{У старажытнасьці некаторымі хваробамі ганарыліся, лічылі іх прыкметай вытанчанасьці. Так, падагру называлі хваробай каралёў, бо толькі багатым людзям была даступная такая колькасьць бялковай ежы і алькаголю на працягу доўгага часу ў~спалучэньні з~маларухомым ладам жыцьця.}
 
-Многія «хваробы цывілізацыі», распаўсюджаныя сёньня (алергіі, атлусьценьне, дыябэт, дэпрэсія), у~старажытнасьці былі толькі ў~некаторых людзей з~высокім сацыяльным статусам і даходам, а~дакладней~--- зь няправільным харчаваньнем, гіпадынаміяй і нястрымнасьцю. Больш за тое, некаторымі хваробамі нават ганарыліся, лічачы іх прыкметай вытанчанасьці. Так, падагру называлі хваробай каралёў, паколькі толькі багатым людзям была даступная такая колькасьць бялковай ежы і алькаголю на працягу доўгага часу ў~спалучэньні з~маларухомым ладам жыцьця. Гэта ж датычыцца і цукровага дыябэту другога тыпу, які сустракаўся, як правіла, толькі ў~багатых. Алергія першапачаткова таксама была прыкметай заможнасьці. Сянны катар быў «моднай» хваробай эліты. Лекары адразу заўважылі, што хвароба сустракаецца ў~багатых, а~ў сялян яе не назіралася. Чаму? Багатыя больш пераядалі, елі больш тлустага, мучнога, салодкага, менш рухаліся, таму і часьцей хварэлі. Цяпер сытуацыя поўнасьцю перакулілася. Калярыйная бедная ежа (мучное, тлустае, цукар) стала таннай, а~вось ``багатыя'' прадукты (морапрадукты, зеляніна, якаснае мяса, ягады і гародніна) сталі даражэйшымі.
+Многія «хваробы цывілізацыі», распаўсюджаныя сёньня (алергіі, атлусьценьне, дыябэт\index{дыябэт}, дэпрэсія), у~старажытнасьці былі толькі ў~некаторых людзей з~высокім сацыяльным статусам і даходам, а~дакладней~--- зь няправільным харчаваньнем, гіпадынаміяй\index{гіпадынамія} і нястрымнасьцю. Больш за тое, некаторымі хваробамі нават ганарыліся, лічачы іх прыкметай вытанчанасьці. Так, падагру называлі хваробай каралёў, паколькі толькі багатым людзям была даступная такая колькасьць бялковай ежы і алькаголю на працягу доўгага часу ў~спалучэньні з~маларухомым ладам жыцьця. Гэта ж датычыцца і цукровага дыябэту\index{дыябэт} другога тыпу, які сустракаўся, як правіла, толькі ў~багатых. Алергія першапачаткова таксама была прыкметай заможнасьці. Сянны катар быў «моднай» хваробай эліты. Лекары адразу заўважылі, што хвароба сустракаецца ў~багатых, а~ў сялян яе не назіралася. Чаму? Багатыя больш пераядалі, елі больш тлустага, мучнога, салодкага, менш рухаліся, таму і часьцей хварэлі. Цяпер сытуацыя поўнасьцю перакулілася. Калярыйная бедная ежа (мучное, тлустае, цукар) стала таннай, а~вось ``багатыя'' прадукты (морапрадукты, зеляніна, якаснае мяса, ягады і гародніна) сталі даражэйшымі.
 
 \subsection{Як гэта ўплывае на здароўе?}
 
@@ -29,7 +29,7 @@
 \tipbox{Калярыйныя прадукты бедныя вітамінамі і мікраэлемэнтамі. Сэлекцыя, якая прыводзіць да павелічэньня ўтрыманьня крухмалу і тлушчу, паскарэньня росту, адначасова вядзе і да зьніжэньня ўтрыманьня карысных рэчываў.}
 
 \paragraph{Удзельная шчыльнасьць вугляводаў і кішачнік.}
-Рэч у~тым, што навуковыя дасьледаваньні паказалі: менавіта ўдзельная шчыльнасьць вугляводаў, а~не глікемічны індэкс, уплывае на іх дзеяньне. Чым вышэйшая шчыльнасьць, тым мацнейшы яе ўплыў на мікрафлёру і тым мацнейшая запаленчая рэакцыя, незалежна ад агульнай колькасьці вугляводаў. Пасьля прыёму канцэнтраваных вугляводаў узьнікае «мэтабалічная эндатаксэмія» (павелічэньне ўзроўню таксынаў), якая трымаецца да 5 гадзінаў пасьля яды. Гэта выклікае хранічнае запаленьне, што прыводзіць да лептынарэзыстэнтнасьці і парушэньня працы вагусу, зьніжае насычэньне, гнетучы актыўнасьць такіх мэдыятараў насычэньня, як халецыстакінін, пэптыд YY. Даведзена, што харчаваньне ``старажытнымі'' вугляводамі прыводзіць да зьмены мікрафлёры, зьніжэньня пранікальнасьці кішачніка і памяншэньня выяўнасьці запаленчых зьяваў. Аналягічная колькасьць ``сучасных'' вугляводаў не аказвае падобнага эфэкту. Чым больш «сучасных» вугляводаў, тым больш неспрыяльнай мікрафлёры як у~ротавай поласьці, так і ў~тонкім кішачніку, і тым мацнейшы запаленчы статут арганізму.
+Рэч у~тым, што навуковыя дасьледаваньні паказалі: менавіта ўдзельная шчыльнасьць вугляводаў, а~не глікемічны індэкс, уплывае на іх дзеяньне. Чым вышэйшая шчыльнасьць, тым мацнейшы яе ўплыў на мікрафлёру і тым мацнейшая запаленчая рэакцыя, незалежна ад агульнай колькасьці вугляводаў. Пасьля прыёму канцэнтраваных вугляводаў узьнікае «мэтабалічная эндатаксэмія» (павелічэньне ўзроўню таксынаў), якая трымаецца да 5 гадзінаў пасьля яды. Гэта выклікае хранічнае запаленьне, што прыводзіць да лептынарэзыстэнтнасьці\index{лептынарэзыстэнтнасьць} і парушэньня працы вагусу\index{вагус (блукальны нэрв)}, зьніжае насычэньне, гнетучы актыўнасьць такіх мэдыятараў насычэньня, як халецыстакінін\index{халецыстакінін}, пэптыд YY. Даведзена, што харчаваньне ``старажытнымі'' вугляводамі прыводзіць да зьмены мікрафлёры, зьніжэньня пранікальнасьці кішачніка і памяншэньня выяўнасьці запаленчых зьяваў. Аналягічная колькасьць ``сучасных'' вугляводаў не аказвае падобнага эфэкту. Чым больш «сучасных» вугляводаў, тым больш неспрыяльнай мікрафлёры як у~ротавай поласьці, так і ў~тонкім кішачніку, і тым мацнейшы запаленчы статут арганізму.
 
 Чым вышэйшая ўдзельная калярыйная шчыльнасьць, тым ніжэйшая разнастайнасьць мікрафлёры. Так, узровень Bacteroidetes вышэйшы на дыеце ў~2\,Ккал/грамаў, а~ўзровень Firmicutes вышэйшы на дыеце ў~4\,Ккал/грамаў. Узровень Parabacteroides вышэйшы на дыеце ў~2\,Ккал/грамаў, а~ўзровень Barnesiella вышэйшы на дыеце ў~4\,Ккал/грамаў.
 
@@ -41,9 +41,9 @@
 
 \tipbox{Усе вугляводныя прадукты мы можам умоўна падзяліць на «старажытныя клеткавыя», такія як банан, батат, бурак і морква, гарбуз, капуста і інш., і «сучасныя пазаклеткавыя» вугляводы, куды адносяцца крупы і іх перапрацаваныя вытворныя.}
 
-\paragraph{Павялічце долю прадуктаў з~высокай нутрыентнай шчыльнасьцю,} дзе шмат вітамінаў, антыаксыдантаў, мінэралаў і да т.~п. Такія прадукты часта называюць «супэрфудамі». Як мы з~вамі ведаем, рабіць дыету на некалькіх, нават вельмі карысных, прадуктах не зусім правільна, але долю такіх прадуктаў варта павялічыць. Для дакладнага вызначэньня дэфіцыту вітамінаў і мінэралаў вы можаце здаць біяхімічныя аналізы крыві, самыя распаўсюджаныя дэфіцыты коратка адлюстраваныя ніжэй. Пад супэрфудамі маюць на ўвазе прадукты, якія ядуцца ў~малых колькасьцях і валодаюць высокай удзельнай біялягічнай актыўнасьцю (канцэнтрацыя карыснага на грам прадукту). Пад азначэньне супэрфудаў трапляюць авакада, шпінат, марское багавіньне, гранат, чарніцы, буякі, брокалі, кале і ўсе крыжакветныя, міндаль, какосавы алей, дзікі ласось, аліўкавы алей, зялёная гарбата, какава-бабы, грэцкія гарэхі. Многія з~супэрфудаў уяўляюць зь сябе маркетынгавы ход: так, абляпіха нічым не саступае годжы, а~шматклеткавае багавіньне карысьнейшае і бясьпечнейшае за сьпіруліну (можа ўтрымоўваць шэраг таксынаў).
+\paragraph{Павялічце долю прадуктаў з~высокай нутрыентнай шчыльнасьцю,} дзе шмат вітамінаў, антыаксыдантаў\index{антыаксыданты}, мінэралаў і да т.~п. Такія прадукты часта называюць «супэрфудамі». Як мы з~вамі ведаем, рабіць дыету на некалькіх, нават вельмі карысных, прадуктах не зусім правільна, але долю такіх прадуктаў варта павялічыць. Для дакладнага вызначэньня дэфіцыту вітамінаў і мінэралаў вы можаце здаць біяхімічныя аналізы крыві, самыя распаўсюджаныя дэфіцыты коратка адлюстраваныя ніжэй. Пад супэрфудамі маюць на ўвазе прадукты, якія ядуцца ў~малых колькасьцях і валодаюць высокай удзельнай біялягічнай актыўнасьцю (канцэнтрацыя карыснага на грам прадукту). Пад азначэньне супэрфудаў трапляюць авакада, шпінат, марское багавіньне, гранат, чарніцы, буякі, брокалі, кале і ўсе крыжакветныя, міндаль, какосавы алей, дзікі ласось, аліўкавы алей, зялёная гарбата, какава-бабы, грэцкія гарэхі. Многія з~супэрфудаў уяўляюць зь сябе маркетынгавы ход: так, абляпіха нічым не саступае годжы, а~шматклеткавае багавіньне карысьнейшае і бясьпечнейшае за сьпіруліну (можа ўтрымоўваць шэраг таксынаў).
 
-Адносна дэфіцыту мікранутрыентаў можна сустрэць розныя вэрсіі, пачынаючы ад той, што «ўся ежа сёньня ўжо ня тая» да «ў ежы ёсьць усё, што трэба». Ісьціна заключаецца ў~тым, што нават калі ў~ежы ўсё ёсьць, то бываюць індывідуальныя праблемы з~засваеньнем неабходных рэчываў. Акрамя гэтага, важна разумець, што ў~выпадку ўмеранага дэфіцыту арганізм накіроўвае дэфіцытныя рэчывы на рашэньне галоўных пытаньняў выжываньня, пры гэтым пакутуюць іншыя важныя функцыі. Так, напрыклад, пры ўтоенай жалезадэфіцытнай анэміі эрытрацыты будуць у~норме, але вось валасы і энэргічнасьць~--- не. Аналягічная гісторыя адбываецца і пры дэфіцыце вітаміна D, сэлену, цынку і шэрагу іншых элемэнтаў. Таму важнае харчаваньне багатай нутрыентамі ежай, але, акрамя гэтага, аптымальнае падтрыманьне патрэбных узроўняў розных мікранутрыентаў.
+Адносна дэфіцыту мікранутрыентаў\index{мікранутрыенты} можна сустрэць розныя вэрсіі, пачынаючы ад той, што «ўся ежа сёньня ўжо ня тая» да «ў ежы ёсьць усё, што трэба». Ісьціна заключаецца ў~тым, што нават калі ў~ежы ўсё ёсьць, то бываюць індывідуальныя праблемы з~засваеньнем неабходных рэчываў. Акрамя гэтага, важна разумець, што ў~выпадку ўмеранага дэфіцыту арганізм накіроўвае дэфіцытныя рэчывы на рашэньне галоўных пытаньняў выжываньня, пры гэтым пакутуюць іншыя важныя функцыі. Так, напрыклад, пры ўтоенай жалезадэфіцытнай анэміі эрытрацыты будуць у~норме, але вось валасы і энэргічнасьць~--- не. Аналягічная гісторыя адбываецца і пры дэфіцыце вітаміна D, сэлену\index{сэлен}, цынку і шэрагу іншых элемэнтаў. Таму важнае харчаваньне багатай нутрыентамі ежай, але, акрамя гэтага, аптымальнае падтрыманьне патрэбных узроўняў розных мікранутрыентаў\index{мікранутрыенты}.
 
 \paragraph{Прапорцыі і талерка.}
 Калі ў~вас мэта схуднець, то зьмяняйце прапорцыі розных харчовых групаў, павялічваючы ў~рацыёне долю прадуктаў зь нізкай удзельнай калярыйнай шчыльнасьцю, а~калі набраць вагу~--- то павялічвайце з~высокай шчыльнасьцю.
@@ -73,7 +73,7 @@
 Багавіньне мае высокія канцэнтрацыі мінэралаў, нізкую колькасьць калёрыяў, яно карыснае для мікрафлёры і зручнае тым, што яго можна купляць празапас сушанае і выкарыстоўваць па меры неабходнасьці. Асноўныя віды: лямінарыі (комбу, келп), вакамэ, ірляндзкі мох, фукус, хідзікі і многія іншыя.
 
 \paragraph{Ягады.}
-Ягады маюць высокую шчыльнасьць і багацьце біялягічна актыўных рэчываў. Магчымасьць замарозкі забясьпечвае іх даступнасьць у~любую паравіну года. Выбірайце ягады мясцовыя, сакавітыя, у~іх, як правіла, вышэйшая канцэнтрацыя антыаксыдантаў: чарніцы, ажыны, шаўкоўніца, вішня, чарнаплодная рабіна, буякі і многія іншыя. Кававы кубак ягадаў~--- неабходны мінімум.
+Ягады маюць высокую шчыльнасьць і багацьце біялягічна актыўных рэчываў. Магчымасьць замарозкі забясьпечвае іх даступнасьць у~любую паравіну года. Выбірайце ягады мясцовыя, сакавітыя, у~іх, як правіла, вышэйшая канцэнтрацыя антыаксыдантаў\index{антыаксыданты}: чарніцы, ажыны, шаўкоўніца, вішня, чарнаплодная рабіна, буякі і многія іншыя. Кававы кубак ягадаў~--- неабходны мінімум.
 
 \paragraph{Грыбы.}
 Розныя віды грыбоў прыкметна адрозьніваюцца па складзе, але ў~цэлым усе маюць высокую біялягічную вартасьць. Грыбы станоўча ўплываюць на мікрафлёру кішачніка, утрымліваюць шэраг мінэралаў, паляпшаюць ліпідны спэктар крыві, зьмяншаюць запаленьне. Многія грыбы (кардцыцэпс, рэйшы і інш.) валодаюць унікальнымі здольнасьцямі ўплываць на імунны адказ.
@@ -93,5 +93,5 @@
 \tipbox{Спэцыі ўтрымоўваюць нікчэмна малую колькасьць калёрыяў, пры гэтым неймаверна шмат карысных спалучэньняў. Дадавайце ў~ежу чырвоны перац, размарын, куркуму, ляўровы ліст, аніс, кардамон, шафран.}
 
 \paragraph{Найбольш частыя дэфіцыты.}
-Найбольш частымі дэфіцытамі зьяўляюцца дэфіцыт амэга-3 тлустых кіслот (дадаткі або тлустая марская рыба два разы на тыдзень, кантроль па амэга-індэксе), дэфіцыт сэлену (лепш хелатные формы дабавак або морапрадукты, часнык, бразільскі гарэх), дэфіцыт вітаміну D (бываць часьцей апоўдні на сонцы, есьці больш рыбы, яек або дабаўкі ў~высокіх дозах пад лябараторным кантролем), дэфіцыт жалеза (мясныя прадукты або хелатные дабаўкі, кантроль па профілі жалеза ў~крыві: жалеза, ферытын, трансфэрын), дэфіцыт цынку (больш мяса і рыбы або дабаўкі), дэфіцыт магнію, дэфіцыт вітамінаў В9 і В12 (лепш прымаць у~выглядзе мэтыльных формаў, мэтылфалат і мэтылкабаламін, кантроль па ўзроўні В9, В12, гомацыстэіну), дэфіцыт ёду (цяпер сустракаецца ўсё радзей).
+Найбольш частымі дэфіцытамі зьяўляюцца дэфіцыт амэга-3 тлустых кіслот (дадаткі або тлустая марская рыба два разы на тыдзень, кантроль па амэга-індэксе), дэфіцыт сэлену\index{сэлен} (лепш хелатные формы дабавак або морапрадукты, часнык, бразільскі гарэх), дэфіцыт вітаміну D (бываць часьцей апоўдні на сонцы, есьці больш рыбы, яек або дабаўкі ў~высокіх дозах пад лябараторным кантролем), дэфіцыт жалеза (мясныя прадукты або хелатные дабаўкі, кантроль па профілі жалеза ў~крыві: жалеза, ферытын\index{ферытын}, трансфэрын), дэфіцыт цынку (больш мяса і рыбы або дабаўкі), дэфіцыт магнію, дэфіцыт вітамінаў В9 і В12 (лепш прымаць у~выглядзе мэтыльных формаў, мэтылфалат і мэтылкабаламін, кантроль па ўзроўні В9, В12, гомацыстэіну), дэфіцыт ёду (цяпер сустракаецца ўсё радзей).
 
