--- a/nutrition/chapter21.tex
+++ b/nutrition/chapter21.tex
@@ -1,6 +1,6 @@
 \chapter{Бялкі}
 
-Бялкі~--- гэта найважнейшая частка рацыёну, амінакіслоты, якія ўваходзяць у~іх склад, зьяўляюцца істотным будаўнічым матэрыялам, а~таксама крыніцай энэргіі. Важна падтрымліваць аптымальную колькасьць якаснага бялку, каб кантраляваць насычэньне і пры гэтым не падвышаць рызыкі шэрагу захворваньняў. У~дачыненьні да бялкоў многія дыетолягі займаюць процілеглыя пазыцыі, ад пастуляваньня поўнай шкоды жывёльных бялкоў (вэган) да прызнаньня іх абсалютнай карысьці ў~любых колькасьцях (карнівор). Акрамя колькасьці бялку, вельмі важным зьяўляецца яго якасьць, што зьвяза са зьменамі ў~яго апрацоўцы і захоўваньні. Давайце разьбяромся, як нам навучыцца атрымліваць ад бялковых прадуктаў максымум карысьці і пазьбягаць іх неспрыяльных уздзеяньняў на наша здароўе.
+Бялкі~--- гэта найважнейшая частка рацыёну, амінакіслоты, якія ўваходзяць у~іх склад, зьяўляюцца істотным будаўнічым матэрыялам, а~таксама крыніцай энэргіі. Важна падтрымліваць аптымальную колькасьць якаснага бялку, каб кантраляваць насычэньне і пры гэтым не падвышаць рызыкі шэрагу захворваньняў. У~дачыненьні да бялкоў многія дыетолягі займаюць процілеглыя пазыцыі, ад пастуляваньня поўнай шкоды жывёльных бялкоў (вэган) да прызнаньня іх абсалютнай карысьці ў~любых колькасьцях (карнівор\index{карнівор-дыета}). Акрамя колькасьці бялку, вельмі важным зьяўляецца яго якасьць, што зьвяза са зьменамі ў~яго апрацоўцы і захоўваньні. Давайце разьбяромся, як нам навучыцца атрымліваць ад бялковых прадуктаў максымум карысьці і пазьбягаць іх неспрыяльных уздзеяньняў на наша здароўе.
 
 \subsection{Як зьявілася праблема?}
 
@@ -23,30 +23,30 @@
 Вялікая колькасьць бялку ў~харчаваньні аказвае стымулюючае ўзьдзеяньне, узмацняе сымпацыйны тонус, павялічвае энэргічнасьць і настрой.
 
 \paragraph{Мэтабалізм.}
-Надмер шэрагу амінакіслотаў, у~прыватнасьці амінакіслотаў з~разгалінаваным ланцугом (ВСАА), пагаршае адчувальнасьць да інсуліну. Дыеты з~больш высокім утрыманьнем бялку хоць раўназначныя ў~лічбах скінутай вагі, але пры гэтым паказваюць горшую адчувальнасьць да інсуліну ў~параўнаньні з~дыетамі зь нізкім утрыманьнем бялку. Пры гэтым высокае ўтрыманьне бялку можа зьмяншаць узровень трыгліцэрыдаў і колькасьць тлушчу ў~печані.
+Надмер шэрагу амінакіслотаў, у~прыватнасьці амінакіслотаў з~разгалінаваным ланцугом (BCAA)\index{амінакіслота з~разгалінаваным ланцугом (BCAA)}, пагаршае адчувальнасьць да інсуліну. Дыеты з~больш высокім утрыманьнем бялку хоць раўназначныя ў~лічбах скінутай вагі, але пры гэтым паказваюць горшую адчувальнасьць да інсуліну ў~параўнаньні з~дыетамі зь нізкім утрыманьнем бялку. Пры гэтым высокае ўтрыманьне бялку можа зьмяншаць узровень трыгліцэрыдаў і колькасьць тлушчу ў~печані.
 
 \tipbox{Бялкі добра засвойваюцца, сытасьць захоўваецца надоўга, чым і тлумачыцца наступнае зьніжэньне колькасьці спажываных калёрыяў. Высокабялковыя дыеты спрыяюць пахудзеньню, пры гэтым дапамагаючы лепш кантраляваць апэтыт.}
 
-\paragraph{Стымулятары mTORС.}
-ВСАА амінакіслоты (лейцын, ізалейцын і валін) і метыянін стымулююць актыўнасьць mTORС. Само па сабе гэта карысна пэрыядычна, але залішняя стымуляцыя прыводзіць да павелічэньня рызыкі шэрагу захворваньняў: ад атлусьценьня і аўтаімунных захворваньняў да заўчаснага старэньня, зьніжэньня хуткасьці аўтафагіі і рызыкі пухлінавых захворваньняў (гл. разьдзел «Хуткая і павольная ежа»). Ёсьць дадзеныя, што высокае спажываньне ВСАА прыводзіць да зьніжэньня працягласьці жыцьця.
+\paragraph{Стымулятары mTORС\index{ген!mTORC}.}
+ВСАА амінакіслоты\index{амінакіслота з~разгалінаваным ланцугом (BCAA)} (лейцын\index{лейцын}, ізалейцын\index{ізалейцын} і валін\index{валін}) і метыянін\index{метыянін} стымулююць актыўнасьць mTORС\index{ген!mTORC}. Само па сабе гэта карысна пэрыядычна, але залішняя стымуляцыя прыводзіць да павелічэньня рызыкі шэрагу захворваньняў: ад атлусьценьня і аўтаімунных захворваньняў да заўчаснага старэньня, зьніжэньня хуткасьці аўтафагіі\index{аўтафагія} і рызыкі пухлінавых захворваньняў (гл. разьдзел «Хуткая і павольная ежа»). Ёсьць дадзеныя, што высокае спажываньне BCAA\index{амінакіслота з~разгалінаваным ланцугом (BCAA)} прыводзіць да зьніжэньня працягласьці жыцьця.
 
-Больш за ўсё гэтых амінакіслотаў у~малочных прадуктах, асабліва ў~сыроватачным бялку і малацэ, менш~--- у~расьлінным бялку (за выключэньнем соевага бялку). Часта ВСАА неўзаметку прысутнічае ў~выглядзе соевага парашка, сухога малака і г.~д. Важная ўласьцівасьць ВСАА~--- магутная стымуляцыя інсуліну і актывацыя mTORС, што ўзмацняецца ў~спалучэньні з~высокаглікемічнымі вугляводамі. Залішняя ўвесьчасная актывацыя mTORС прыводзіць да залішняй сімпатаадрэналавай актыўнасьці і ўзмацняе стрэс, трывогу, нэўратычнасьць, павялічвае артэрыяльны ціск і пагаршае рэляксацыю і сон.
+Больш за ўсё гэтых амінакіслотаў у~малочных прадуктах, асабліва ў~сыроватачным бялку і малацэ, менш~--- у~расьлінным бялку (за выключэньнем соевага бялку). Часта BCAA\index{амінакіслота з~разгалінаваным ланцугом (BCAA)} неўзаметку прысутнічае ў~выглядзе соевага парашка, сухога малака і г.~д. Важная ўласьцівасьць BCAA\index{амінакіслота з~разгалінаваным ланцугом (BCAA)}~--- магутная стымуляцыя інсуліну і актывацыя mTORС\index{ген!mTORC}, што ўзмацняецца ў~спалучэньні з~высокаглікемічнымі вугляводамі. Залішняя ўвесьчасная актывацыя mTORС\index{ген!mTORC} прыводзіць да залішняй сімпатаадрэналавай актыўнасьці і ўзмацняе стрэс, трывогу, нэўратычнасьць, павялічвае артэрыяльны ціск і пагаршае рэляксацыю і сон.
 
 \paragraph{Рызыка захворваньняў.}
-Высокабялковыя дыеты, асабліва на тле высокакалярыйнага харчаваньня, павялічваюць рызыку сардэчна-сасудзістых захворваньняў, нагрузку на ныркі. У~людзей з~утрыманьнем бялку ў~дыеце больш за 20\,\% ад каляражу рызыка захворваньняў вышэйшая, чым у~людзей з~утрыманьнем бялку ў~дыеце 10\,\% і менш. Высокабялковая дыета павялічвае рызыку захворваньня на цукровы дыябэт другога тыпу і рызыку ракавых захворваньняў. Дыета зь нізкай колькасьцю мэтыяніну паляпшае хаду некаторых анкалягічных захворваньняў, зьніжае ўзровень сыстэмнага запаленьня.
+Высокабялковыя дыеты, асабліва на тле высокакалярыйнага харчаваньня, павялічваюць рызыку сардэчна-сасудзістых захворваньняў, нагрузку на ныркі. У~людзей з~утрыманьнем бялку ў~дыеце больш за 20\,\% ад каляражу рызыка захворваньняў вышэйшая, чым у~людзей з~утрыманьнем бялку ў~дыеце 10\,\% і менш. Высокабялковая дыета павялічвае рызыку захворваньня на цукровы дыябэт\index{дыябэт} другога тыпу і рызыку ракавых захворваньняў. Дыета зь нізкай колькасьцю мэтыяніну паляпшае хаду некаторых анкалягічных захворваньняў, зьніжае ўзровень сыстэмнага запаленьня.
 
 \paragraph{Старэньне.}
-Лішак бялку ў~ежы, асабліва жывёльнага, скарачае працягласьць жыцьця і паскарае старэньне. Пры гэтым расьлінныя бялкі ня маюць такога ўплыву на захворваньне і працягласьць жыцьця, як жывёльныя (празь меншае ўтрыманьне мэтыяніну і ВСАА). Дыеты зь нізкім утрыманьнем мэтыяніну памяншаюць рызыку разьвіцьця шэрагу захворваньняў і павялічваюць працягласьць жыцьця. Абмежаваньне прадуктаў, багатых лейцынам (уваходзіць у~ВСАА), узьдзейнічае амаль эквівалентна нізкакалярыйнаму харчаваньню і падаўжае жыцьцё.
+Лішак бялку ў~ежы, асабліва жывёльнага, скарачае працягласьць жыцьця і паскарае старэньне. Пры гэтым расьлінныя бялкі ня маюць такога ўплыву на захворваньне і працягласьць жыцьця, як жывёльныя (празь меншае ўтрыманьне мэтыяніну і ВСАА). Дыеты зь нізкім утрыманьнем мэтыяніну памяншаюць рызыку разьвіцьця шэрагу захворваньняў і павялічваюць працягласьць жыцьця. Абмежаваньне прадуктаў, багатых лейцынам\index{лейцын} (уваходзіць у~ВСАА), узьдзейнічае амаль эквівалентна нізкакалярыйнаму харчаваньню і падаўжае жыцьцё.
 
 \paragraph{Засваеньне мінэралаў.}
-Мінэралы, якія атрымліваюцца з~жывёльных прадуктаў, засвойваюцца нашмат лепш, чым з~расьліннай ежы. Антынутрыенты запавольваюць усмоктваньне цынку, жалеза і сэлену, таму мяса лепш есьці з~гароднінай, а~ня з~крупамі (збажына, бабовыя). Аднак лішак жалеза (часьцей у~мужчын), назапашваючыся з~узростам, вельмі нэгатыўна ўплывае на здароўе. Жалеза (як і медзь)~--- гэта мэтал зь пераходнай валентнасьцю, таму яго надмер паскарае перакіснае акісьленьне тлушчаў, што павялічвае рызыку шматлікіх захворваньняў~--- ад атлусьценьня і раку да нэўрадэгенэратыўных захворваньняў. Дэфіцыт жалеза (часьцей у~жанчын)~--- таксама сур'ёзная праблема, якая пагаршае самаадчуваньне, вонкавы выгляд і здароўе.
+Мінэралы, якія атрымліваюцца з~жывёльных прадуктаў, засвойваюцца нашмат лепш, чым з~расьліннай ежы. Антынутрыенты\index{антынутрыенты} запавольваюць усмоктваньне цынку, жалеза і сэлену\index{сэлен}, таму мяса лепш есьці з~гароднінай, а~ня з~крупамі (збажына, бабовыя). Аднак лішак жалеза (часьцей у~мужчын), назапашваючыся з~узростам, вельмі нэгатыўна ўплывае на здароўе. Жалеза (як і медзь)~--- гэта мэтал зь пераходнай валентнасьцю, таму яго надмер паскарае перакіснае акісьленьне тлушчаў, што павялічвае рызыку шматлікіх захворваньняў~--- ад атлусьценьня і раку да нэўрадэгенэратыўных захворваньняў. Дэфіцыт жалеза (часьцей у~жанчын)~--- таксама сур'ёзная праблема, якая пагаршае самаадчуваньне, вонкавы выгляд і здароўе.
 
-\tipbox{Ёд, цынк, селен, бор і дзясяткі іншых мінэралаў сустракаюцца ў~добрай канцэнтрацыі ў~морапрадуктах. Рыбны бялок заўважна адрозьніваецца ад бялку чырвонага і белага мяса, ён валодае даведзеным антыгіпэртэнзіўным эфэктам, стымулюе фібрыноліз, спрыяе зьніжэньню вагі і зьніжае ўзровень запаленчага маркера С-рэактыўнага бялку, паляпшае адчувальнасьць да інсуліну.}
+\tipbox{Ёд, цынк, селен, бор і дзясяткі іншых мінэралаў сустракаюцца ў~добрай канцэнтрацыі ў~морапрадуктах. Рыбны бялок заўважна адрозьніваецца ад бялку чырвонага і белага мяса, ён валодае даведзеным антыгіпэртэнзіўным эфэктам, стымулюе фібрыноліз\index{фібрыноліз}, спрыяе зьніжэньню вагі і зьніжае ўзровень запаленчага маркера С-рэактыўнага бялку, паляпшае адчувальнасьць да інсуліну.}
 
 \paragraph{Рыба і морапрадукты.}
-У сучасным рацыёне пераважае ўжываньне бялкоў з~малочных прадуктаў і чырвонага мяса. У~сваю чаргу, рыба і морапрадукты ўтрымліваюць мноства неабходных для здароўя злучэньняў: таўрын, астаксанцін, сэлен, цынк, вітамін D, ёд, амэга-3 тлустыя кіслоты і г.~д. Таўрын~--- гэта важная амінакіслата, якая ахоўна ўзьдзейнічае на шматлікія паказьнікі здароўя і спрыяе даўгалецьцю. Рыбны бялок выгодна адрозьніваецца ад бялку чырвонага і белага мяса, ён валодае даведзеным антыгіпэртэнізіўным эфэктам, стымулюе фібрыноліз, спрыяе зьніжэньню вагі і ўзроўню С-рэактыўнага бялку, паляпшае адчувальнасьць да інсуліну. Большасьць эфэктыўных дыетаў утрымліваюць морапрадукты і рыбу ў~сваім складзе.
+У сучасным рацыёне пераважае ўжываньне бялкоў з~малочных прадуктаў і чырвонага мяса. У~сваю чаргу, рыба і морапрадукты ўтрымліваюць мноства неабходных для здароўя злучэньняў: таўрын\index{таўрын}, астаксанцын\index{астаксанцын}, сэлен\index{сэлен}, цынк, вітамін D, ёд, амэга-3 тлустыя кіслоты і г.~д. Таўрын\index{таўрын}~--- гэта важная амінакіслата, якая ахоўна ўзьдзейнічае на шматлікія паказьнікі здароўя і спрыяе даўгалецьцю. Рыбны бялок выгодна адрозьніваецца ад бялку чырвонага і белага мяса, ён валодае даведзеным антыгіпэртэнізіўным эфэктам, стымулюе фібрыноліз\index{фібрыноліз}, спрыяе зьніжэньню вагі і ўзроўню С-рэактыўнага бялку, паляпшае адчувальнасьць да інсуліну. Большасьць эфэктыўных дыетаў утрымліваюць морапрадукты і рыбу ў~сваім складзе.
 
-Дасьледаваньні паказваюць, што морапрадукты перадухіляюць разьвіццё хваробы Альцгеймэра, страту слыху, павялічваюць інтэлект, захоўваюць жаночае і мужчынскае здароўе, спрыяюць зачацьцю і да т.~п. Для дасягненьня эфэкту ня трэба есьці, як эскімос, дастаткова ўмеранага даданьня ў~рацыён морапрадуктаў і рыбы. Цікава, што асобныя дадаткі амэга-3 ня могуць прыраўняцца да эфэктыўнасьці цэльнага прадукту для прафіляктыкі хваробы Альцгеймэра. Нават адна порцыя рыбы на тыдзень, з'едзеная ў~пажылым узросьце, можа аддаліць наступленьне дэмэнцыі і хваробы Альцгеймэра, у~тым ліку генэтычна дэтэрмінаваных.
+Дасьледаваньні паказваюць, што морапрадукты перадухіляюць разьвіццё хваробы Альцгаймэра\index{хвароба!Альцгаймэра}, страту слыху, павялічваюць інтэлект, захоўваюць жаночае і мужчынскае здароўе, спрыяюць зачацьцю і да т.~п. Для дасягненьня эфэкту ня трэба есьці, як эскімос, дастаткова ўмеранага даданьня ў~рацыён морапрадуктаў і рыбы. Цікава, што асобныя дадаткі амэга-3 ня могуць прыраўняцца да эфэктыўнасьці цэльнага прадукту для прафіляктыкі хваробы Альцгаймэра\index{хвароба!Альцгаймэра}. Нават адна порцыя рыбы на тыдзень, з'едзеная ў~пажылым узросьце, можа аддаліць наступленьне дэмэнцыі і хваробы Альцгаймэра\index{хвароба!Альцгаймэра}, у~тым ліку генэтычна дэтэрмінаваных.
 
 \subsection{Асноўныя прынцыпы}
 
@@ -62,13 +62,13 @@
 \paragraph{Марскі бялок.}
 Найлепшай крыніцай бялку і мноства іншых незаменных злучэньняў зьяўляецца «марская дыета», якая мяркуе ўжываньне рыбы дзікай лоўлі, ракападобных, малюскаў і да т.~п. Аптымальна есьці марскую рыбу 2--3 разы на тыдзень (але ня смажаную, вэнджаную, а~вараную).
 
-\tipbox{Навукова даведзена, што самым шкодным сярод мясных прадуктаў зьяўляецца перапрацаванае мяса (бэкон, сасіскі, каўбасы, паўфабрыкаты і да т.~п.): яно ўваходзіць у~сьпіс канцэрагенаў. Усяго 50 грамаў такога мяса на содніі дастаткова, каб заўважна павысіць рызыку сардэчна-сасудзістых захворваньняў (на 42\,\%) і дыябэту (на 19\,\%).}
+\tipbox{Навукова даведзена, што самым шкодным сярод мясных прадуктаў зьяўляецца перапрацаванае мяса (бэкон, сасіскі, каўбасы, паўфабрыкаты і да т.~п.): яно ўваходзіць у~сьпіс канцэрагенаў. Усяго 50 грамаў такога мяса на содніі дастаткова, каб заўважна павысіць рызыку сардэчна-сасудзістых захворваньняў (на 42\,\%) і дыябэту\index{дыябэт} (на 19\,\%).}
 
 \paragraph{Мяса жывёлаў пашавага выпасу, мяса і яйкі хатняй птушкі.}
 Пры гэтым ня трэба факусавацца толькі на мясе, важна есьці й~субпрадукты. Белае і чырвонае мяса можна есьці некалькі разоў на тыдзень у~цэльным выглядзе. Што тычыцца расьліннага бялку, ён менш збалянсаваны па амінакіслотах, таму трэба камбінаваць розныя яго віды для атрыманьня поўнай нормы незаменных амінакіслотаў.
 
 \paragraph{Ідэальная якасьць.}
-Якасьць~--- гэта найважнейшае патрабаваньне да бялковых прадуктаў, якія хутка псуюцца, вельмі адчувальныя да награваньня, сьвятла, забруджваньня (у іх размнажаюцца бактэрыі), працяглых тэрмінаў захоўваньня, тэрмаапрацоўкі. Выбірайце і купляйце цэльныя фрагмэнты ці тушы мяса, на костцы і са скурай у~правераных пастаўнікоў і гатуйце іх здаровымі спосабамі. Навукова даведзена, што самым шкодным сярод мясных прадуктаў зьяўляецца перапрацаванае мяса (бэкон, сасіскі, каўбасы, паўфабрыкаты і да т.~п.), аднесенае да сьпісу канцэрагенаў. Усяго 50 грамаў такога мяса на содні дастаткова, каб прыкметна павысіць рызыку сардэчна-сасудзістых захворваньняў (на 42\,\%) і дыябэту (на 19\,\%). Пры смажаньні мяса адбываецца назапашваньне ў~ім канчатковых прадуктаў глікацыі (гл. разьдзел «Захоўваньне і гатоўля»), а~таксама зьніжэньне колькасьці важных злучэньняў.
+Якасьць~--- гэта найважнейшае патрабаваньне да бялковых прадуктаў, якія хутка псуюцца, вельмі адчувальныя да награваньня, сьвятла, забруджваньня (у іх размнажаюцца бактэрыі), працяглых тэрмінаў захоўваньня, тэрмаапрацоўкі. Выбірайце і купляйце цэльныя фрагмэнты ці тушы мяса, на костцы і са скурай у~правераных пастаўнікоў і гатуйце іх здаровымі спосабамі. Навукова даведзена, што самым шкодным сярод мясных прадуктаў зьяўляецца перапрацаванае мяса (бэкон, сасіскі, каўбасы, паўфабрыкаты і да т.~п.), аднесенае да сьпісу канцэрагенаў. Усяго 50 грамаў такога мяса на содні дастаткова, каб прыкметна павысіць рызыку сардэчна-сасудзістых захворваньняў (на 42\,\%) і дыябэту\index{дыябэт} (на 19\,\%). Пры смажаньні мяса адбываецца назапашваньне ў~ім канчатковых прадуктаў глікацыі (гл. разьдзел «Захоўваньне і гатоўля»), а~таксама зьніжэньне колькасьці важных злучэньняў.
 
 \subsection{Як трымацца правіла? Ідэі і парады}
 
@@ -81,22 +81,22 @@
 \paragraph{У першую чаргу~--- бялок.}
 Бялок варта есьці першым падчас сталаваньня~--- так ён лепш насычае.
 
-\paragraph{Інсулінарэзыстэнтнасьць.}
-Высокабялковая дыета вядзе да зьніжэньня адчувальнасьць да інсуліну, нават пры пахудзеньні. Гэта вядзе да захаваньня падвышанай рызыкі інсулінарэзыстэнтнасьці, таму пазьбягайце высокабялковых дыетаў працяглы час.
+\paragraph{Інсулінарэзыстэнтнасьць\index{інсулінарэзыстэнтнасьць}.}
+Высокабялковая дыета вядзе да зьніжэньня адчувальнасьць да інсуліну, нават пры пахудзеньні. Гэта вядзе да захаваньня падвышанай рызыкі інсулінарэзыстэнтнасьці\index{інсулінарэзыстэнтнасьць}, таму пазьбягайце высокабялковых дыетаў працяглы час.
 
-\paragraph{ВСАА.}
-Надмер амінакіслотаў з~разгалінаваным ланцугом у~рацыёне (малочныя прадукты, яйкі, мяса і да т.~п.) або ў~выглядзе спартовых дабавак можа запаволіць цяглічны рост у~атлетаў-пачаткоўцаў (за кошт хутчэйшага аднаўленьня), зьнізіць адчувальнасьць да інсуліну і зрабіць яшчэ шэраг адмоўных узьдзеяньняў. Але мы можам выкарыстоўваць гэтыя дадаткі ў~выпадках экстранагрузак (маратон і г.~д.). Трыптафан зьяўляецца папярэднікам такіх важных малекулаў, як сэратанін і мэлятанін. Рэч у~тым, што трыптафан слаба пранікае праз гематаэнцэфалічны бар'ер, яго перанос залежыць ад суадносінаў у~крыві трыптафан / ВСАА. Таму пасьля бялковай ежы ўзровень трыптафану вырастае ў~плазьме крыві, але ня ў~мозгу. Калі вы зьядаеце расьлінную ежу, то інсулін зьніжае ўзровень ВСАА (але не трыптафану) у~плазьме крыві, узмацняючы іх паглынаньне цягліцамі. Зьніжэньне ўзроўню ВСАА вядзе да зьмены суадносінаў трыптафан / ВСАА, што ўзмацняе перанос трыптафану ў~мозг і паляпшае самаадчуваньне. Даданьне нават невялікіх колькасьцяў бялку да вугляводнай ежы прыводзіць да павелічэньня ўзроўню ВСАА, што блякуе гэты мэханізм. Дастаткова 4\,\% бялку, каб прадухіліць зьмяненьне суадносінаў трыптафан / ВСАА. Таму ня варта дадаваць да кожнага прыёму ежы багатыя ВСАА прадукты!
+\paragraph{ВСАА\index{амінакіслота з~разгалінаваным ланцугом (BCAA)}.}
+Надмер амінакіслотаў з~разгалінаваным ланцугом у~рацыёне (малочныя прадукты, яйкі, мяса і да т.~п.) або ў~выглядзе спартовых дабавак можа запаволіць цяглічны рост у~атлетаў-пачаткоўцаў (за кошт хутчэйшага аднаўленьня), зьнізіць адчувальнасьць да інсуліну і зрабіць яшчэ шэраг адмоўных узьдзеяньняў. Але мы можам выкарыстоўваць гэтыя дадаткі ў~выпадках экстранагрузак (маратон і г.~д.). Трыптафан зьяўляецца папярэднікам такіх важных малекулаў, як сэратанін\index{сэратанін} і мэлятанін\index{мэлятанін}. Рэч у~тым, што трыптафан слаба пранікае праз гематаэнцэфалічны бар'ер, яго перанос залежыць ад суадносінаў у~крыві трыптафан / ВСАА. Таму пасьля бялковай ежы ўзровень трыптафану вырастае ў~плазьме крыві, але ня ў~мозгу. Калі вы зьядаеце расьлінную ежу, то інсулін зьніжае ўзровень ВСАА (але не трыптафану) у~плазьме крыві, узмацняючы іх паглынаньне цягліцамі. Зьніжэньне ўзроўню ВСАА вядзе да зьмены суадносінаў трыптафан / ВСАА, што ўзмацняе перанос трыптафану ў~мозг і паляпшае самаадчуваньне. Даданьне нават невялікіх колькасьцяў бялку да вугляводнай ежы прыводзіць да павелічэньня ўзроўню ВСАА, што блякуе гэты мэханізм. Дастаткова 4\,\% бялку, каб прадухіліць зьмяненьне суадносінаў трыптафан / ВСАА. Таму ня варта дадаваць да кожнага прыёму ежы багатыя ВСАА\index{амінакіслота з~разгалінаваным ланцугом (BCAA)} прадукты!
 
-\tipbox{Зьнізіць узровень жалеза ў~крыві дапаможа донарства. Здавайце 1--3 разы на год кроў і рэгулярна правярайце фэрытын, асабліва калі ў~вас ёсьць генэтычная схільнасьць да назапашваньня жалеза.}
+\tipbox{Зьнізіць узровень жалеза ў~крыві дапаможа донарства. Здавайце 1--3 разы на год кроў і рэгулярна правярайце фэрытын\index{фэрытын}, асабліва калі ў~вас ёсьць генэтычная схільнасьць да назапашваньня жалеза.}
 
 \paragraph{Бялковыя кактэйлі.}
 Бялковыя парашкі~--- гэта «бедныя» калёрыі, бо ў~іх шмат калёрыяў і мала дадатковых нутрыентаў (мінэралы, вітаміны і да т.~п.) у~параўнаньні з~цэльнымі прадуктамі. Магчыма, яны будуць карыснымі для прафэсійных атлетаў, але не для тых, хто не займаецца фізычнымі нагрузкамі.
 
-\paragraph{Вэганства і карнівор (zero carb diet).}
+\paragraph{Вэганства і карнівор\index{карнівор-дыета} (zero carb diet).}
 Як поўная адмова ад мяса, так і высокабялковая дыета на адным мясе не зьяўляюцца здаровымі варыянтамі харчаваньня, гэтыя скрайнасьці шкодзяць здароўю.
 
 \paragraph{Лішак і недахоп жалеза.}
-Вялікая колькасьць чырвонага мяса (асабліва ў~рацыёне мужчынаў) прыводзіць да назапашваньня залішняга жалеза. Праверыць яго варта, здаўшы аналіз на ўзровень фэрытыну. Калі ён высокі, то лепшы спосаб зьніжэньня~--- стаць донарам. Здавайце 1--3 разы на год кроў, рэгулярна правярайце ўзровень жалеза, асабліва калі ў~вас ёсьць генэтычная схільнасьць да яго назапашваньня.
+Вялікая колькасьць чырвонага мяса (асабліва ў~рацыёне мужчынаў) прыводзіць да назапашваньня залішняга жалеза. Праверыць яго варта, здаўшы аналіз на ўзровень фэрытыну\index{фэрытын}. Калі ён высокі, то лепшы спосаб зьніжэньня~--- стаць донарам. Здавайце 1--3 разы на год кроў, рэгулярна правярайце ўзровень жалеза, асабліва калі ў~вас ёсьць генэтычная схільнасьць да яго назапашваньня.
 
 \paragraph{Мэтыянін і кантэкст дыеты.}
 Істотна ўплывае і кантэкст дыеты. Напрыклад, у~чалавека, які есьць шмат мяса і мучнога, мала зеляніны і гародніны, спажываньне мэтыяніну можа прыводзіць да павелічэньня ў~крыві гомацыстэіну, што вельмі шкодна для сасудаў. А~вось калі зь мясам есьці больш гародніны, то мэтыянін будзе лепш засвойвацца з~наяўнасьцю вітамінаў В12, В9, прадуктаў-донараў мэтыльных групаў (халін, бэтаін у~капустах і да т.~п.). Людзям з~мутацыямі фолатнага цыклю (MTHFR, MTR, MTRR) і з~падвышаным гомацыстэінам варта таксама больш уважліва ставіцца да спажываньня чырвонага мяса.
@@ -117,4 +117,4 @@
 Соевы бялок часта выкарыстоўваецца ў~гатовай ежы і паўфабрыкатах. Ён мае высокае ўтрыманьне мэтыяніну (у параўнаньні зь іншымі бабовымі), высокую эстрагенную актыўнасьць і ня вельмі добра засвойваецца. Іншыя бабовыя больш карысныя, чым соевыя прадукты. Іх есьці можна, але ва ўмеранай колькасьці.
 
 \paragraph{Нізкагістамінавая дыета.}
-Вельмі часта прычынай непераноснасьці асобных прадуктаў зьяўляецца не харчовая алергія, а~непераноснасьць гістаміну (фальшывая харчовая алергія). У~гэтым выпадку добра дапамагае абмежаваньне прадуктаў, якія ўтрымліваюць гістамін ды іншыя біягенныя аміны. Паўфабрыкаты зь бялковых прадуктаў, працяглае іх захоўваньне павялічваюць рызыку іх непераноснасьці ў~адчувальных да гэтага людзей. У~нізкагістамінавую дыету ўваходзіць выключэньне мясных кансэрваў, сушанага, вяленага мяса, мяса працяглага захоўваньня, каўбасы, фаршу, мяса бяз даты расфасоўкі і г.~д. Шмат можа быць гістаміну ў~рыбе, асабліва ў~тунцы, сардзіне, скумбрыі, у~рыбных соўсах, сьвежай крамнай рыбе. Выбірайце рыбу глыбокай замарозкі і не размарожвайце яе працягла ў~лядоўні. У~вытрыманых сырах таксама можа зьмяшчацца шмат гістаміну ды іншых амінаў. Пры гэтым сьметанковае масла і маладыя сыры дапушчальныя.
+Вельмі часта прычынай непераноснасьці асобных прадуктаў зьяўляецца не харчовая алергія, а~непераноснасьць гістаміну (фальшывая харчовая алергія). У~гэтым выпадку добра дапамагае абмежаваньне прадуктаў, якія ўтрымліваюць гістамін ды іншыя біягенныя аміны\index{біягенныя аміны}. Паўфабрыкаты зь бялковых прадуктаў, працяглае іх захоўваньне павялічваюць рызыку іх непераноснасьці ў~адчувальных да гэтага людзей. У~нізкагістамінавую дыету ўваходзіць выключэньне мясных кансэрваў, сушанага, вяленага мяса, мяса працяглага захоўваньня, каўбасы, фаршу, мяса бяз даты расфасоўкі і г.~д. Шмат можа быць гістаміну ў~рыбе, асабліва ў~тунцы, сардзіне, скумбрыі, у~рыбных соўсах, сьвежай крамнай рыбе. Выбірайце рыбу глыбокай замарозкі і не размарожвайце яе працягла ў~лядоўні. У~вытрыманых сырах таксама можа зьмяшчацца шмат гістаміну ды іншых амінаў. Пры гэтым сьметанковае масла і маладыя сыры дапушчальныя.
