--- a/nutrition/chapter24.tex
+++ b/nutrition/chapter24.tex
@@ -10,28 +10,28 @@
 
 Усе людзі вельмі падобныя між сабой, з~аднаго боку, але маюць шэраг адрозненьняў, якія ўплываюць на іх рэакцыю на пэўны рэжым харчаваньня і прадукты. Гэтая рэакцыя залежыць ад генэтыкі, эпігенэтыкі, стану мікрафлёры, актыўнасьці імуннай сыстэмы, рэжыму фізычнай актыўнасьці і шмат чаго іншага. Таму для розных людзей розныя дыетычныя парады могуць мець розную ступень эфэктыўнасьці.
 
-Многія з~генэтычных асаблівасьцяў сфармаваліся пад уплывам чыньнікаў асяродзьдзя, у~якім жылі нашы продкі, і ўяўляюць сабой адаптацыі. Напрыклад, у~большасьці эўрапэйцаў сустракаюцца такія варыянты генаў FADS1 і FADS2, якія ня могуць сынтэзаваць жывёльныя формы амэга-3 тлустых кіслотаў з~расьлінных, а~ў Азіі «вэгетарыянскіх» формаў такіх генаў больш.
+Многія з~генэтычных асаблівасьцяў сфармаваліся пад уплывам чыньнікаў асяродзьдзя, у~якім жылі нашы продкі, і ўяўляюць сабой адаптацыі. Напрыклад, у~большасьці эўрапэйцаў сустракаюцца такія варыянты генаў FADS1\index{ген!FADS1} і FADS2\index{ген!FADS2}, якія ня могуць сынтэзаваць жывёльныя формы амэга-3 тлустых кіслотаў з~расьлінных, а~ў Азіі «вэгетарыянскіх» формаў такіх генаў больш.
 
 Зразумела, вялікае значэньне мае і актуальны стан здароўя чалавека, дастатковасьць усіх вітамінаў і мінэралаў. Як я ўжо згадваў, іх аптымальны ўзровень паляпшае мэтабалізм, розныя нутрыенты здольныя палепшыць сыстэму дэтаксыкацыі арганізму і тым самым паўплываць на абмен гармонаў унутры арганізму. Прапорцыі розных макранутрыентаў залежаць ад адчувальнасьці чалавека да інсуліну і да лептыну, узроўню яго фізычнай актыўнасьці. Чым ён вышэйшы, тым, напрыклад, больш бясьпечным будзе ўжываньне вялікіх колькасьцяў вугляводаў. На ступень засваеньня мінэралаў, прыкладам, моцна ўплывае кіслотнасьць страўніка: калі яна паніжаная, тое іх засваеньне будзе слабейшым.
 
 \subsection{Як гэта ўплывае на здароўе?}
 
-Веданьне сваіх індывідуальных асаблівасьцяў дапаможа найболей дакладна падабраць дыетычныя рэкамэндацыі. Напрыклад, рэкамэндацыя есьці больш аліўкавага алею лепей спрацуе для носьбітаў нуклеатыдаў G у~rs1801282 (знаходзіцца ў~гене PPARG). Такія людзі найбольш атрымаюць карысьці ад міжземнаморскай дыеты. Значнасьць генэтычных асаблівасьцяў таксама вар'іруецца ад умеранай схільнасьці да выяўленай непераноснасьці. Копія а~ў БНіП rs4988235 гену LCT дае магчымасьць засвойваць ляктозу. Калі няма хоць адной копіі, то разьвіваецца непераноснасьць. Ёсьць цэлы шэраг генэтычна прыроджаных непераноснасьцяў (фруктозы, трэгалозы, глютэну і г.~д.).
+Веданьне сваіх індывідуальных асаблівасьцяў дапаможа найболей дакладна падабраць дыетычныя рэкамэндацыі. Напрыклад, рэкамэндацыя есьці больш аліўкавага алею лепей спрацуе для носьбітаў нуклеатыдаў G у~rs1801282 (знаходзіцца ў~гене PPARG\index{ген!PPARG}). Такія людзі найбольш атрымаюць карысьці ад міжземнаморскай дыеты. Значнасьць генэтычных асаблівасьцяў таксама вар'іруецца ад умеранай схільнасьці да выяўленай непераноснасьці. Копія а~ў БНіП rs4988235 гену LCT дае магчымасьць засвойваць ляктозу\index{ляктоза}. Калі няма хоць адной копіі, то разьвіваецца непераноснасьць. Ёсьць цэлы шэраг генэтычна прыроджаных непераноснасьцяў (фруктозы, трэгалозы, глютэну\index{глютэн} і г.~д.).
 
 \tipbox{Многія з~генэтычных асаблівасьцяў сфармаваліся пад уплывам чыньнікаў асяроддзя, у~якім жылі нашы продкі, і ўяўляюць сабой адаптацыі. Напрыклад, у~большасьці эўрапэйцаў сустракаюцца такія варыянты генаў FADS1 і FADS2, якія ня могуць сынтэзаваць жывёльныя формы амэга-3 тлустых кіслотаў з~расьлінных, а~ў Азіі «вэгетарыянскіх» формаў такіх генаў больш.}
 
-З дапамогай генэтычнага тэсту можна выявіць парушэньне мэтабалізму шэрагу вітамінаў, асабліва важныя парушэньні ў~абмене фалатаў. Тэст дапаможа ацаніць дакладны ўплыў кафэіну, бо ёсьць такія асаблівасьці, калі нават невялікая порцыя кавы заўважна ўзмацняе трывогу і турботу. Што тычыцца насычаных тлушчаў, тут можна згадаць мутацыю ў~гене FABP2, у~гэтым выпадку носьбітам А-генатыпу лепш абмяжоўваць колькасьць насычаных тлушчаў, зьядаючы іх ня больш за 50 грамаў на содні. Што да вітаміну D, то і там ёсьць індывідуальныя асаблівасьці яго рэцэптараў. Пэўныя палімарфізмы гену рэцэптару вітаміну D (Bsm I, Fok I, Taq I і інш.) уплываюць на разьвіцьцё шматлікіх захворваньняў. Таму тэст дапаможа вам вызначыць аптымальны менавіта для вас узровень вітаміну D. Прадукты харчаваньня і гены ўзаемадзейнічаюць вельмі складана, уплываючы адзін на аднаго. Многія спалучэньні ў~прадуктах могуць узмацняць або аслабляць актыўнасьць генаў, а~гены, у~сваю чаргу, уплываюць на рэакцыю арганізму пры ўжываньні прадуктаў.
+З дапамогай генэтычнага тэсту можна выявіць парушэньне мэтабалізму шэрагу вітамінаў, асабліва важныя парушэньні ў~абмене фалатаў. Тэст дапаможа ацаніць дакладны ўплыў кафэіну, бо ёсьць такія асаблівасьці, калі нават невялікая порцыя кавы заўважна ўзмацняе трывогу і турботу. Што тычыцца насычаных тлушчаў, тут можна згадаць мутацыю ў~гене FABP2\index{ген!FABP2}, у~гэтым выпадку носьбітам А-генатыпу лепш абмяжоўваць колькасьць насычаных тлушчаў, зьядаючы іх ня больш за 50 грамаў на содні. Што да вітаміну D, то і там ёсьць індывідуальныя асаблівасьці яго рэцэптараў. Пэўныя палімарфізмы гену рэцэптару вітаміну D (Bsm I, Fok I, Taq I і інш.) уплываюць на разьвіцьцё шматлікіх захворваньняў. Таму тэст дапаможа вам вызначыць аптымальны менавіта для вас узровень вітаміну D. Прадукты харчаваньня і гены ўзаемадзейнічаюць вельмі складана, уплываючы адзін на аднаго. Многія спалучэньні ў~прадуктах могуць узмацняць або аслабляць актыўнасьць генаў, а~гены, у~сваю чаргу, уплываюць на рэакцыю арганізму пры ўжываньні прадуктаў.
 
-Вядома, генэтыка ўплывае і на асаблівасьці харчовых паводзінаў. Для розных людзей працуюць розныя падыходы да кантролю псыхагеннага пераяданьня. Для прыкладу разгледзім тры гены, генэтычныя варыяцыі ў~якіх павялічваюць рызыку кампульсіўнага пераяданьня. Гэта гены GAD2, Tag1A1 і FTO.
+Вядома, генэтыка ўплывае і на асаблівасьці харчовых паводзінаў. Для розных людзей працуюць розныя падыходы да кантролю псыхагеннага пераяданьня. Для прыкладу разгледзім тры гены, генэтычныя варыяцыі ў~якіх павялічваюць рызыку кампульсіўнага пераяданьня. Гэта гены GAD2\index{ген!GAD2}, Tag1A1\index{ген!Tag1A1} і FTO\index{ген!FTO}.
 
-\paragraph{GAD2.}
-Гэты ген стымулюе пераяданьне, ён зьвязаны з~кампульсіўнымі парушэньнямі харчовых паводзінаў. Ген кадуе фэрмэнт глутаматдэкарбаксілазу, падвышаная актыўнасьць якой вядзе да 6-разовага ўзмацненьня выпрацоўкі ГАМК (гама-амінамасьлянай кіслаты) у~мозгу. Выдзяленьне лішку ГАМК у~гіпаталамусе вядзе да павышэньня ўзроўню нэўрапэптыду Y у~аркуатным ядры. А~гэта прыводзіць да моцнага голаду. Што рабіць? Заблякаваць залішнюю актыўнасьць нэўрапэптыду Y можна праз страўнікава-кішачны падыход. Там ёсьць адмысловыя L-клеткі, якія выпрацоўваюць пэптыд YY, што прыгнятае апэтыт. Галоўнымі стымулятарамі пэптыду YY зьяўляюцца тлушчы і жоўцевыя кіслоты. А~яшчэ~--- харчовыя валокны, а~таксама аэробныя фізычныя практыкаваньні.
+\paragraph{GAD2\index{ген!GAD2}.}
+Гэты ген стымулюе пераяданьне, ён зьвязаны з~кампульсіўнымі парушэньнямі харчовых паводзінаў. Ген кадуе фэрмэнт глутаматдэкарбаксілазу\index{глутаматдэкарбаксілаза}, падвышаная актыўнасьць якой вядзе да 6-разовага ўзмацненьня выпрацоўкі ГАМК (гама-амінамасьлянай кіслаты) у~мозгу. Выдзяленьне лішку ГАМК у~гіпаталямусе\index{гіпаталямус} вядзе да павышэньня ўзроўню нэўрапэптыду Y у~аркуатным ядры. А~гэта прыводзіць да моцнага голаду. Што рабіць? Заблякаваць залішнюю актыўнасьць нэўрапэптыду Y можна праз страўнікава-кішачны падыход. Там ёсьць адмысловыя L-клеткі, якія выпрацоўваюць пэптыд YY, што прыгнятае апэтыт. Галоўнымі стымулятарамі пэптыду YY зьяўляюцца тлушчы і жоўцевыя кіслоты. А~яшчэ~--- харчовыя валокны, а~таксама аэробныя фізычныя практыкаваньні.
 
 \paragraph{Taq1A1.}
-Гэты ген зьвязаны з~больш нізкай шчыльнасьцю дафамінавых D2 рэцэптараў у~галаўным мозгу. Яго носьбіты атрымліваюць прыкметна менш задавальненьня ад жыцьця і ад ежы. Людзям зь нізкай шчыльнасьцю дафамінавых рэцэптараў для атрыманьня задавальненьня трэба зьесьці нашмат больш, што яны і робяць. Як толькі жыцьцё такіх людзей становіцца бязрадасным, яны пачынаюць вельмі шмат есьці, пераядаць для кампэнсацыі ўзроўню дафаміну. Што рабіць? Трэба больш радасьці, а~ня ежы. Ёсьць і некалярыйныя спосабы атрыманьня задавальненьня ад ежы, і ня толькі ад яе. Гэта і прыгожы абрус, прыборы, сэрвіроўка, падача, размовы, час ежы, смакаваньне і ўсьвядомленая ежа. Таксама важна дадаць больш задавальненьня зь іншых сфэр жыцьця. Гэта падыме ўзровень дафаміну, і пераяданьне аслабне.
+Гэты ген зьвязаны з~больш нізкай шчыльнасьцю дафамінавых D2 рэцэптараў у~галаўным мозгу. Яго носьбіты атрымліваюць прыкметна менш задавальненьня ад жыцьця і ад ежы. Людзям зь нізкай шчыльнасьцю дафамінавых рэцэптараў для атрыманьня задавальненьня трэба зьесьці нашмат больш, што яны і робяць. Як толькі жыцьцё такіх людзей становіцца бязрадасным, яны пачынаюць вельмі шмат есьці, пераядаць для кампэнсацыі ўзроўню дафаміну\index{дафамін}. Што рабіць? Трэба больш радасьці, а~ня ежы. Ёсьць і некалярыйныя спосабы атрыманьня задавальненьня ад ежы, і ня толькі ад яе. Гэта і прыгожы абрус, прыборы, сэрвіроўка, падача, размовы, час ежы, смакаваньне і ўсьвядомленая ежа. Таксама важна дадаць больш задавальненьня зь іншых сфэр жыцьця. Гэта падыме ўзровень дафаміну\index{дафамін}, і пераяданьне аслабне.
 
-\paragraph{FTO.}
-Гэты ген служыць актыватарам выдзяленьня гармону голаду грэліну. У~носьбітаў яго «тлустых» вэрсыяў узровень грэліну ня падае пасьля ежы, як павінна быць, а~застаецца высокім. Таму такія людзі пераядаюць і аддаюць перавагу высокатлушчавыя прадукты. Узровень грэліну павялічваецца пры стрэсе, таму ў~адказ на яго носьбіты зьядаюць шмат лішняга. Што рабіць? Грэлін~--- гэта ня так кепска, як здаецца, ён, напрыклад, зьніжае рызыку дэпрэсіі і стымулюе нэўрагенэз. Для носьбітаў AA вэрсыяў FTO важна прытрымлівацца рэжыму харчаваньня, не перакусваць, не прапускаць прыёмы ежы і не рабіць харчовых разгрузак на тле павышанага стрэсу. Кантроль стрэсу і рэжыму харчаваньня дазволіць эфэктыўна даць рады з~кампульсіўным пераяданьнем у~гэтым выпадку.
+\paragraph{FTO\index{ген!FTO}.}
+Гэты ген служыць актыватарам выдзяленьня гармону голаду грэліну. У~носьбітаў яго «тлустых» вэрсыяў узровень грэліну ня падае пасьля ежы, як павінна быць, а~застаецца высокім. Таму такія людзі пераядаюць і аддаюць перавагу высокатлушчавыя прадукты. Узровень грэліну павялічваецца пры стрэсе, таму ў~адказ на яго носьбіты зьядаюць шмат лішняга. Што рабіць? Грэлін~--- гэта ня так кепска, як здаецца, ён, напрыклад, зьніжае рызыку дэпрэсіі і стымулюе нэўрагенэз\index{нэўрагенэз}. Для носьбітаў AA вэрсыяў FTO\index{ген!FTO} важна прытрымлівацца рэжыму харчаваньня, не перакусваць, не прапускаць прыёмы ежы і не рабіць харчовых разгрузак на тле павышанага стрэсу. Кантроль стрэсу і рэжыму харчаваньня дазволіць эфэктыўна даць рады з~кампульсіўным пераяданьнем у~гэтым выпадку.
 
 \paragraph{Генэтыка смаку.}
 У розных людзей генэтычна розны парог адрозьніваньня смакаў, таму сапраўды «дзеду міла, а~ўнуку гніла». Памятайце, што ваша харчаваньне павінна прыносіць задавальненьне, таму з~шырокага спэктру прадуктаў важна выбіраць, кіруючыся сваім смакам!
@@ -49,7 +49,7 @@
 
 \tipbox{Сярод усіх магчымых харчовых інструмэнтаў варта адшукаць тыя 20\,\%, якія дадуць вам 80\,\% выніку. Напрыклад, падбярыце, што мацней за ўсё вас насычае. Для гэтага адзначайце ў~харчовым дзёньніку, колькі гадзінаў трымалася сытасьць пасьля тых ці іншых прадуктаў і наколькі ў~балах яна была выяўленая. Гэтак жа можна вывучыць і свой голад: ацэньвайце, калі ён узьнікае і якой інтэнсіўнасьці.}
 
-\paragraph{Элімінацыйная дыета.}
+\paragraph{Элімінацыйная дыета\index{дыета!элімінацыйная}.}
 Вось спосаб сапраўды выявіць прадукты, якія выклікаюць непераноснасьць. Для гэтага спачатку вы выключаеце большасьць падазроных прадуктаў на працягу тыдня, а~затым кожныя 2--3 дні дадаяце па адным падазроным прадукце, пры гэтым ведучы дзёньнік харчаваньня і адсочваючы сымптомы.
 
 \paragraph{Глікемічны кантроль.}
@@ -62,18 +62,18 @@
 Шмат кампаніяў робіць 16S рРНК~--- мэтагеномнае сэквэнаваньне мікрабіёмы, гэта найлепшы тэст. Ён дазваляе сапраўды вызначыць склад і суадносіны розных відаў бактэрыяў, ацаніць разнастайнасьць мікрабіёмы, убачыць, якіх штамаў вам бракуе, што трэба зьмяніць у~рацыёне для паляпшэньня стану мікрафлёры. Робячы гэты тэст паўторна, можна напраўду ацаніць, як вашыя харчовыя зьмены паўплывалі на мікрабіем.
 
 \paragraph{Харчовая непераноснасьць.}
-У розных людзей шэраг прадуктаў выклікае паталягічныя рэакцыі, якія зьнікаюць пры выключэньні пэўных прадуктаў. Праявы бываюць самыя розныя: ад цяжару ў~жываце, высыпаньняў на скуры, сьлёзацёку да ацёку Квінке, які пагражае жыцьцю. У~цэлым да 20\,\% людзей лічыць, што ў~іх ёсьць алергія на пэўныя прадукты. Але ў~рэальнасьці гэтая лічба нашмат меншая. У~структуры харчовай непераноснасьці вылучаюць розныя станы, якія патрабуюць розных падыходаў.
+У розных людзей шэраг прадуктаў выклікае паталягічныя рэакцыі, якія зьнікаюць пры выключэньні пэўных прадуктаў. Праявы бываюць самыя розныя: ад цяжару ў~жываце, высыпаньняў на скуры, сьлёзацёку да ацёку Квінке\index{Квінке ацёк}, які пагражае жыцьцю. У~цэлым да 20\,\% людзей лічыць, што ў~іх ёсьць алергія на пэўныя прадукты. Але ў~рэальнасьці гэтая лічба нашмат меншая. У~структуры харчовай непераноснасьці вылучаюць розныя станы, якія патрабуюць розных падыходаў.
 
-Асобна мы можам гаварыць пра сапраўдную харчовую алергію, фэрмэнтапатыях, псэўдаалергіях (выдзяленьне гістаміну неімунным мэханізмам), парушэньні засваеньня асобных прадуктаў пры пэўных захворваньнях страўнікава-кішачнага тракту (прычына непераноснасьці~--- хвароба, яе лячэньне ліквідуе непераноснасьць), вылучаюць таксама і псыхагенныя рэакцыі на ежу, калі людзі самі або пад уздзеяньнем зьнешняга аўтарытэту могуць намаўляць сябе, што ім блага ад пэўных прадуктаў.
+Асобна мы можам гаварыць пра сапраўдную харчовую алергію\index{алергія сапраўдная}, фэрмэнтапатыях\index{фэрмэнтапатыя}, псэўдаалергіях\index{псэўдаалергія} (выдзяленьне гістаміну неімунным мэханізмам), парушэньні засваеньня асобных прадуктаў пры пэўных захворваньнях страўнікава-кішачнага тракту (прычына непераноснасьці~--- хвароба, яе лячэньне ліквідуе непераноснасьць), вылучаюць таксама і псыхагенныя рэакцыі на ежу, калі людзі самі або пад уздзеяньнем зьнешняга аўтарытэту могуць намаўляць сябе, што ім блага ад пэўных прадуктаў.
 
-\paragraph{Сапраўдная алергія.}
-Сапраўдная алергія выклікаецца нават мінімальнай колькасьцю алергену, ёсьць станоўчы скурны тэст, як правіла падвышаны ўзровень IgE ў~крыві. Варта адзначыць, што існуе і ўтоеная алергія, калі імунаглабуліны IgE ў~крыві да алергену павышаныя, але рэакцыі пры гэтым няма. Зьвярніце ўвагу, што папулярныя ў~нашы дні тэсты на вызначэньне IgG для фармаваньня сьпісу забароненых прадуктаў ненавуковыя і прыводзяць адно да звужэньня разнастайнасьці рацыёну. IgG утвараецца пры спажываньні ежы і не зьвязаны зь непераноснасьцю. Асноўныя прадукты~--- прычыны алергіі (вялікая васьмёрка): каровіна малако, яйкі (часьцей за ўсё курыныя), рыба (бывае асобна на прэснаводную і марскую), пшаніца, арахіс, гарэхі, соя, ракападобныя. Многія з~гэтых прадуктаў уваходзяць у~склад рознай гатовай ежы (соевы парашок, сухое малако і да т.~п.). У~выпадку сапраўднай алергіі неабходнае поўнае выключэньне прадукту з~рацыёну.
+\paragraph{Сапраўдная алергія\index{алергія сапраўдная}.}
+Сапраўдная алергія\index{алергія сапраўдная} выклікаецца нават мінімальнай колькасьцю алергену, ёсьць станоўчы скурны тэст, як правіла падвышаны ўзровень IgE ў~крыві. Варта адзначыць, што існуе і ўтоеная алергія\index{алергія ўтоеная}, калі імунаглабуліны IgE ў~крыві да алергену павышаныя, але рэакцыі пры гэтым няма. Зьвярніце ўвагу, што папулярныя ў~нашы дні тэсты на вызначэньне IgG для фармаваньня сьпісу забароненых прадуктаў ненавуковыя і прыводзяць адно да звужэньня разнастайнасьці рацыёну. IgG утвараецца пры спажываньні ежы і не зьвязаны зь непераноснасьцю. Асноўныя прадукты~--- прычыны алергіі (вялікая васьмёрка): каровіна малако, яйкі (часьцей за ўсё курыныя), рыба (бывае асобна на прэснаводную і марскую), пшаніца, арахіс, гарэхі, соя, ракападобныя. Многія з~гэтых прадуктаў уваходзяць у~склад рознай гатовай ежы (соевы парашок, сухое малако і да т.~п.). У~выпадку сапраўднай алергіі неабходнае поўнае выключэньне прадукту з~рацыёну.
 
-\paragraph{Псэўдаалергія (фальшывая алергія).}
-Пры фальшывай алергіі шэраг рэчываў выклікае выкід гістаміну (і рэакцыю, падобную да алергічнай), але без наўпроставага ўдзелу імунных клетак. Пры фальшывай алергіі колькасьць зьедзенага прадукту павінна быць вялікая, пры гэтым ёсьць прамая залежнасьць паміж выяўленасьцю сымптомаў і колькасьцю зьедзенага, скурныя тэсты пры гэтым адмоўныя, а~ўзровень IgE ў~крыві не падвышаны. Пры фальшывай алергіі дзейнічаюць так званыя рэчывы~--- лібэратары гістаміну. Часьцей за ўсё гэта рыба, яйкі, чакаляда, арэхі. Часам рэакцыі няма на сьвежыя прадукты, а~на тыя, што доўга захоўваліся,~--- ёсьць. Гэта зьвязана з~павелічэньнем узроўню гістаміну пры захоўваньні. Часта прычынай псэўдаалергіі зьяўляюцца ня самі прадукты, а~некаторыя харчовыя дабаўкі. Пры фальшывай алергіі эфэктыўная нізкагістамінавая дыета.
+\paragraph{Псэўдаалергія (фальшывая алергія)\index{псэўдаалергія}.}
+Пры фальшывай алергіі шэраг рэчываў выклікае выкід гістаміну (і рэакцыю, падобную да алергічнай), але без наўпроставага ўдзелу імунных клетак. Пры фальшывай алергіі колькасьць зьедзенага прадукту павінна быць вялікая, пры гэтым ёсьць прамая залежнасьць паміж выяўленасьцю сымптомаў і колькасьцю зьедзенага, скурныя тэсты пры гэтым адмоўныя, а~ўзровень IgE ў~крыві не падвышаны. Пры фальшывай алергіі дзейнічаюць так званыя рэчывы~--- лібэратары гістаміну. Часьцей за ўсё гэта рыба, яйкі, чакаляда, арэхі. Часам рэакцыі няма на сьвежыя прадукты, а~на тыя, што доўга захоўваліся,~--- ёсьць. Гэта зьвязана з~павелічэньнем узроўню гістаміну пры захоўваньні. Часта прычынай псэўдаалергіі зьяўляюцца ня самі прадукты, а~некаторыя харчовыя дабаўкі. Пры фальшывай алергіі эфэктыўная нізкагістамінавая дыета\index{дыета!нізкагістамінавая}.
 
-\paragraph{Фэрмэнтапатыя.}
-У кожнага чалавека розная актыўнасьць фэрмэнтаў, якія расшчапляюць ежу, так званая «біяхімічная індывідуальнасьць». Бывае прыроджаны недахоп фэрмэнтаў, тады чалавек ня можа засвойваць ежу. Бывае непераноснасьць ляктозы (тады трэба выключыць малочныя цэльныя прадукты), трэгалозы (выключыць грыбы), глютэну (выключыць збажыну і да т.~п.). Часта фэрмэнтапатыі разьвіваюцца на тле захворваньняў страўнікава-кішачнага тракту.
+\paragraph{Фэрмэнтапатыя\index{фэрмэнтапатыя}.}
+У кожнага чалавека розная актыўнасьць фэрмэнтаў, якія расшчапляюць ежу, так званая «біяхімічная індывідуальнасьць». Бывае прыроджаны недахоп фэрмэнтаў, тады чалавек ня можа засвойваць ежу. Бывае непераноснасьць ляктозы\index{ляктоза} (тады трэба выключыць малочныя цэльныя прадукты), трэгалозы (выключыць грыбы), глютэну\index{глютэн} (выключыць збажыну і да т.~п.). Часта фэрмэнтапатыі\index{фэрмэнтапатыя} разьвіваюцца на тле захворваньняў страўнікава-кішачнага тракту.
 
 \tipbox{Асноўныя прадукты~--- прычыны алергіі (вялікая васьмёрка): каровіна малако, яйкі (часьцей за ўсё курыныя), рыба (бывае асобна на прэснаводную і марскую), пшаніца, арахіс, гарэхі, соя, ракападобныя.}
 
@@ -86,18 +86,18 @@
 Зьнізіць рызыку алергічных і аўтаімунных захворваньняў, асабліва ў~дзяцей, можна ўлічваючы чатыры важныя чыньнікі: дастатковы ўзровень вітаміну D і знаходжаньне на сонцы, дастатковы ўзровень мікробнай нагрузкі (кантакт з~прыродай, бываць на ферме, кантакт зь іншымі дзецьмі і да т.~п.), нізкая колькасьць солі ў~дыеце, выкарыстаньне ашчаднага харчаваньня нават для дзяцей, якія яшчэ растуць, бо пастаянная стымуляцыя mTORС павялічвае рызыку алергічных захворваньняў.
 
 \paragraph{Структура цела.}
-Многія людзі пры зьменах харчаваньня крытэрам эфэктыўнасьці лічаць вагу цела. Але адна і тая ж вага можа выглядаць зусім па-рознаму, таму правільней ацэньваць эфэктыўнасьць сваіх дзеяньняў на аснове вымярэньня структуры цела. Структура цела~--- гэта суадносіны і разьмеркаваньне тлушчавай і цяглічнай тканкі. Так, падскурны тлушч ня вельмі небясьпечны, а~самую сур'ёзную пагрозу ўяўляюць менавіта ўнутраны тлушч (на такіх органах, як печань, сэрца, кішачнік, падстраўніца) і страта цяглічнай масы (саркапэнія). Унутраны (эктапічны) тлушч выдзяляе адмысловыя рэчывы, якія правакуюць запаленьне, парушаюць гарманальны балянс. Аб'ектыўнае вымярэньне вісцэральнага тлушчу~--- гэта вельмі важна. Бо ні ваша вага, ні адсотак тлушчу ня важныя так, як колькасьць вісцэральнага тлушчу. Чым яго больш, тым вышэйшая рызыка захворваньняў. Чалавек можа быць худым і пры гэтым мець высокі ўзровень унутранага тлушчу і, адпаведна, высокую рызыку захворваньняў.
+Многія людзі пры зьменах харчаваньня крытэрам эфэктыўнасьці лічаць вагу цела. Але адна і тая ж вага можа выглядаць зусім па-рознаму, таму правільней ацэньваць эфэктыўнасьць сваіх дзеяньняў на аснове вымярэньня структуры цела. Структура цела~--- гэта суадносіны і разьмеркаваньне тлушчавай і цяглічнай тканкі. Так, падскурны тлушч ня вельмі небясьпечны, а~самую сур'ёзную пагрозу ўяўляюць менавіта ўнутраны тлушч (на такіх органах, як печань, сэрца, кішачнік, падстраўніца) і страта цяглічнай масы (саркапэнія\index{саркапэнія}). Унутраны (эктапічны) тлушч выдзяляе адмысловыя рэчывы, якія правакуюць запаленьне, парушаюць гарманальны балянс. Аб'ектыўнае вымярэньне вісцэральнага тлушчу\index{вісцэральны тлушч}~--- гэта вельмі важна. Бо ні ваша вага, ні адсотак тлушчу ня важныя так, як колькасьць вісцэральнага тлушчу\index{вісцэральны тлушч}. Чым яго больш, тым вышэйшая рызыка захворваньняў. Чалавек можа быць худым і пры гэтым мець высокі ўзровень унутранага тлушчу і, адпаведна, высокую рызыку захворваньняў.
 
-\tipbox{Структура цела~--- гэта суадносіны і разьмеркаваньне тлушчавай і цяглічнай тканкі. Падскурны тлушч ня вельмі небясьпечны, а~самую сур'ёзную пагрозу ўяўляюць менавіта ўнутраны тлушч (на такіх органах, як печань, сэрца, кішачнік, падстраўніца) і страта цяглічнай масы (саркапэнія). Унутраны (эктапічны) тлушч выдзяляе адмысловыя рэчывы, якія правакуюць запаленьне, парушаюць гарманальны балянс. Чалавек можа быць худым і пры гэтым мець высокі ўзровень унутранага тлушчу і, адпаведна, высокую рызыку захворваньняў.}
+\tipbox{Структура цела~--- гэта суадносіны і разьмеркаваньне тлушчавай і цяглічнай тканкі. Падскурны тлушч ня вельмі небясьпечны, а~самую сур'ёзную пагрозу ўяўляюць менавіта ўнутраны тлушч (на такіх органах, як печань, сэрца, кішачнік, падстраўніца) і страта цяглічнай масы (саркапэнія\index{саркапэнія}). Унутраны (эктапічны) тлушч выдзяляе адмысловыя рэчывы, якія правакуюць запаленьне, парушаюць гарманальны балянс. Чалавек можа быць худым і пры гэтым мець высокі ўзровень унутранага тлушчу і, адпаведна, высокую рызыку захворваньняў.}
 
-\paragraph{Антрапамэтрыя.}
+\paragraph{Антрапамэтрыя\index{антрапамэтрыя}.}
 Гэта замеры стужкай, якія паказваюць асаблівасьці разьмеркаваньня тлушчу ў~целе і рызыку захворваньняў. Часьцей за ўсё выкарыстоўваюцца наступныя паказчыкі: абхоп таліі ў~жанчынаў складае да 75 (80) сантымэтраў, ад 80 да 88 сантыметраў~--- перавышэньне нармальнай вагі, звыш 88~--- атлусьценьне, у~мужчынаў нармальныя парамэтры складаюць да 94 сантыметраў. Суадносіны талія-сьцёгны ў~норме менш за 0,85 для жанчынаў і менш за 1,0 для мужчынаў (аптымальна 0,7 (0,65--0,78) для жанчынаў і ня больш за 0,9 для мужчынаў), акружнасьць шыі ў~самым вузкім месцы ў~жанчынаў ня больш за 34,5\,см (больш строгая норма~--- 32\,см), у~мужчынаў акружнасьць шыі ня больш за 38,8\,см (больш строгая норма~--- 35,5~см). Суадносіны талія-сьцягно~--- менш за 1,5 для жанчынаў і менш за 1,7 для мужчынаў, ABSI~--- гэта комплексны індэкс формы цела, які ўлічвае суадносіны паміж аб'ёмам таліі, ростам і вагой ды разлічвае індывідуальную рызыку.
 
 \paragraph{Цяглічная маса.}
 З узростам зьніжэньне цяглічнай масы толькі ўзмацняецца. Захаваньне дастатковай колькасьці цягліцаў зьяўляецца ўмовай захаваньня мэтабалічнага здароўя. Памятайце, што зьніжэньне сілы~--- гэта страта цягліцаў. Страту цягліцаў цяжка заўважыць, бо яны замяшчаюцца тлушчам, і аб'ём канцавіны можа заставацца ранейшым. Важна захоўваць высокі ўзровень фізычнай актыўнасьці ў~любым узросьце.
 
-\paragraph{Вымярэньне вісцэральнага тлушчу.}
-Самыя надзейныя вынікі дае DEXA-сканаваньне цела і тамаграфія. Але можна ацаніць узровень вісцэральнага тлушчу і па УГД. Спачатку робім дасьледаваньне печані: лінейныя памеры, прыкметы тлушчавага гепатозу, стан жоўцевага пухіра. Затым вымяраем таўшчыню эпікардыяльнага тлушчу (рызыкі растуць пры лічбе больш за 5 мм), колькасьць якога карэлюе з~узроўнем вісцэральнага тлушчу, і таўшчыню пэрыкардыяльнага тлушчу (сардэчная рызыка). Пасьля чаго вымяраем адлегласьць паміж белай лініяй жывата і пярэдняй сьценкай аорты (больш за 100 мм~--- вісцэральнае атлусьценьне). Дадаткова можна разлічыць індэкс тлушчу брушной сьценкі (ІТБС)~--- гэта стасунак максымальнай таўшчыні перадбрушнога тлушчу да мінімуму таўшчыні падскурнага тлушчу. Гэтыя паказьнікі проста вымяраць у~дынаміцы (лепей на адным апараце ў~аднаго спэцыяліста).
+\paragraph{Вымярэньне вісцэральнага тлушчу\index{вісцэральны тлушч}.}
+Самыя надзейныя вынікі дае DEXA-сканаваньне цела і тамаграфія. Але можна ацаніць узровень вісцэральнага тлушчу і па УГД. Спачатку робім дасьледаваньне печані: лінейныя памеры, прыкметы тлушчавага гепатозу, стан жоўцевага пухіра. Затым вымяраем таўшчыню эпікардыяльнага тлушчу (рызыкі растуць пры лічбе больш за 5 мм), колькасьць якога карэлюе з~узроўнем вісцэральнага тлушчу\index{вісцэральны тлушч}, і таўшчыню пэрыкардыяльнага тлушчу (сардэчная рызыка). Пасьля чаго вымяраем адлегласьць паміж белай лініяй жывата і пярэдняй сьценкай аорты (больш за 100 мм~--- вісцэральнае атлусьценьне). Дадаткова можна разлічыць індэкс тлушчу брушной сьценкі (ІТБС)\index{індэкс тлушчу брушной сьценкі (ІТБС)}~--- гэта стасунак максымальнай таўшчыні перадбрушнога тлушчу да мінімуму таўшчыні падскурнага тлушчу. Гэтыя паказьнікі проста вымяраць у~дынаміцы (лепей на адным апараце ў~аднаго спэцыяліста).
 
 \tipbox{Зьнізіць рызыку алергічных і аўтаімунных захворваньняў можна ўлічваючы чатыры важныя чыньнікі: дастатковы ўзровень вітаміну D, мікробная нагрузка, зьніжэньне колькасьці солі ў~дыеце, умеранае харчаваньне.}
 
@@ -105,7 +105,7 @@
 Здаровыя зубы і здаровая ротавая поласьць~--- гэта найважнейшыя ўмовы добрага страваваньня. Дбайна чысьціце зубы, палашчыце рот пасьля кожнага прыёму ежы, выкарыстоўвайце ірыгатары, зубныя ніткі, своечасова выдаляйце зубны камень. Больш жуйце для здароўя зубоў.
 
 \paragraph{Мікрафлёра рота.}
-Мікрафлёра ротавай поласьці важная для нашага здароўя. Пазьбягайце лішку мучнога (глютэн прыляпляе часьціцы крухмалу да зубоў), бактэрыцыдных апалосквальнікаў для рота, выкарыстоўвайце аральныя прабіётыкі (S. Salivarius і інш.).
+Мікрафлёра ротавай поласьці важная для нашага здароўя. Пазьбягайце лішку мучнога (глютэн\index{глютэн} прыляпляе часьціцы крухмалу да зубоў), бактэрыцыдных апалосквальнікаў для рота, выкарыстоўвайце аральныя прабіётыкі\index{прабіётыкі} (S. Salivarius і інш.).
 
 \paragraph{Індывідуальная праграма абсьледаваньня.}
-Таксама на ваш стан уплывае і здароўе. Рэгулярна правярайце яго, здавайце неабходныя, а~лепей~--- пашыраныя дыягнастычныя панэлі. Прыклад падобнай лябараторнай панэлі: глюкоза, глікаваны гемаглабін, інсулін, індэкс інсулінарэзыстэнтнасьці, Алат, Асат, крэатынін, мачавая кіслата, гомацыстэін, ультраадчувальны тэст на С-рэактыўны бялок, гармоны шчытападобнай залозы (ТТГ, св. Т3), палавыя гармоны, ІФР-1, гармон росту, цынк, магній, жалеза, фэрытын, вітамін D, вітамін В12. Да іх можна дадаць інструмэнтальныя тэсты, напрыклад УГД сонных артэрыяў з~вызначэньнем таўшчыні комплексу інтым-мэдыя. Пры неабходнасьці можна дапаўняць іншымі абсьледаваньнямі, у~залежнасьці ад узросту і індывідуальнай рызыкі (сямейная гісторыя захворваньняў, генэтычныя рызыкі шэрагу захворваньняў і дэфіцытаў і інш.): анкамаркеры, каланаскапія, фібрагастрадуадэнаскапія і іншыя паказьнікі.
+Таксама на ваш стан уплывае і здароўе. Рэгулярна правярайце яго, здавайце неабходныя, а~лепей~--- пашыраныя дыягнастычныя панэлі. Прыклад падобнай лябараторнай панэлі: глюкоза, глікаваны гемаглабін, інсулін, індэкс інсулінарэзыстэнтнасьці\index{інсулінарэзыстэнтнасьць}, Алат, Асат, крэатынін, мачавая кіслата, гомацыстэін, ультраадчувальны тэст на С-рэактыўны бялок, гармоны шчытападобнай залозы (ТТГ, св. Т3), палавыя гармоны, ІФР-1, гармон росту, цынк, магній, жалеза, фэрытын\index{фэрытын}, вітамін D, вітамін В12. Да іх можна дадаць інструмэнтальныя тэсты, напрыклад УГД сонных артэрыяў з~вызначэньнем таўшчыні комплексу інтым-мэдыя. Пры неабходнасьці можна дапаўняць іншымі абсьледаваньнямі, у~залежнасьці ад узросту і індывідуальнай рызыкі (сямейная гісторыя захворваньняў, генэтычныя рызыкі шэрагу захворваньняў і дэфіцытаў і інш.): анкамаркеры, каланаскапія, фібрагастрадуадэнаскапія і іншыя паказьнікі.
